The names... the names... THE NAMES!

--- a/localisation/AKM_l_english.yml
+++ b/localisation/AKM_l_english.yml
@@ -1,79 +1,60 @@
 ﻿l_english:
 
  #characters
- #political leaders
- AKM_conservatism_leader:0 "NAME"
- AKM_liberalism_leader:0 "NAME"
- AKM_socialism_leader:0 "NAME"
- AKM_marxism_leader:0 "NAME"
- AKM_leninism_leader:0 "NAME"
- AKM_stalinism_leader:0 "NAME"
- AKM_anti_revisionism_leader:0 "NAME"
- AKM_anarchist_communism_leader:0 "NAME"
- AKM_nazism_leader:0 "NAME"
- AKM_gen_nazism_leader:0 "NAME"
- AKM_generic_fascism_leader:0 "NAME"
- AKM_falangism_leader:0 "NAME"
- AKM_rexism_leader:0 "NAME"
- AKM_despotism_leader:0 "NAME"
- AKM_oligarchism_leader:0 "NAME"
- AKM_anarchism_leader:0 "NAME"
- AKM_moderatism_leader:0 "NAME"
- AKM_centrism_leader:0 "NAME"
  #military leaders
- AKM_corps_commander_1:0 "NAME"
- AKM_corps_commander_2:0 "NAME"
- AKM_corps_commander_3:0 "NAME"
- AKM_corps_commander_4:0 "NAME"
- AKM_naval_leader_1:0 "NAME"
- AKM_naval_leader_2:0 "NAME"
- AKM_naval_leader_3:0 "NAME"
- AKM_naval_leader_4:0 "NAME"
- AKM_naval_leader_5:0 "NAME"
+ AKM_corps_commander_1:0 "Nawangbu Amsasaga"
+ AKM_corps_commander_2:0 "Iloron N'lava"
+ AKM_corps_commander_3:0 "Okam Ligikav"
+ AKM_corps_commander_4:0 "Ubusun Bngteshu"
+ AKM_naval_leader_1:0 "Osokko Ullimbinti"
+ AKM_naval_leader_2:0 "Gnubus Truvilli"
+ AKM_naval_leader_3:0 "Azavaf Esimabap"
+ AKM_naval_leader_4:0 "Wuungash Jumisku"
+ AKM_naval_leader_5:0 "Lasakilu Elimpa"
  #advisors
  AKM_anti_communist_crusader:0 "NAME"
  AKM_armaments_organizer:0 "NAME"
- AKM_backroom_backstabber:0 "NAME"
+ AKM_backroom_backstabber:0 "Manggake Geplib"
  AKM_captain_of_industry:0 "NAME"
- AKM_communist_revolutionary:0 "NAME"
+ AKM_communist_revolutionary:0 "Tampaba Busi"
  AKM_compassionate_gentleman:0 "NAME"
- AKM_democratic_reformer:0 "NAME"
+ AKM_democratic_reformer:0 "Limipi Belupippi"
  AKM_economist:0 "NAME"
  AKM_editor:0 "NAME"
- AKM_fascist_demagogue:0 "NAME"
+ AKM_fascist_demagogue:0 "N'gaka Alswuun"
  AKM_financial_expert:0 "NAME"
  AKM_head_of_intelligence:0 "NAME"
  AKM_ideological_crusader:0 "NAME"
- AKM_popular_figurehead:0 "NAME"
- AKM_prince_of_terror:0 "NAME"
+ AKM_popular_figurehead:0 "Yepabin Resugab"
+ AKM_prince_of_terror:0 "Ilimanap Huruungan"
  AKM_silent_workhorse:0 "NAME"
  AKM_smooth_talking_charmer:0 "NAME"
  AKM_war_industrialist:0 "NAME"
  #theorists
- AKM_military_theorist:0 "NAME"
- AKM_air_warfare_theorist:0 "NAME"
+ AKM_military_theorist:0 "Antanaf Sefaka"
+ AKM_air_warfare_theorist:0 "Febi Bnguura"
  AKM_naval_theorist:0 "NAME"
  AKM_naval_aviation_pioneer:0 "NAME"
  AKM_victory_through_airpower:0 "NAME"
  AKM_nuclear_scientist:0 "NAME"
- AKM_rocket_scientist:0 "NAME"
+ AKM_rocket_scientist:0 "Ngake Nashkali"
  #military chiefs
- AKM_army_chief_defensive_2:0 "NAME"
+ AKM_army_chief_defensive_2:0 "Lanati Jekingaskilo"
  AKM_army_chief_drill_2:0 "NAME"
  AKM_army_chief_maneuver_2:0 "NAME"
- AKM_army_chief_morale_2:0 "NAME"
+ AKM_army_chief_morale_2:0 "Tupuke Jekis"
  AKM_army_chief_offensive_2:0 "NAME"
- AKM_army_chief_organizational_1:0 "NAME"
- AKM_navy_chief_decisive_battle_2:0 "NAME"
+ AKM_army_chief_organizational_1:0 "Kinkasha Hilampak"
+ AKM_navy_chief_decisive_battle_2:0 "Untashka Simishanku"
  AKM_navy_chief_naval_aviation_2:0 "NAME"
- AKM_air_chief_ground_support_2:0 "NAME"
- AKM_air_chief_reform_2:0 "NAME"
- AKM_army_armAKMd_1:0 "NAME"
- AKM_army_entrenchment_1:0 "NAME"
- AKM_army_infantry_1:0 "NAME"
+ AKM_air_chief_ground_support_2:0 "Intuli Almanpaki"
+ AKM_air_chief_reform_2:0 "Hirutuung Weshtim"
+ AKM_army_armored_1:0 "NAME"
+ AKM_army_entrenchment_1:0 "Gapabik Yenngawuu"
+ AKM_army_infantry_1:0 "Askalu Wengasi"
  AKM_army_logistics_2:0 "NAME"
- AKM_air_bomber_interception_2:0 "NAME"
- AKM_air_close_air_support_2:0 "NAME"
- AKM_navy_screen_2:0 "NAME"
+ AKM_air_bomber_interception_2:0 "Newhin Letangke"
+ AKM_air_close_air_support_2:0 "Perimpil Ungurunga"
+ AKM_navy_screen_2:0 "Felibik Sankagat"
  AKM_navy_anti_submarine_1:0 "NAME"
- AKM_navy_naval_air_defense_2:0 "NAME"
+ AKM_navy_naval_air_defense_2:0 "Nurukalo Fatswinu"
