--- a/localisation/ANT_l_english.yml
+++ b/localisation/ANT_l_english.yml
@@ -1,25 +1,6 @@
 ﻿l_english:
 
  #characters
- #political leaders
- ANT_conservatism_leader:0 "NAME"
- ANT_liberalism_leader:0 "NAME"
- ANT_socialism_leader:0 "NAME"
- ANT_marxism_leader:0 "NAME"
- ANT_leninism_leader:0 "NAME"
- ANT_stalinism_leader:0 "NAME"
- ANT_anti_revisionism_leader:0 "NAME"
- ANT_anarchist_communism_leader:0 "NAME"
- ANT_nazism_leader:0 "NAME"
- ANT_gen_nazism_leader:0 "NAME"
- ANT_generic_fascism_leader:0 "NAME"
- ANT_falangism_leader:0 "NAME"
- ANT_rexism_leader:0 "NAME"
- ANT_despotism_leader:0 "NAME"
- ANT_oligarchism_leader:0 "NAME"
- ANT_anarchism_leader:0 "NAME"
- ANT_moderatism_leader:0 "NAME"
- ANT_centrism_leader:0 "NAME"
  #military leaders
  ANT_corps_commander_1:0 "NAME"
  ANT_corps_commander_2:0 "NAME"
@@ -31,49 +12,49 @@
  ANT_naval_leader_4:0 "NAME"
  ANT_naval_leader_5:0 "NAME"
  #advisors
- ANT_anti_communist_crusader:0 "NAME"
+ ANT_anti_communist_crusader:0 "Samuel Amor"
  ANT_armaments_organizer:0 "NAME"
- ANT_backroom_backstabber:0 "NAME"
+ ANT_backroom_backstabber:0 "David D. Martinez"
  ANT_captain_of_industry:0 "NAME"
- ANT_communist_revolutionary:0 "NAME"
+ ANT_communist_revolutionary:0 "Noé Berenguer Velásquez"
  ANT_compassionate_gentleman:0 "NAME"
- ANT_democratic_reformer:0 "NAME"
- ANT_economist:0 "NAME"
+ ANT_democratic_reformer:0 "Maximiliano Javi Campana"
+ ANT_economist:0 "Saúl Jorge Suero"
  ANT_editor:0 "NAME"
- ANT_fascist_demagogue:0 "NAME"
+ ANT_fascist_demagogue:0 "Pánfilo Amando Quesada"
  ANT_financial_expert:0 "NAME"
- ANT_head_of_intelligence:0 "NAME"
+ ANT_head_of_intelligence:0 "Fabricio Toribio Simón"
  ANT_ideological_crusader:0 "NAME"
  ANT_popular_figurehead:0 "NAME"
- ANT_prince_of_terror:0 "NAME"
+ ANT_prince_of_terror:0 "Tulio Marcial Hidalgo"
  ANT_silent_workhorse:0 "NAME"
- ANT_smooth_talking_charmer:0 "NAME"
+ ANT_smooth_talking_charmer:0 "Joaquín Chimo Quixada"
  ANT_war_industrialist:0 "NAME"
  #theorists
- ANT_military_theorist:0 "NAME"
- ANT_air_warfare_theorist:0 "NAME"
- ANT_naval_theorist:0 "NAME"
+ ANT_military_theorist:0 "Alcides Samuel Valencia"
+ ANT_air_warfare_theorist:0 "Filemón Hernán Coello"
+ ANT_naval_theorist:0 "Aurelio Bartolomeu Quesada"
  ANT_naval_aviation_pioneer:0 "NAME"
  ANT_victory_through_airpower:0 "NAME"
  ANT_nuclear_scientist:0 "NAME"
  ANT_rocket_scientist:0 "NAME"
  #military chiefs
- ANT_army_chief_defensive_2:0 "NAME"
+ ANT_army_chief_defensive_2:0 "Celso Fabián Castro"
  ANT_army_chief_drill_2:0 "NAME"
  ANT_army_chief_maneuver_2:0 "NAME"
  ANT_army_chief_morale_2:0 "NAME"
- ANT_army_chief_offensive_2:0 "NAME"
+ ANT_army_chief_offensive_2:0 "Héctor Arsenio Otero"
  ANT_army_chief_organizational_1:0 "NAME"
- ANT_navy_chief_decisive_battle_2:0 "NAME"
- ANT_navy_chief_naval_aviation_2:0 "NAME"
- ANT_air_chief_ground_support_2:0 "NAME"
- ANT_air_chief_reform_2:0 "NAME"
- ANT_army_armANTd_1:0 "NAME"
- ANT_army_entrenchment_1:0 "NAME"
- ANT_army_infantry_1:0 "NAME"
+ ANT_navy_chief_decisive_battle_2:0 "Anselmo Carlos Abascal"
+ ANT_navy_chief_naval_aviation_2:0 "Nicolau Mateo Escárcega"
+ ANT_air_chief_ground_support_2:0 "Antonio Edmundo López"
+ ANT_air_chief_reform_2:0 "Fabián Enric Arechavaleta"
+ ANT_army_armored_1:0 "NAME"
+ ANT_army_entrenchment_1:0 "Arístides Juliá Villalobos"
+ ANT_army_infantry_1:0 "Alonso Roberto Tapia"
  ANT_army_logistics_2:0 "NAME"
- ANT_air_bomber_interception_2:0 "NAME"
- ANT_air_close_air_support_2:0 "NAME"
- ANT_navy_screen_2:0 "NAME"
- ANT_navy_anti_submarine_1:0 "NAME"
+ ANT_air_bomber_interception_2:0 "Marciano Nando Belmonte"
+ ANT_air_close_air_support_2:0 "Nicodemo Yago"
+ ANT_navy_screen_2:0 "Cornelio Alcides Gaspar"
+ ANT_navy_anti_submarine_1:0 "Faustino Tomás Arriola"
  ANT_navy_naval_air_defense_2:0 "NAME"
