--- a/localisation/ARC_l_english.yml
+++ b/localisation/ARC_l_english.yml
@@ -1,79 +1,46 @@
 ﻿l_english:
 
- #characters
- #political leaders
- ARC_conservatism_leader:0 "NAME"
- ARC_liberalism_leader:0 "NAME"
- ARC_socialism_leader:0 "NAME"
- ARC_marxism_leader:0 "NAME"
- ARC_leninism_leader:0 "NAME"
- ARC_stalinism_leader:0 "NAME"
- ARC_anti_revisionism_leader:0 "NAME"
- ARC_anarchist_communism_leader:0 "NAME"
- ARC_nazism_leader:0 "NAME"
- ARC_gen_nazism_leader:0 "NAME"
- ARC_generic_fascism_leader:0 "NAME"
- ARC_falangism_leader:0 "NAME"
- ARC_rexism_leader:0 "NAME"
- ARC_despotism_leader:0 "NAME"
- ARC_oligarchism_leader:0 "NAME"
- ARC_anarchism_leader:0 "NAME"
- ARC_moderatism_leader:0 "NAME"
- ARC_centrism_leader:0 "NAME"
- #military leaders
- ARC_corps_commander_1:0 "NAME"
- ARC_corps_commander_2:0 "NAME"
- ARC_corps_commander_3:0 "NAME"
- ARC_corps_commander_4:0 "NAME"
- ARC_naval_leader_1:0 "NAME"
- ARC_naval_leader_2:0 "NAME"
- ARC_naval_leader_3:0 "NAME"
- ARC_naval_leader_4:0 "NAME"
- ARC_naval_leader_5:0 "NAME"
- #advisors
- ARC_anti_communist_crusader:0 "NAME"
- ARC_armaments_organizer:0 "NAME"
- ARC_backroom_backstabber:0 "NAME"
- ARC_captain_of_industry:0 "NAME"
- ARC_communist_revolutionary:0 "NAME"
- ARC_compassionate_gentleman:0 "NAME"
- ARC_democratic_reformer:0 "NAME"
- ARC_economist:0 "NAME"
- ARC_editor:0 "NAME"
- ARC_fascist_demagogue:0 "NAME"
- ARC_financial_expert:0 "NAME"
- ARC_head_of_intelligence:0 "NAME"
- ARC_ideological_crusader:0 "NAME"
- ARC_popular_figurehead:0 "NAME"
- ARC_prince_of_terror:0 "NAME"
- ARC_silent_workhorse:0 "NAME"
- ARC_smooth_talking_charmer:0 "NAME"
- ARC_war_industrialist:0 "NAME"
- #theorists
- ARC_military_theorist:0 "NAME"
- ARC_air_warfare_theorist:0 "NAME"
- ARC_naval_theorist:0 "NAME"
- ARC_naval_aviation_pioneer:0 "NAME"
- ARC_victory_through_airpower:0 "NAME"
- ARC_nuclear_scientist:0 "NAME"
- ARC_rocket_scientist:0 "NAME"
- #military chiefs
- ARC_army_chief_defensive_2:0 "NAME"
- ARC_army_chief_drill_2:0 "NAME"
- ARC_army_chief_maneuver_2:0 "NAME"
- ARC_army_chief_morale_2:0 "NAME"
- ARC_army_chief_offensive_2:0 "NAME"
- ARC_army_chief_organizational_1:0 "NAME"
- ARC_navy_chief_decisive_battle_2:0 "NAME"
- ARC_navy_chief_naval_aviation_2:0 "NAME"
- ARC_air_chief_ground_support_2:0 "NAME"
- ARC_air_chief_reform_2:0 "NAME"
- ARC_army_armARCd_1:0 "NAME"
- ARC_army_entrenchment_1:0 "NAME"
- ARC_army_infantry_1:0 "NAME"
- ARC_army_logistics_2:0 "NAME"
- ARC_air_bomber_interception_2:0 "NAME"
- ARC_air_close_air_support_2:0 "NAME"
- ARC_navy_screen_2:0 "NAME"
- ARC_navy_anti_submarine_1:0 "NAME"
- ARC_navy_naval_air_defense_2:0 "NAME"
+#characters
+#political leaders
+ ARC_conservatism_leader:0 "Albrico Licata"
+ ARC_stalinism_leader:0 "Michelangelo Venti"
+ ARC_falangism_leader:0 "Adone Ziccardi"
+ ARC_oligarchism_leader:0 "Luigi Corona"
+#military leaders
+ ARC_corps_commander_1:0 "Uberto Di Tomaso"
+ ARC_corps_commander_2:0 "Verecondo Montanaro"
+ ARC_corps_commander_3:0 "Agrippa Guardia"
+ ARC_corps_commander_4:0 "Marolo Domenico"
+ ARC_naval_leader_1:0 "Nazzareno Blancato"
+ ARC_naval_leader_2:0 "Pacomio Tuminello"
+ ARC_naval_leader_3:0 "Arnoldo Saldutti"
+ ARC_naval_leader_4:0 "Solocone Landolfi"
+ ARC_naval_leader_5:0 "Colmanno Marinaccio"
+#advisors
+ ARC_anti_communist_crusader:0 "Vinebaldo Cardillo"
+ ARC_communist_revolutionary:0 "Dione Colasuonno"
+ ARC_democratic_reformer:0 "Paciano Mion"
+ ARC_editor:0 "Silvano Mangieri"
+ ARC_fascist_demagogue:0 "Achille Carosi"
+ ARC_head_of_intelligence:0 "Fuscolo Marchi"
+ ARC_popular_figurehead:0 "Eriberto Mendillo"
+ ARC_prince_of_terror:0 "Fedro Vano"
+#theorists
+ ARC_military_theorist:0 "Erasmo Lumetta"
+ ARC_air_warfare_theorist:0 "Silverio Cocca"
+ ARC_naval_theorist:0 "Terenzio Leveroni"
+ ARC_rocket_scientist:0 "Ludovico Simonet"
+#military chiefs
+ ARC_army_chief_defensive_2:0 "Gianluigi Piermarini"
+ ARC_army_chief_drill_2:0 "Oscar Famularo"
+ ARC_army_chief_maneuver_2:0 "Amadeus Perrotti"
+ ARC_army_chief_morale_2:0 "Venustiano Morra"
+ ARC_navy_chief_decisive_battle_2:0 "Saturnino Baldacci"
+ ARC_navy_chief_naval_aviation_2:0 "Matthew Blasi"
+ ARC_air_chief_ground_support_2:0 "Salvo Flora"
+ ARC_air_chief_reform_2:0 "Illidio Guzzardo"
+ ARC_army_entrenchment_1:0 "Galdino Faiola"
+ ARC_army_infantry_1:0 "Benito Graziadei"
+ ARC_army_logistics_2:0 "Timothy De Chellis"
+ ARC_air_bomber_interception_2:0 "Taziano Francione"
+ ARC_air_close_air_support_2:0 "Genesio Marcellino"
