--- a/localisation/AUD_l_english.yml
+++ b/localisation/AUD_l_english.yml
@@ -1,79 +1,45 @@
 ﻿l_english:
 
- #characters
- #political leaders
- AUD_conservatism_leader:0 "NAME"
- AUD_liberalism_leader:0 "NAME"
- AUD_socialism_leader:0 "NAME"
- AUD_marxism_leader:0 "NAME"
- AUD_leninism_leader:0 "NAME"
- AUD_stalinism_leader:0 "NAME"
- AUD_anti_revisionism_leader:0 "NAME"
- AUD_anarchist_communism_leader:0 "NAME"
- AUD_nazism_leader:0 "NAME"
- AUD_gen_nazism_leader:0 "NAME"
- AUD_generic_fascism_leader:0 "NAME"
- AUD_falangism_leader:0 "NAME"
- AUD_rexism_leader:0 "NAME"
- AUD_despotism_leader:0 "NAME"
- AUD_oligarchism_leader:0 "NAME"
- AUD_anarchism_leader:0 "NAME"
- AUD_moderatism_leader:0 "NAME"
- AUD_centrism_leader:0 "NAME"
- #military leaders
- AUD_corps_commander_1:0 "NAME"
- AUD_corps_commander_2:0 "NAME"
- AUD_corps_commander_3:0 "NAME"
- AUD_corps_commander_4:0 "NAME"
- AUD_naval_leader_1:0 "NAME"
- AUD_naval_leader_2:0 "NAME"
- AUD_naval_leader_3:0 "NAME"
- AUD_naval_leader_4:0 "NAME"
- AUD_naval_leader_5:0 "NAME"
- #advisors
- AUD_anti_communist_crusader:0 "NAME"
- AUD_armaments_organizer:0 "NAME"
- AUD_backroom_backstabber:0 "NAME"
- AUD_captain_of_industry:0 "NAME"
- AUD_communist_revolutionary:0 "NAME"
- AUD_compassionate_gentleman:0 "NAME"
- AUD_democratic_reformer:0 "NAME"
- AUD_economist:0 "NAME"
- AUD_editor:0 "NAME"
- AUD_fascist_demagogue:0 "NAME"
- AUD_financial_expert:0 "NAME"
- AUD_head_of_intelligence:0 "NAME"
- AUD_ideological_crusader:0 "NAME"
- AUD_popular_figurehead:0 "NAME"
- AUD_prince_of_terror:0 "NAME"
- AUD_silent_workhorse:0 "NAME"
- AUD_smooth_talking_charmer:0 "NAME"
- AUD_war_industrialist:0 "NAME"
- #theorists
- AUD_military_theorist:0 "NAME"
- AUD_air_warfare_theorist:0 "NAME"
- AUD_naval_theorist:0 "NAME"
- AUD_naval_aviation_pioneer:0 "NAME"
- AUD_victory_through_airpower:0 "NAME"
- AUD_nuclear_scientist:0 "NAME"
- AUD_rocket_scientist:0 "NAME"
- #military chiefs
- AUD_army_chief_defensive_2:0 "NAME"
- AUD_army_chief_drill_2:0 "NAME"
- AUD_army_chief_maneuver_2:0 "NAME"
- AUD_army_chief_morale_2:0 "NAME"
- AUD_army_chief_offensive_2:0 "NAME"
- AUD_army_chief_organizational_1:0 "NAME"
- AUD_navy_chief_decisive_battle_2:0 "NAME"
- AUD_navy_chief_naval_aviation_2:0 "NAME"
- AUD_air_chief_ground_support_2:0 "NAME"
- AUD_air_chief_reform_2:0 "NAME"
- AUD_army_armAUDd_1:0 "NAME"
- AUD_army_entrenchment_1:0 "NAME"
- AUD_army_infantry_1:0 "NAME"
- AUD_army_logistics_2:0 "NAME"
- AUD_air_bomber_interception_2:0 "NAME"
- AUD_air_close_air_support_2:0 "NAME"
- AUD_navy_screen_2:0 "NAME"
- AUD_navy_anti_submarine_1:0 "NAME"
- AUD_navy_naval_air_defense_2:0 "NAME"
+#characters
+#political leaders
+ AUD_liberalism_leader:0 "Lyle Walsh"
+ AUD_marxism_leader:0 "Gordon D. Jennings"
+ AUD_generic_fascism_leader:0 "Zavier B. Post"
+ AUD_moderatism_leader:0 "Darren R. Tittensor"
+#military leaders
+ AUD_corps_commander_1:0 "Quinn Gray"
+ AUD_corps_commander_2:0 "Zach Russell"
+ AUD_corps_commander_3:0 "Alfie Hudson"
+ AUD_corps_commander_4:0 "Noah May"
+ AUD_naval_leader_1:0 "Tom Jenkins"
+ AUD_naval_leader_2:0 "Daniel Gallagher"
+ AUD_naval_leader_3:0 "Stefan Hunter"
+ AUD_naval_leader_4:0 "Lenny Grant"
+ AUD_naval_leader_5:0 "Aryan Hall"
+#advisors
+ AUD_armaments_organizer:0 "Dante Fletcher"
+ AUD_communist_revolutionary:0 "Joey Morris"
+ AUD_compassionate_gentleman:0 "Cruz Hall"
+ AUD_democratic_reformer:0 "Isaac Williams"
+ AUD_editor:0 "Alex Evans"
+ AUD_fascist_demagogue:0 "Luis Rees"
+ AUD_prince_of_terror:0 "Victor Richardson"
+ AUD_silent_workhorse:0 "Rohan Clarke"
+#theorists
+ AUD_military_theorist:0 "Lennie Jackson"
+ AUD_air_warfare_theorist:0 "Cassius Lowe"
+ AUD_naval_theorist:0 "Wyatt Richards"
+#military chiefs
+ AUD_army_chief_defensive_2:0 "Zachary Campbell"
+ AUD_army_chief_drill_2:0 "Jake Wright"
+ AUD_army_chief_offensive_2:0 "Jake Wright"
+ AUD_navy_chief_decisive_battle_2:0 "Damian Young"
+ AUD_navy_chief_naval_aviation_2:0 "Evan Murray"
+ AUD_air_chief_ground_support_2:0 "Jonathan Doyle"
+ AUD_air_chief_reform_2:0 "Aydin Holmes"
+ AUD_army_infantry_1:0 "Jeremiah Hunter"
+ AUD_army_logistics_2:0 "Regan Martin"
+ AUD_air_bomber_interception_2:0 "Ellis Scott"
+ AUD_air_close_air_support_2:0 "Dante Harrison"
+ AUD_navy_screen_2:0 "Ellis Riley"
+ AUD_navy_naval_air_defense_2:0 "Lachlan Atkinson"
