--- a/localisation/BRG_l_english.yml
+++ b/localisation/BRG_l_english.yml
@@ -1,79 +1,39 @@
 ﻿l_english:
 
- #characters
- #political leaders
- BRG_conservatism_leader:0 "NAME"
- BRG_liberalism_leader:0 "NAME"
- BRG_socialism_leader:0 "NAME"
- BRG_marxism_leader:0 "NAME"
- BRG_leninism_leader:0 "NAME"
- BRG_stalinism_leader:0 "NAME"
- BRG_anti_revisionism_leader:0 "NAME"
- BRG_anarchist_communism_leader:0 "NAME"
- BRG_nazism_leader:0 "NAME"
- BRG_gen_nazism_leader:0 "NAME"
- BRG_generic_fascism_leader:0 "NAME"
- BRG_falangism_leader:0 "NAME"
- BRG_rexism_leader:0 "NAME"
- BRG_despotism_leader:0 "NAME"
- BRG_oligarchism_leader:0 "NAME"
- BRG_anarchism_leader:0 "NAME"
- BRG_moderatism_leader:0 "NAME"
- BRG_centrism_leader:0 "NAME"
- #military leaders
- BRG_corps_commander_1:0 "NAME"
- BRG_corps_commander_2:0 "NAME"
- BRG_corps_commander_3:0 "NAME"
- BRG_corps_commander_4:0 "NAME"
- BRG_naval_leader_1:0 "NAME"
- BRG_naval_leader_2:0 "NAME"
- BRG_naval_leader_3:0 "NAME"
- BRG_naval_leader_4:0 "NAME"
- BRG_naval_leader_5:0 "NAME"
- #advisors
- BRG_anti_communist_crusader:0 "NAME"
- BRG_armaments_organizer:0 "NAME"
- BRG_backroom_backstabber:0 "NAME"
- BRG_captain_of_industry:0 "NAME"
- BRG_communist_revolutionary:0 "NAME"
- BRG_compassionate_gentleman:0 "NAME"
- BRG_democratic_reformer:0 "NAME"
- BRG_economist:0 "NAME"
- BRG_editor:0 "NAME"
- BRG_fascist_demagogue:0 "NAME"
- BRG_financial_expert:0 "NAME"
- BRG_head_of_intelligence:0 "NAME"
- BRG_ideological_crusader:0 "NAME"
- BRG_popular_figurehead:0 "NAME"
- BRG_prince_of_terror:0 "NAME"
- BRG_silent_workhorse:0 "NAME"
- BRG_smooth_talking_charmer:0 "NAME"
- BRG_war_industrialist:0 "NAME"
- #theorists
- BRG_military_theorist:0 "NAME"
- BRG_air_warfare_theorist:0 "NAME"
- BRG_naval_theorist:0 "NAME"
- BRG_naval_aviation_pioneer:0 "NAME"
- BRG_victory_through_airpower:0 "NAME"
- BRG_nuclear_scientist:0 "NAME"
- BRG_rocket_scientist:0 "NAME"
- #military chiefs
- BRG_army_chief_defensive_2:0 "NAME"
- BRG_army_chief_drill_2:0 "NAME"
- BRG_army_chief_maneuver_2:0 "NAME"
- BRG_army_chief_morale_2:0 "NAME"
- BRG_army_chief_offensive_2:0 "NAME"
- BRG_army_chief_organizational_1:0 "NAME"
- BRG_navy_chief_decisive_battle_2:0 "NAME"
- BRG_navy_chief_naval_aviation_2:0 "NAME"
- BRG_air_chief_ground_support_2:0 "NAME"
- BRG_air_chief_reform_2:0 "NAME"
- BRG_army_armBRGd_1:0 "NAME"
- BRG_army_entrenchment_1:0 "NAME"
- BRG_army_infantry_1:0 "NAME"
- BRG_army_logistics_2:0 "NAME"
- BRG_air_bomber_interception_2:0 "NAME"
- BRG_air_close_air_support_2:0 "NAME"
- BRG_navy_screen_2:0 "NAME"
- BRG_navy_anti_submarine_1:0 "NAME"
- BRG_navy_naval_air_defense_2:0 "NAME"
+#military leaders
+ BRG_corps_commander_1:0 "Enrico Mantovani Aguiar"
+ BRG_corps_commander_2:0 "Agildo Pedroso Marques"
+ BRG_corps_commander_3:0 "Alexandre Cardoso Pimentel"
+ BRG_corps_commander_4:0 "Sidnei Tavares Borba"
+ BRG_naval_leader_1:0 "Sebastião Duarte Vila"
+ BRG_naval_leader_2:0 "Tadeu Braga Sá"
+ BRG_naval_leader_3:0 "Ângelo Ribeiro Castilho"
+ BRG_naval_leader_4:0 "Antônio Passos de Jesus"
+ BRG_naval_leader_5:0 "Breno H. Ferreira"
+#advisors
+ BRG_armaments_organizer:0 "Cristiano Salgadou"
+ BRG_backroom_backstabber:0 "Emanuel Ruiz da Conceição"
+ BRG_captain_of_industry:0 "Ivanildo W. Bonfim"
+ BRG_communist_revolutionary:0 "Carlos Leal Correia"
+ BRG_democratic_reformer:0 "Erasmo Reis Lacerda"
+ BRG_fascist_demagogue:0 "Mário N. Couto"
+ BRG_head_of_intelligence:0 "Rodrigo Medeiras Rezende"
+ BRG_ideological_crusader:0 "Cláudio Albuquerque Rios"
+ BRG_silent_workhorse:0 "Tomás Prestes Cordeiro"
+#theorists
+ BRG_military_theorist:0 "Artur Almeida Belchior"
+ BRG_air_warfare_theorist:0 "Nilton Magalhães Justino"
+ BRG_naval_theorist:0 "Isaías Lima de Ávila"
+#military chiefs
+ BRG_army_chief_defensive_2:0 "Breno Garcia Delchiaro"
+ BRG_army_chief_drill_2:0 "Ivo Vale Carvalho"
+ BRG_navy_chief_decisive_battle_2:0 "Enrico Monteiro Nogueira"
+ BRG_navy_chief_naval_aviation_2:0 "Estevão Souza"
+ BRG_air_chief_ground_support_2:0 "Geraldo Belluci Pinho"
+ BRG_air_chief_reform_2:0 "Flávio Gimenes Castilho"
+ BRG_army_entrenchment_1:0 "Otávio Lourenço Alvarez"
+ BRG_army_infantry_1:0 "César Canto Cantares"
+ BRG_army_logistics_2:0 "Ronaldo S. Pinheiro"
+ BRG_air_bomber_interception_2:0 "Bernardo Medeiros da Costa"
+ BRG_air_close_air_support_2:0 "Alfredo Correia Câmara"
+ BRG_navy_screen_2:0 "Osmar Cabral Paschoal"
