--- a/localisation/BSD_l_english.yml
+++ b/localisation/BSD_l_english.yml
@@ -1,79 +1,45 @@
 ﻿l_english:
 
- #characters
- #political leaders
- BAD_conservatism_leader:0 "NAME"
- BAD_liberalism_leader:0 "NAME"
- BAD_socialism_leader:0 "NAME"
- BAD_marxism_leader:0 "NAME"
- BAD_leninism_leader:0 "NAME"
- BAD_stalinism_leader:0 "NAME"
- BAD_anti_revisionism_leader:0 "NAME"
- BAD_anarchist_communism_leader:0 "NAME"
- BAD_nazism_leader:0 "NAME"
- BAD_gen_nazism_leader:0 "NAME"
- BAD_generic_fascism_leader:0 "NAME"
- BAD_falangism_leader:0 "NAME"
- BAD_rexism_leader:0 "NAME"
- BAD_despotism_leader:0 "NAME"
- BAD_oligarchism_leader:0 "NAME"
- BAD_anarchism_leader:0 "NAME"
- BAD_moderatism_leader:0 "NAME"
- BAD_centrism_leader:0 "NAME"
- #military leaders
- BAD_corps_commander_1:0 "NAME"
- BAD_corps_commander_2:0 "NAME"
- BAD_corps_commander_3:0 "NAME"
- BAD_corps_commander_4:0 "NAME"
- BAD_naval_leader_1:0 "NAME"
- BAD_naval_leader_2:0 "NAME"
- BAD_naval_leader_3:0 "NAME"
- BAD_naval_leader_4:0 "NAME"
- BAD_naval_leader_5:0 "NAME"
- #advisors
- BAD_anti_communist_crusader:0 "NAME"
- BAD_armaments_organizer:0 "NAME"
- BAD_backroom_backstabber:0 "NAME"
- BAD_captain_of_industry:0 "NAME"
- BAD_communist_revolutionary:0 "NAME"
- BAD_compassionate_gentleman:0 "NAME"
- BAD_democratic_reformer:0 "NAME"
- BAD_economist:0 "NAME"
- BAD_editor:0 "NAME"
- BAD_fascist_demagogue:0 "NAME"
- BAD_financial_expert:0 "NAME"
- BAD_head_of_intelligence:0 "NAME"
- BAD_ideological_crusader:0 "NAME"
- BAD_popular_figurehead:0 "NAME"
- BAD_prince_of_terror:0 "NAME"
- BAD_silent_workhorse:0 "NAME"
- BAD_smooth_talking_charmer:0 "NAME"
- BAD_war_industrialist:0 "NAME"
- #theorists
- BAD_military_theorist:0 "NAME"
- BAD_air_warfare_theorist:0 "NAME"
- BAD_naval_theorist:0 "NAME"
- BAD_naval_aviation_pioneer:0 "NAME"
- BAD_victory_through_airpower:0 "NAME"
- BAD_nuclear_scientist:0 "NAME"
- BAD_rocket_scientist:0 "NAME"
- #military chiefs
- BAD_army_chief_defensive_2:0 "NAME"
- BAD_army_chief_drill_2:0 "NAME"
- BAD_army_chief_maneuver_2:0 "NAME"
- BAD_army_chief_morale_2:0 "NAME"
- BAD_army_chief_offensive_2:0 "NAME"
- BAD_army_chief_organizational_1:0 "NAME"
- BAD_navy_chief_decisive_battle_2:0 "NAME"
- BAD_navy_chief_naval_aviation_2:0 "NAME"
- BAD_air_chief_ground_support_2:0 "NAME"
- BAD_air_chief_reform_2:0 "NAME"
- BAD_army_armBADd_1:0 "NAME"
- BAD_army_entrenchment_1:0 "NAME"
- BAD_army_infantry_1:0 "NAME"
- BAD_army_logistics_2:0 "NAME"
- BAD_air_bomber_interception_2:0 "NAME"
- BAD_air_close_air_support_2:0 "NAME"
- BAD_navy_screen_2:0 "NAME"
- BAD_navy_anti_submarine_1:0 "NAME"
- BAD_navy_naval_air_defense_2:0 "NAME"
+ BSD_angus_mccleod:0 "Angus McCleod"
+ BSD_stalinism_leader:0 "Michael O. Breckenridge"
+ BSD_gen_nazism_leader:0 "Stewart W. Lowry"
+ BSD_despotism_leader:0 "Arran R. Stanford"
+#military leaders
+ BSD_corps_commander_1:0 "Gore Joshua Ackerman"
+ BSD_corps_commander_2:0 "Hamilton Collingwood"
+ BSD_corps_commander_3:0 "Theodore Alan Pratt"
+ BSD_corps_commander_4:0 "Byron Zane Oakley"
+ BSD_naval_leader_1:0 "Carson Montague Hendry"
+ BSD_naval_leader_2:0 "Raynard Willoughby Woodhams"
+ BSD_naval_leader_3:0 "Aaren Fyfe Dickinson"
+ BSD_naval_leader_4:0 "Samuel Gideon Anthonyson"
+ BSD_naval_leader_5:0 "Glanville Terrell Rattray"
+#advisors
+ BSD_armaments_organizer:0 "Palmer Teàrlach Wolfe"
+ BSD_backroom_backstabber:0 "Placid Fortune Jack"
+ BSD_communist_revolutionary:0 "Colby Cortney Dickman"
+ BSD_democratic_reformer:0 "Luther Campbell Tucker"
+ BSD_fascist_demagogue:0 "Rodolph D. Dunn"
+ BSD_head_of_intelligence:0 "Maynard Bruce Wilkie"
+ BSD_ideological_crusader:0 "Ellington Stewart Badcock"
+ BSD_popular_figurehead:0 "Ira Axel McCormick"
+ BSD_prince_of_terror:0 "Trent R. Bell"
+ BSD_war_industrialist:0 "Todd Keefe-Wright"
+#theorists
+ BSD_military_theorist:0 "Otis Diggory Comstock"
+ BSD_air_warfare_theorist:0 "Ryan Deacon Watt"
+ BSD_naval_theorist:0 "Seward Dugald Mallory"
+ BSD_naval_aviation_pioneer:0 "Remington Virgil Forester"
+#military chiefs
+ BSD_army_chief_defensive_2:0 "Maynerd Horace Gibson"
+ BSD_army_chief_drill_2:0 "Delmar Arlen Bourne"
+ BSD_army_chief_offensive_2:0 "Alban Casey Kerry"
+ BSD_navy_chief_decisive_battle_2:0 "Benson Memphis Henry"
+ BSD_navy_chief_naval_aviation_2:0 "Malakai C. Cross"
+ BSD_air_chief_ground_support_2:0 "Melville McWilliam"
+ BSD_air_chief_reform_2:0 "Shelton Otis Burrell"
+ BSD_army_logistics_2:0 "Quinn Kamryn Hewitt"
+ BSD_air_bomber_interception_2:0 "Lyndon R. Hubert"
+ BSD_air_close_air_support_2:0 "Roderick Mayes"
+ BSD_navy_screen_2:0 "Sigmund Kash-Bass"
+ BSD_navy_naval_air_defense_2:0 "Darby M. Gray"
