--- a/localisation/CAL_l_english.yml
+++ b/localisation/CAL_l_english.yml
@@ -1,79 +1,49 @@
 ﻿l_english:
 
- #characters
- #political leaders
- CAL_conservatism_leader:0 "NAME"
- CAL_liberalism_leader:0 "NAME"
- CAL_socialism_leader:0 "NAME"
- CAL_marxism_leader:0 "NAME"
- CAL_leninism_leader:0 "NAME"
- CAL_stalinism_leader:0 "NAME"
- CAL_anti_revisionism_leader:0 "NAME"
- CAL_anarchist_communism_leader:0 "NAME"
- CAL_nazism_leader:0 "NAME"
- CAL_gen_nazism_leader:0 "NAME"
- CAL_generic_fascism_leader:0 "NAME"
- CAL_falangism_leader:0 "NAME"
- CAL_rexism_leader:0 "NAME"
- CAL_despotism_leader:0 "NAME"
- CAL_oligarchism_leader:0 "NAME"
- CAL_anarchism_leader:0 "NAME"
- CAL_moderatism_leader:0 "NAME"
- CAL_centrism_leader:0 "NAME"
- #military leaders
- CAL_corps_commander_1:0 "NAME"
- CAL_corps_commander_2:0 "NAME"
- CAL_corps_commander_3:0 "NAME"
- CAL_corps_commander_4:0 "NAME"
- CAL_naval_leader_1:0 "NAME"
- CAL_naval_leader_2:0 "NAME"
- CAL_naval_leader_3:0 "NAME"
- CAL_naval_leader_4:0 "NAME"
- CAL_naval_leader_5:0 "NAME"
- #advisors
- CAL_anti_communist_crusader:0 "NAME"
- CAL_armaments_organizer:0 "NAME"
- CAL_backroom_backstabber:0 "NAME"
- CAL_captain_of_industry:0 "NAME"
- CAL_communist_revolutionary:0 "NAME"
- CAL_compassionate_gentleman:0 "NAME"
- CAL_democratic_reformer:0 "NAME"
- CAL_economist:0 "NAME"
- CAL_editor:0 "NAME"
- CAL_fascist_demagogue:0 "NAME"
- CAL_financial_expert:0 "NAME"
- CAL_head_of_intelligence:0 "NAME"
- CAL_ideological_crusader:0 "NAME"
- CAL_popular_figurehead:0 "NAME"
- CAL_prince_of_terror:0 "NAME"
- CAL_silent_workhorse:0 "NAME"
- CAL_smooth_talking_charmer:0 "NAME"
- CAL_war_industrialist:0 "NAME"
- #theorists
- CAL_military_theorist:0 "NAME"
- CAL_air_warfare_theorist:0 "NAME"
- CAL_naval_theorist:0 "NAME"
- CAL_naval_aviation_pioneer:0 "NAME"
- CAL_victory_through_airpower:0 "NAME"
- CAL_nuclear_scientist:0 "NAME"
- CAL_rocket_scientist:0 "NAME"
- #military chiefs
- CAL_army_chief_defensive_2:0 "NAME"
- CAL_army_chief_drill_2:0 "NAME"
- CAL_army_chief_maneuver_2:0 "NAME"
- CAL_army_chief_morale_2:0 "NAME"
- CAL_army_chief_offensive_2:0 "NAME"
- CAL_army_chief_organizational_1:0 "NAME"
- CAL_navy_chief_decisive_battle_2:0 "NAME"
- CAL_navy_chief_naval_aviation_2:0 "NAME"
- CAL_air_chief_ground_support_2:0 "NAME"
- CAL_air_chief_reform_2:0 "NAME"
- CAL_army_armCALd_1:0 "NAME"
- CAL_army_entrenchment_1:0 "NAME"
- CAL_army_infantry_1:0 "NAME"
- CAL_army_logistics_2:0 "NAME"
- CAL_air_bomber_interception_2:0 "NAME"
- CAL_air_close_air_support_2:0 "NAME"
- CAL_navy_screen_2:0 "NAME"
- CAL_navy_anti_submarine_1:0 "NAME"
- CAL_navy_naval_air_defense_2:0 "NAME"
+#characters
+#political leaders
+ CAL_liberalism_leader:0 "Isaiah Dines"
+ CAL_socialism_leader:0 "Anthony Campbell"
+ CAL_marxism_leader:0 "Flynn Samuel"
+ CAL_generic_fascism_leader:0 "Dylan Shaw"
+ CAL_oligarchism_leader:0 "Zachary Baines"
+ CAL_moderatism_leader:0 "Mason Harman"
+#military leaders
+ CAL_corps_commander_1:0 "Hunter Wood"
+ CAL_corps_commander_2:0 "Liam Dines"
+ CAL_corps_commander_3:0 "Lewis Ronin"
+ CAL_corps_commander_4:0 "Toby Lynes"
+ CAL_naval_leader_1:0 "Aidan Fern"
+ CAL_naval_leader_2:0 "Cooper Quin"
+ CAL_naval_leader_3:0 "Noah Whelan"
+ CAL_naval_leader_4:0 "Isaiah Wenham"
+ CAL_naval_leader_5:0 "Hugo Fisher"
+#advisors
+ CAL_anti_communist_crusader:0 "Zac Elliott"
+ CAL_armaments_organizer:0 "Flynn Mills"
+ CAL_communist_revolutionary:0 "Toby Cox"
+ CAL_democratic_reformer:0 "Aaron White"
+ CAL_economist:0 "Vincent Spencer"
+ CAL_editor:0 "Andrew Ryan"
+ CAL_fascist_demagogue:0 "Mason Hood"
+ CAL_ideological_crusader:0 "Justin Mitchell"
+ CAL_popular_figurehead:0 "Nathaniel Ellis"
+ CAL_war_industrialist:0 "Harvey Taylor"
+#theorists
+ CAL_military_theorist:0 "Jesse Black"
+ CAL_air_warfare_theorist:0 "Ashton Shaw"
+ CAL_naval_theorist:0 "Beau Noble"
+ CAL_nuclear_scientist:0 "Alexander Fowler"
+#military chiefs
+ CAL_army_chief_drill_2:0 "Oscar Curry"
+ CAL_army_chief_morale_2:0 "Jett Hewson"
+ CAL_navy_chief_decisive_battle_2:0 "Vincent O'Brien"
+ CAL_navy_chief_naval_aviation_2:0 "Jasper Weaver"
+ CAL_air_chief_ground_support_2:0 "Jude Ramsay"
+ CAL_air_chief_reform_2:0 "Andrew Sacks"
+ CAL_army_entrenchment_1:0 "Hugo Madden"
+ CAL_army_infantry_1:0 "Dylan Young"
+ CAL_air_bomber_interception_2:0 "Mason Green"
+ CAL_air_close_air_support_2:0 "Ryder Evans"
+ CAL_navy_screen_2:0 "Blake Johnston"
+ CAL_navy_anti_submarine_1:0 "Carter McDonald"
