--- a/localisation/CAS_l_english.yml
+++ b/localisation/CAS_l_english.yml
@@ -1,79 +1,51 @@
 ﻿l_english:
 
- #characters
- #political leaders
- CAS_conservatism_leader:0 "NAME"
- CAS_liberalism_leader:0 "NAME"
- CAS_socialism_leader:0 "NAME"
- CAS_marxism_leader:0 "NAME"
- CAS_leninism_leader:0 "NAME"
- CAS_stalinism_leader:0 "NAME"
- CAS_anti_revisionism_leader:0 "NAME"
- CAS_anarchist_communism_leader:0 "NAME"
- CAS_nazism_leader:0 "NAME"
- CAS_gen_nazism_leader:0 "NAME"
- CAS_generic_fascism_leader:0 "NAME"
- CAS_falangism_leader:0 "NAME"
- CAS_rexism_leader:0 "NAME"
- CAS_despotism_leader:0 "NAME"
- CAS_oligarchism_leader:0 "NAME"
- CAS_anarchism_leader:0 "NAME"
- CAS_moderatism_leader:0 "NAME"
- CAS_centrism_leader:0 "NAME"
- #military leaders
- CAS_corps_commander_1:0 "NAME"
- CAS_corps_commander_2:0 "NAME"
- CAS_corps_commander_3:0 "NAME"
- CAS_corps_commander_4:0 "NAME"
- CAS_naval_leader_1:0 "NAME"
- CAS_naval_leader_2:0 "NAME"
- CAS_naval_leader_3:0 "NAME"
- CAS_naval_leader_4:0 "NAME"
- CAS_naval_leader_5:0 "NAME"
- #advisors
- CAS_anti_communist_crusader:0 "NAME"
- CAS_armaments_organizer:0 "NAME"
- CAS_backroom_backstabber:0 "NAME"
- CAS_captain_of_industry:0 "NAME"
- CAS_communist_revolutionary:0 "NAME"
- CAS_compassionate_gentleman:0 "NAME"
- CAS_democratic_reformer:0 "NAME"
- CAS_economist:0 "NAME"
- CAS_editor:0 "NAME"
- CAS_fascist_demagogue:0 "NAME"
- CAS_financial_expert:0 "NAME"
- CAS_head_of_intelligence:0 "NAME"
- CAS_ideological_crusader:0 "NAME"
- CAS_popular_figurehead:0 "NAME"
- CAS_prince_of_terror:0 "NAME"
- CAS_silent_workhorse:0 "NAME"
- CAS_smooth_talking_charmer:0 "NAME"
- CAS_war_industrialist:0 "NAME"
- #theorists
- CAS_military_theorist:0 "NAME"
- CAS_air_warfare_theorist:0 "NAME"
- CAS_naval_theorist:0 "NAME"
- CAS_naval_aviation_pioneer:0 "NAME"
- CAS_victory_through_airpower:0 "NAME"
- CAS_nuclear_scientist:0 "NAME"
- CAS_rocket_scientist:0 "NAME"
- #military chiefs
- CAS_army_chief_defensive_2:0 "NAME"
- CAS_army_chief_drill_2:0 "NAME"
- CAS_army_chief_maneuver_2:0 "NAME"
- CAS_army_chief_morale_2:0 "NAME"
- CAS_army_chief_offensive_2:0 "NAME"
- CAS_army_chief_organizational_1:0 "NAME"
- CAS_navy_chief_decisive_battle_2:0 "NAME"
- CAS_navy_chief_naval_aviation_2:0 "NAME"
- CAS_air_chief_ground_support_2:0 "NAME"
- CAS_air_chief_reform_2:0 "NAME"
- CAS_army_armCASd_1:0 "NAME"
- CAS_army_entrenchment_1:0 "NAME"
- CAS_army_infantry_1:0 "NAME"
- CAS_army_logistics_2:0 "NAME"
- CAS_air_bomber_interception_2:0 "NAME"
- CAS_air_close_air_support_2:0 "NAME"
- CAS_navy_screen_2:0 "NAME"
- CAS_navy_anti_submarine_1:0 "NAME"
- CAS_navy_naval_air_defense_2:0 "NAME"
+
+#characters
+#political leaders
+ CAS_conservatism_leader:0 "Calvin Stephenson"
+ CAS_liberalism_leader:0 "Drew Robertson"
+ CAS_socialism_leader:0 "Huxley Hawley"
+ CAS_leninism_leader:0 "Jace Robins"
+ CAS_generic_fascism_leader:0 "Tanner Harper"
+ CAS_centrism_leader:0 "Carter Reynolds"
+#military leaders
+ CAS_corps_commander_1:0 "David Allan"
+ CAS_corps_commander_2:0 "Tyler Markle"
+ CAS_corps_commander_3:0 "Aidan Bondar"
+ CAS_corps_commander_4:0 "Rhett Marcus"
+ CAS_naval_leader_1:0 "Charles Cohen"
+ CAS_naval_leader_2:0 "Camden Clark"
+ CAS_naval_leader_3:0 "Spencer Cowan"
+ CAS_naval_leader_4:0 "'Mad' Maddox Roth"
+ CAS_naval_leader_5:0 "Benjamin Graham"
+#advisors
+ CAS_anti_communist_crusader:0 "Jasper Frazer"
+ CAS_armaments_organizer:0 "Jake Thompson"
+ CAS_communist_revolutionary:0 "Zayn Robertson"
+ CAS_democratic_reformer:0 "Brady Ward"
+ CAS_editor:0 "Drew Prince"
+ CAS_fascist_demagogue:0 "Jaden Beaton"
+ CAS_financial_expert:0 "Benjamin Marcus"
+ CAS_popular_figurehead:0 "Aaron Davidson"
+ CAS_prince_of_terror:0 "Bennett Keen"
+ CAS_smooth_talking_charmer:0 "Liam Clark"
+#theorists
+ CAS_military_theorist:0 "Asher Young"
+ CAS_air_warfare_theorist:0 "Jake Calder"
+ CAS_naval_theorist:0 "Malcolm Wilson"
+ CAS_naval_aviation_pioneer:0 "Nico Cairns"
+#military chiefs
+ CAS_army_chief_defensive_2:0 "Atticus Jones"
+ CAS_army_chief_offensive_2:0 "Everett Lane"
+ CAS_navy_chief_decisive_battle_2:0 "Phoenix Webster"
+ CAS_navy_chief_naval_aviation_2:0 "Julian Woodward"
+ CAS_air_chief_ground_support_2:0 "Lukas Markle"
+ CAS_air_chief_reform_2:0 "Derek Gale"
+ CAS_army_armored_1:0 "Kohen Burt"
+ CAS_army_entrenchment_1:0 "Kane Asper"
+ CAS_army_infantry_1:0 "Jonathan Allan"
+ CAS_air_bomber_interception_2:0 "Avery Wright"
+ CAS_air_close_air_support_2:0 "Tristan Macdonald"
+ CAS_navy_screen_2:0 "Rhett Gesner"
+ CAS_navy_anti_submarine_1:0 "Luka Baldwin"
