--- a/localisation/CLA_l_english.yml
+++ b/localisation/CLA_l_english.yml
@@ -1,2 +1,38 @@
 ﻿l_english:
  develop_single_hoshmurala:0 "Develop Chromium Deposits in Hoshmurala"
+#military leaders
+ CLA_corps_commander_1:0 "Raghavan Hrisprisathna"
+ CLA_corps_commander_2:0 "Navind Raj Yathra"
+ CLA_corps_commander_3:0 "Jathusman Aaraalan"
+ CLA_corps_commander_4:0 "Archanan Jivitesh"
+ CLA_naval_leader_1:0 "Ingini Vebeeshanan"
+ CLA_naval_leader_2:0 "Boopathy Sidhanth"
+ CLA_naval_leader_3:0 "Dennishwaran Paraman"
+ CLA_naval_leader_4:0 "Illamai Yathush"
+ CLA_naval_leader_5:0 "Kaliyukan Thulan"
+#advisors
+ CLA_anti_communist_crusader:0 "Vinathith Thujeevan"
+ CLA_backroom_backstabber:0 "Krithik Sashitharan"
+ CLA_democratic_reformer:0 "Vettiselvan Rathooshan"
+ CLA_fascist_demagogue:0 "Sankeeth Kugaatheran"
+ CLA_ideological_crusader:0 "Kishorenath Poongkundran"
+ CLA_popular_figurehead:0 "Srirangan Thulasigan"
+ CLA_prince_of_terror:0 "Ravishankar Malarvendhan"
+#theorists
+ CLA_military_theorist:0 "Pirathab Nishath"
+ CLA_air_warfare_theorist:0 "Inesh Cheliyen"
+ CLA_naval_theorist:0 "Archayan Arunagiri"
+#military chiefs
+ CLA_army_chief_defensive_2:0 "Shastigan Anush"
+ CLA_army_chief_drill_2:0 "Kajamugan Jasothan"
+ CLA_army_chief_maneuver_2:0 "Pranov Araahan"
+ CLA_navy_chief_decisive_battle_2:0 "Jaiaakash Thano"
+ CLA_navy_chief_naval_aviation_2:0 "Mukhilarasan Rajbavan"
+ CLA_air_chief_ground_support_2:0 "Keerthanan Sahabthan"
+ CLA_air_chief_reform_2:0 "Manivel Yasan"
+ CLA_army_entrenchment_1:0 "Jenan Uthayan"
+ CLA_army_infantry_1:0 "Soumiyan Kulavaanan"
+ CLA_air_bomber_interception_2:0 "Kalaimahan Jano"
+ CLA_air_close_air_support_2:0 "Hanuman Jashinthan"
+ CLA_navy_anti_submarine_1:0 "Udesh Priyadharsan"
+ CLA_navy_naval_air_defense_2:0 "Yohant Sugesh"
