--- a/localisation/CTT_l_english.yml
+++ b/localisation/CTT_l_english.yml
@@ -1,38 +1,38 @@
 ﻿l_english:
  #characters
  #military leaders
- CTT_corps_commander_1:0 "NAME"
- CTT_corps_commander_2:0 "NAME"
- CTT_corps_commander_3:0 "NAME"
- CTT_corps_commander_4:0 "NAME"
- CTT_naval_leader_1:0 "NAME"
- CTT_naval_leader_2:0 "NAME"
- CTT_naval_leader_3:0 "NAME"
- CTT_naval_leader_4:0 "NAME"
- CTT_naval_leader_5:0 "NAME"
+ CTT_corps_commander_1:0 "Teo Alférez"
+ CTT_corps_commander_2:0 "Oliver Piedrabuena"
+ CTT_corps_commander_3:0 "Gerard Pescador"
+ CTT_corps_commander_4:0 "Fernando Rabadán"
+ CTT_naval_leader_1:0 "Gerard Ferrufino"
+ CTT_naval_leader_2:0 "Luis Llérida"
+ CTT_naval_leader_3:0 "Moises Aisa"
+ CTT_naval_leader_4:0 "Jose Carlos Ligüerre"
+ CTT_naval_leader_5:0 "Ramon Arroyo"
  #advisors
- CTT_anti_communist_crusader:0 "NAME"
+ CTT_anti_communist_crusader:0 "Alonso Toledo"
  CTT_armaments_organizer:0 "NAME"
- CTT_backroom_backstabber:0 "NAME"
+ CTT_backroom_backstabber:0 "Oliver Alcaide"
  CTT_captain_of_industry:0 "NAME"
- CTT_communist_revolutionary:0 "NAME"
+ CTT_communist_revolutionary:0 "Dylan España"
  CTT_compassionate_gentleman:0 "NAME"
- CTT_democratic_reformer:0 "NAME"
+ CTT_democratic_reformer:0 "Julen Sandoval"
  CTT_economist:0 "NAME"
  CTT_editor:0 "NAME"
- CTT_fascist_demagogue:0 "NAME"
+ CTT_fascist_demagogue:0 "Andres Carnicer"
  CTT_financial_expert:0 "NAME"
- CTT_head_of_intelligence:0 "NAME"
+ CTT_head_of_intelligence:0 "Luis Linares"
  CTT_ideological_crusader:0 "NAME"
  CTT_popular_figurehead:0 "NAME"
  CTT_prince_of_terror:0 "NAME"
- CTT_silent_workhorse:0 "NAME"
+ CTT_silent_workhorse:0 "Mikel Navarra"
  CTT_smooth_talking_charmer:0 "NAME"
  CTT_war_industrialist:0 "NAME"
  #theorists
- CTT_military_theorist:0 "NAME"
- CTT_air_warfare_theorist:0 "NAME"
- CTT_naval_theorist:0 "NAME"
+ CTT_military_theorist:0 "Unai Villalba"
+ CTT_air_warfare_theorist:0 "Gael Notario"
+ CTT_naval_theorist:0 "Abel Ravelino"
  CTT_naval_aviation_pioneer:0 "NAME"
  CTT_victory_through_airpower:0 "NAME"
  CTT_nuclear_scientist:0 "NAME"
@@ -41,19 +41,19 @@
  CTT_army_chief_defensive_2:0 "NAME"
  CTT_army_chief_drill_2:0 "NAME"
  CTT_army_chief_maneuver_2:0 "NAME"
- CTT_army_chief_morale_2:0 "NAME"
- CTT_army_chief_offensive_2:0 "NAME"
- CTT_army_chief_organizational_1:0 "NAME"
- CTT_navy_chief_decisive_battle_2:0 "NAME"
- CTT_navy_chief_naval_aviation_2:0 "NAME"
- CTT_air_chief_ground_support_2:0 "NAME"
- CTT_air_chief_reform_2:0 "NAME"
+ CTT_army_chief_morale_2:0 "Lucas Labrador"
+ CTT_army_chief_offensive_2:0 "Jonathan Llopis"
+ CTT_army_chief_organizational_1:0 "Juan Jose Melero"
+ CTT_navy_chief_decisive_battle_2:0 "Gabriel Rabellini"
+ CTT_navy_chief_naval_aviation_2:0 "Raul Carreiro"
+ CTT_air_chief_ground_support_2:0 "Christian Toledano"
+ CTT_air_chief_reform_2:0 "Daniel Nápoles"
  CTT_army_armored_1:0 "NAME"
- CTT_army_entrenchment_1:0 "NAME"
- CTT_army_infantry_1:0 "NAME"
- CTT_army_logistics_2:0 "NAME"
- CTT_air_bomber_interception_2:0 "NAME"
- CTT_air_close_air_support_2:0 "NAME"
- CTT_navy_screen_2:0 "NAME"
- CTT_navy_anti_submarine_1:0 "NAME"
- CTT_navy_naval_air_defense_2:0 "NAME"
+ CTT_army_entrenchment_1:0 "Elias Ferreira"
+ CTT_army_infantry_1:0 "Carles Bailén"
+ CTT_army_logistics_2:0 "Mohamed Padrón"
+ CTT_air_bomber_interception_2:0 "Jon Montes"
+ CTT_air_close_air_support_2:0 "Isaac Peris"
+ CTT_navy_screen_2:0 "Luca Carpenter"
+ CTT_navy_anti_submarine_1:0 "Xabier Cerecero"
+ CTT_navy_naval_air_defense_2:0 "Andres Borobia"
