--- a/localisation/FJN_l_english.yml
+++ b/localisation/FJN_l_english.yml
@@ -1,79 +1,53 @@
 ﻿l_english:
 
  #characters
- #political leaders
- FJN_conservatism_leader:0 "NAME"
- FJN_liberalism_leader:0 "NAME"
- FJN_socialism_leader:0 "NAME"
- FJN_marxism_leader:0 "NAME"
- FJN_leninism_leader:0 "NAME"
- FJN_stalinism_leader:0 "NAME"
- FJN_anti_revisionism_leader:0 "NAME"
- FJN_anarchist_communism_leader:0 "NAME"
- FJN_nazism_leader:0 "NAME"
- FJN_gen_nazism_leader:0 "NAME"
- FJN_generic_fascism_leader:0 "NAME"
- FJN_falangism_leader:0 "NAME"
- FJN_rexism_leader:0 "NAME"
- FJN_despotism_leader:0 "NAME"
- FJN_oligarchism_leader:0 "NAME"
- FJN_anarchism_leader:0 "NAME"
- FJN_moderatism_leader:0 "NAME"
- FJN_centrism_leader:0 "NAME"
  #military leaders
- FJN_corps_commander_1:0 "NAME"
- FJN_corps_commander_2:0 "NAME"
- FJN_corps_commander_3:0 "NAME"
- FJN_corps_commander_4:0 "NAME"
- FJN_naval_leader_1:0 "NAME"
- FJN_naval_leader_2:0 "NAME"
- FJN_naval_leader_3:0 "NAME"
- FJN_naval_leader_4:0 "NAME"
- FJN_naval_leader_5:0 "NAME"
+ FJN_corps_commander_1:0 "Hieronymus Roeland Krusen"
+ FJN_corps_commander_2:0 "Finn Floris Jansink"
+ FJN_corps_commander_3:0 "Maarten Ronald Kollen"
+ FJN_corps_commander_4:0 "Olivier Ysbrand Sneijers"
+ FJN_naval_leader_1:0 "Meinard Koenraad Daalman"
+ FJN_naval_leader_2:0 "Godfried Theodorus Spijker"
+ FJN_naval_leader_3:0 "Franciscus Carel Amsing"
+ FJN_naval_leader_4:0 "Reinout Anton Both"
+ FJN_naval_leader_5:0 "Kasper Servaas Boon"
  #advisors
  FJN_anti_communist_crusader:0 "NAME"
- FJN_armaments_organizer:0 "NAME"
+ FJN_armaments_organizer:0 "Quirijn Marijn Cloet"
  FJN_backroom_backstabber:0 "NAME"
- FJN_captain_of_industry:0 "NAME"
- FJN_communist_revolutionary:0 "NAME"
+ FJN_captain_of_industry:0 "Pieter Fabian Post"
+ FJN_communist_revolutionary:0 "Adam Keano Assink"
  FJN_compassionate_gentleman:0 "NAME"
- FJN_democratic_reformer:0 "NAME"
+ FJN_democratic_reformer:0 "Theodoor Alwin Van Buren"
  FJN_economist:0 "NAME"
  FJN_editor:0 "NAME"
- FJN_fascist_demagogue:0 "NAME"
+ FJN_fascist_demagogue:0 "Ewoud Heeren"
  FJN_financial_expert:0 "NAME"
  FJN_head_of_intelligence:0 "NAME"
  FJN_ideological_crusader:0 "NAME"
  FJN_popular_figurehead:0 "NAME"
  FJN_prince_of_terror:0 "NAME"
- FJN_silent_workhorse:0 "NAME"
- FJN_smooth_talking_charmer:0 "NAME"
- FJN_war_industrialist:0 "NAME"
+ FJN_silent_workhorse:0 "Roger Van Hassel"
+ FJN_smooth_talking_charmer:0 "Jasper Maurits Bulle"
+ FJN_war_industrialist:0 "Manfred Tijmen Alberda"
  #theorists
- FJN_military_theorist:0 "NAME"
- FJN_air_warfare_theorist:0 "NAME"
- FJN_naval_theorist:0 "NAME"
- FJN_naval_aviation_pioneer:0 "NAME"
- FJN_victory_through_airpower:0 "NAME"
- FJN_nuclear_scientist:0 "NAME"
- FJN_rocket_scientist:0 "NAME"
+ FJN_military_theorist:0 "Christiaan Clemens Aaij"
+ FJN_air_warfare_theorist:0 "Lennard Pieter Assenberg"
+ FJN_naval_theorist:0 "Rokus H. Van der Venne"
  #military chiefs
- FJN_army_chief_defensive_2:0 "NAME"
- FJN_army_chief_drill_2:0 "NAME"
- FJN_army_chief_maneuver_2:0 "NAME"
- FJN_army_chief_morale_2:0 "NAME"
- FJN_army_chief_offensive_2:0 "NAME"
- FJN_army_chief_organizational_1:0 "NAME"
- FJN_navy_chief_decisive_battle_2:0 "NAME"
- FJN_navy_chief_naval_aviation_2:0 "NAME"
- FJN_air_chief_ground_support_2:0 "NAME"
- FJN_air_chief_reform_2:0 "NAME"
- FJN_army_armFJNd_1:0 "NAME"
- FJN_army_entrenchment_1:0 "NAME"
- FJN_army_infantry_1:0 "NAME"
- FJN_army_logistics_2:0 "NAME"
- FJN_air_bomber_interception_2:0 "NAME"
- FJN_air_close_air_support_2:0 "NAME"
- FJN_navy_screen_2:0 "NAME"
- FJN_navy_anti_submarine_1:0 "NAME"
- FJN_navy_naval_air_defense_2:0 "NAME"
+ FJN_army_chief_defensive_2:0 "Arjan Adriaan Teunissen"
+ FJN_army_chief_offensive_2:0 "Jodocus Wendel Klerkse"
+ FJN_army_chief_organizational_1:0 "Hendrik Lars Meeuwessen"
+ FJN_navy_chief_decisive_battle_2:0 "Beau Bartholomeus Smit"
+ FJN_navy_chief_naval_aviation_2:0 "Gijsbert Gerlof Agthoven"
+ FJN_air_chief_ground_support_2:0 "Melle Radboud Aalfs"
+ FJN_air_chief_reform_2:0 "Marinus Simon Bothe"
+ FJN_army_armored_1:0 "Steffen Rein Van Wegberg"
+ FJN_army_entrenchment_1:0 "Keano Jodocus Westenberg"
+ FJN_army_infantry_1:0 "Carel V. Reinders"
+ FJN_army_logistics_2:0 "Diederik Filip Ryskamp"
+ FJN_air_bomber_interception_2:0 "Joris Erwin Van Akkeren"
+ FJN_air_close_air_support_2:0 "Felix Samuel Koolen"
+ FJN_navy_screen_2:0 "Finn Sem Barends"
+ FJN_navy_anti_submarine_1:0 "Karel Adrichem"
+ FJN_navy_naval_air_defense_2:0 "Izaäk Arntzenius"
