--- a/localisation/FLM_l_english.yml
+++ b/localisation/FLM_l_english.yml
@@ -3,77 +3,77 @@
  #characters
  #political leaders
  FLM_conservatism_leader:0 "NAME"
- FLM_liberalism_leader:0 "NAME"
+ FLM_liberalism_leader:0 "Alan Milton"
  FLM_socialism_leader:0 "NAME"
- FLM_marxism_leader:0 "NAME"
+ FLM_marxism_leader:0 "Randal Bliss"
  FLM_leninism_leader:0 "NAME"
  FLM_stalinism_leader:0 "NAME"
  FLM_anti_revisionism_leader:0 "NAME"
  FLM_anarchist_communism_leader:0 "NAME"
  FLM_nazism_leader:0 "NAME"
  FLM_gen_nazism_leader:0 "NAME"
- FLM_generic_fascism_leader:0 "NAME"
+ FLM_generic_fascism_leader:0 "Theodore L. Pettiman"
  FLM_falangism_leader:0 "NAME"
  FLM_rexism_leader:0 "NAME"
  FLM_despotism_leader:0 "NAME"
  FLM_oligarchism_leader:0 "NAME"
  FLM_anarchism_leader:0 "NAME"
  FLM_moderatism_leader:0 "NAME"
- FLM_centrism_leader:0 "NAME"
+ FLM_centrism_leader:0 "Angus R. P. Endler"
  #military leaders
- FLM_corps_commander_1:0 "NAME"
- FLM_corps_commander_2:0 "NAME"
- FLM_corps_commander_3:0 "NAME"
- FLM_corps_commander_4:0 "NAME"
- FLM_naval_leader_1:0 "NAME"
- FLM_naval_leader_2:0 "NAME"
- FLM_naval_leader_3:0 "NAME"
- FLM_naval_leader_4:0 "NAME"
- FLM_naval_leader_5:0 "NAME"
+ FLM_corps_commander_1:0 "Kermit Trenton Mallory"
+ FLM_corps_commander_2:0 "Warner Barnabas Walmsley"
+ FLM_corps_commander_3:0 "Shanon Cade Hughes"
+ FLM_corps_commander_4:0 "Israel Hiram Poole"
+ FLM_naval_leader_1:0 "Channing Randall Platt"
+ FLM_naval_leader_2:0 "Hardy Kenyon Barnes"
+ FLM_naval_leader_3:0 "Grier Temple Smedley"
+ FLM_naval_leader_4:0 "Bryan Spencer Brassington"
+ FLM_naval_leader_5:0 "Niles Gideon Lum"
  #advisors
  FLM_anti_communist_crusader:0 "NAME"
  FLM_armaments_organizer:0 "NAME"
  FLM_backroom_backstabber:0 "NAME"
- FLM_captain_of_industry:0 "NAME"
- FLM_communist_revolutionary:0 "NAME"
+ FLM_captain_of_industry:0 "Dean Byron Judd"
+ FLM_communist_revolutionary:0 "Peyton Abram Parent"
  FLM_compassionate_gentleman:0 "NAME"
- FLM_democratic_reformer:0 "NAME"
+ FLM_democratic_reformer:0 "Joshua Whitaker"
  FLM_economist:0 "NAME"
  FLM_editor:0 "NAME"
- FLM_fascist_demagogue:0 "NAME"
+ FLM_fascist_demagogue:0 "Oakley L. Garrod"
  FLM_financial_expert:0 "NAME"
- FLM_head_of_intelligence:0 "NAME"
+ FLM_head_of_intelligence:0 "Oliver Rowen Rennell"
  FLM_ideological_crusader:0 "NAME"
- FLM_popular_figurehead:0 "NAME"
+ FLM_popular_figurehead:0 "Chandler Issac Mynatt"
  FLM_prince_of_terror:0 "NAME"
  FLM_silent_workhorse:0 "NAME"
  FLM_smooth_talking_charmer:0 "NAME"
- FLM_war_industrialist:0 "NAME"
+ FLM_war_industrialist:0 "Anton Kiefer Griffin"
  #theorists
- FLM_military_theorist:0 "NAME"
- FLM_air_warfare_theorist:0 "NAME"
- FLM_naval_theorist:0 "NAME"
+ FLM_military_theorist:0 "Samson Ross"
+ FLM_air_warfare_theorist:0 "Gladwin Pound"
+ FLM_naval_theorist:0 "Sydney Norwood-Kelsey"
  FLM_naval_aviation_pioneer:0 "NAME"
  FLM_victory_through_airpower:0 "NAME"
  FLM_nuclear_scientist:0 "NAME"
  FLM_rocket_scientist:0 "NAME"
  #military chiefs
- FLM_army_chief_defensive_2:0 "NAME"
+ FLM_army_chief_defensive_2:0 "Channing Sebastian Denman"
  FLM_army_chief_drill_2:0 "NAME"
  FLM_army_chief_maneuver_2:0 "NAME"
  FLM_army_chief_morale_2:0 "NAME"
- FLM_army_chief_offensive_2:0 "NAME"
+ FLM_army_chief_offensive_2:0 "Langdon Millhouse"
  FLM_army_chief_organizational_1:0 "NAME"
- FLM_navy_chief_decisive_battle_2:0 "NAME"
- FLM_navy_chief_naval_aviation_2:0 "NAME"
- FLM_air_chief_ground_support_2:0 "NAME"
- FLM_air_chief_reform_2:0 "NAME"
- FLM_army_armFLMd_1:0 "NAME"
+ FLM_navy_chief_decisive_battle_2:0 "Colbert Lachlan Blackburn"
+ FLM_navy_chief_naval_aviation_2:0 "Ulric Grey Hunt"
+ FLM_air_chief_ground_support_2:0 "Garland Gavin Darrell"
+ FLM_air_chief_reform_2:0 "Morgan Kirby"
+ FLM_army_armored_1:0 "NAME"
  FLM_army_entrenchment_1:0 "NAME"
- FLM_army_infantry_1:0 "NAME"
- FLM_army_logistics_2:0 "NAME"
- FLM_air_bomber_interception_2:0 "NAME"
- FLM_air_close_air_support_2:0 "NAME"
- FLM_navy_screen_2:0 "NAME"
+ FLM_army_infantry_1:0 "Hyrum Israel Francis"
+ FLM_army_logistics_2:0 "Howard Giles"
+ FLM_air_bomber_interception_2:0 "Percival Nowell Leavitt"
+ FLM_air_close_air_support_2:0 "Kennith Cummins"
+ FLM_navy_screen_2:0 "Malcom Alfred Fields"
  FLM_navy_anti_submarine_1:0 "NAME"
  FLM_navy_naval_air_defense_2:0 "NAME"
