--- a/localisation/GOP_l_english.yml
+++ b/localisation/GOP_l_english.yml
@@ -1,79 +1,50 @@
 ﻿l_english:
 
  #characters
- #political leaders
- GOP_conservatism_leader:0 "NAME"
- GOP_liberalism_leader:0 "NAME"
- GOP_socialism_leader:0 "NAME"
- GOP_marxism_leader:0 "NAME"
- GOP_leninism_leader:0 "NAME"
- GOP_stalinism_leader:0 "NAME"
- GOP_anti_revisionism_leader:0 "NAME"
- GOP_anarchist_communism_leader:0 "NAME"
- GOP_nazism_leader:0 "NAME"
- GOP_gen_nazism_leader:0 "NAME"
- GOP_generic_fascism_leader:0 "NAME"
- GOP_falangism_leader:0 "NAME"
- GOP_rexism_leader:0 "NAME"
- GOP_despotism_leader:0 "NAME"
- GOP_oligarchism_leader:0 "NAME"
- GOP_anarchism_leader:0 "NAME"
- GOP_moderatism_leader:0 "NAME"
- GOP_centrism_leader:0 "NAME"
- #military leaders
- GOP_corps_commander_1:0 "NAME"
- GOP_corps_commander_2:0 "NAME"
- GOP_corps_commander_3:0 "NAME"
- GOP_corps_commander_4:0 "NAME"
- GOP_naval_leader_1:0 "NAME"
- GOP_naval_leader_2:0 "NAME"
- GOP_naval_leader_3:0 "NAME"
- GOP_naval_leader_4:0 "NAME"
- GOP_naval_leader_5:0 "NAME"
- #advisors
- GOP_anti_communist_crusader:0 "NAME"
- GOP_armaments_organizer:0 "NAME"
- GOP_backroom_backstabber:0 "NAME"
- GOP_captain_of_industry:0 "NAME"
- GOP_communist_revolutionary:0 "NAME"
- GOP_compassionate_gentleman:0 "NAME"
- GOP_democratic_reformer:0 "NAME"
- GOP_economist:0 "NAME"
- GOP_editor:0 "NAME"
- GOP_fascist_demagogue:0 "NAME"
- GOP_financial_expert:0 "NAME"
- GOP_head_of_intelligence:0 "NAME"
- GOP_ideological_crusader:0 "NAME"
- GOP_popular_figurehead:0 "NAME"
- GOP_prince_of_terror:0 "NAME"
- GOP_silent_workhorse:0 "NAME"
- GOP_smooth_talking_charmer:0 "NAME"
- GOP_war_industrialist:0 "NAME"
- #theorists
- GOP_military_theorist:0 "NAME"
- GOP_air_warfare_theorist:0 "NAME"
- GOP_naval_theorist:0 "NAME"
- GOP_naval_aviation_pioneer:0 "NAME"
- GOP_victory_through_airpower:0 "NAME"
- GOP_nuclear_scientist:0 "NAME"
- GOP_rocket_scientist:0 "NAME"
- #military chiefs
- GOP_army_chief_defensive_2:0 "NAME"
- GOP_army_chief_drill_2:0 "NAME"
- GOP_army_chief_maneuver_2:0 "NAME"
- GOP_army_chief_morale_2:0 "NAME"
- GOP_army_chief_offensive_2:0 "NAME"
- GOP_army_chief_organizational_1:0 "NAME"
- GOP_navy_chief_decisive_battle_2:0 "NAME"
- GOP_navy_chief_naval_aviation_2:0 "NAME"
- GOP_air_chief_ground_support_2:0 "NAME"
- GOP_air_chief_reform_2:0 "NAME"
- GOP_army_armGOPd_1:0 "NAME"
- GOP_army_entrenchment_1:0 "NAME"
- GOP_army_infantry_1:0 "NAME"
- GOP_army_logistics_2:0 "NAME"
- GOP_air_bomber_interception_2:0 "NAME"
- GOP_air_close_air_support_2:0 "NAME"
- GOP_navy_screen_2:0 "NAME"
- GOP_navy_anti_submarine_1:0 "NAME"
- GOP_navy_naval_air_defense_2:0 "NAME"
+ GOP_letut_tsitlalli:0 "Tezvos Legtotir"
+ GOP_nuresaq_itlit:0 "Unsi Guqlir"
+ GOP_evrun_gahrijjeom:0 "Pundestit Aro"
+ GOP_murjiq_orqijun:0 "Legtot Gansor"
+ GOP_leimun_lumul:0 "Qevodijj Yadqaq"
+ GOP_dzam_jumrir:0 "Sejengu Entoq"
+ GOP_tanjiq_muhadow:0 "Datchot Itjir"
+ GOP_gurdurum_nalimtsi:0 "Utdambuq Qudlilli"
+ GOP_sayado_puulran:0 "Meyeg Encheng"
+ GOP_ezizi_gyulqun:0 "Pizvang Qadqadru"
+ GOP_midja_mahriq:0 "Giqi Metam"
+ GOP_fuusniq_aroqsats:0 "Qagwat Mamluyoq"
+ GOP_chameru_dahijjiq:0 "Sarong Qaqam"
+ GOP_ridjart_nahunmund:0 "Siveng Qimilla"
+ GOP_maigul_guruz:0 "Esulum Rashiq"
+ GOP_dzaris_tseminui:0 "Pemorel Gegbonus"
+ GOP_bargiz_defumun:0 "Tagwonqit Baqlan"
+ GOP_ergun_landiq:0 "Teldogaq Bansem"
+ GOP_guhalaq_jimurru:0 "Qavo Viyid"
+ GOP_bijjo_pundrapez:0 "Tensod Valuqur"
+ GOP_laqanziz_djuntsa:0 "Iqlula Etchujjim"
+ GOP_gadriz_dzulei:0 "Yagegto Luqan"
+ GOP_hobrair_qotarj:0 "Angayir Yegwing"
+ GOP_duqum_nietalli:0 "Batchasonaj Ubas"
+ GOP_dzin_tamisin:0 "Galama Qigte"
+ GOP_dzamiz_suzareq:0 "Ensogel Agbatud"
+ GOP_orutli_usamirez:0 "Mindeqo Pentoqi"
+ GOP_qunlunuq_irimudzu:0 "Sejinuq Bejat"
+ GOP_mairat_hyrden:0 "Aruqeq Vangeg"
+ GOP_lobur_dashim:0 "Benchom Idqiqig"
+ GOP_dzozef_magadi:0 "Sansan Qeveq"
+ GOP_pena_qimram:0 "Yimlana Izvustiq"
+ GOP_tonalu_zimsem:0 "Tener Latdesa"
+ GOP_hualpor_dusur:0 "Eqe Qendesar"
+ GOP_arpren_tsisram:0 "Quqlingu Pitdas"
+ GOP_gulaq_trasmidj:0 "Vudla Unsel"
+ GOP_enli_usasor:0 "Ange Judlil"
+ GOP_harul_ijjris:0 "Divaq Lagbising"
+ GOP_dzor_gindi:0 "Izvented Deyenqur"
+ GOP_dulutli_amerziad:0 "Vimuq Delati"
+ GOP_marejja_dzor:0 "Saqud Vilam"
+ GOP_hisqitla_manilli:0 "Dasar Ensoban"
+ GOP_gordnau_hajjise:0 "Tigtog Sayaq"
+ GOP_ahyumui_nendamru:0 "Vegar Igwit"
+ GOP_surumuj_anuasid:0 "Bumeco Evoq"
+ GOP_djrov_tsuus:0 "Ajjas Qijjad"
+ GOP_badtsiz_maldriave:0 "Qegtolog Aqe"
