--- a/localisation/HBO_l_english.yml
+++ b/localisation/HBO_l_english.yml
@@ -2,78 +2,42 @@
 
  #characters
  #political leaders
- HBO_conservatism_leader:0 "NAME"
- HBO_liberalism_leader:0 "NAME"
- HBO_socialism_leader:0 "NAME"
- HBO_marxism_leader:0 "NAME"
- HBO_leninism_leader:0 "NAME"
- HBO_stalinism_leader:0 "NAME"
- HBO_anti_revisionism_leader:0 "NAME"
- HBO_anarchist_communism_leader:0 "NAME"
- HBO_nazism_leader:0 "NAME"
- HBO_gen_nazism_leader:0 "NAME"
- HBO_generic_fascism_leader:0 "NAME"
- HBO_falangism_leader:0 "NAME"
- HBO_rexism_leader:0 "NAME"
- HBO_despotism_leader:0 "NAME"
- HBO_oligarchism_leader:0 "NAME"
- HBO_anarchism_leader:0 "NAME"
- HBO_moderatism_leader:0 "NAME"
- HBO_centrism_leader:0 "NAME"
+ HBO_socialism_leader:0 "Velko Pelikan"
+ HBO_stalinism_leader:0 "Grubisa Medvedyev"
+ HBO_generic_fascism_leader:0 "Obren Wilenken"
+ HBO_despotism_leader:0 "Cvjetko Sholokhov"
  #military leaders
- HBO_corps_commander_1:0 "NAME"
- HBO_corps_commander_2:0 "NAME"
- HBO_corps_commander_3:0 "NAME"
- HBO_corps_commander_4:0 "NAME"
- HBO_naval_leader_1:0 "NAME"
- HBO_naval_leader_2:0 "NAME"
- HBO_naval_leader_3:0 "NAME"
- HBO_naval_leader_4:0 "NAME"
- HBO_naval_leader_5:0 "NAME"
+ HBO_corps_commander_1:0 "Predrag Goncharov"
+ HBO_corps_commander_2:0 "Bogdan Sokoloff"
+ HBO_corps_commander_3:0 "Dusan Rabinovich"
+ HBO_corps_commander_4:0 "Zvezdelin Sevcenko"
+ HBO_naval_leader_1:0 "Milic Pivovarsky"
+ HBO_naval_leader_2:0 "Radomer Fontikov"
+ HBO_naval_leader_3:0 "Swietoslaw Siroky"
+ HBO_naval_leader_4:0 "Damek Jasienski"
+ HBO_naval_leader_5:0 "Milic Balabanov"
  #advisors
- HBO_anti_communist_crusader:0 "NAME"
- HBO_armaments_organizer:0 "NAME"
- HBO_backroom_backstabber:0 "NAME"
- HBO_captain_of_industry:0 "NAME"
- HBO_communist_revolutionary:0 "NAME"
- HBO_compassionate_gentleman:0 "NAME"
- HBO_democratic_reformer:0 "NAME"
- HBO_economist:0 "NAME"
- HBO_editor:0 "NAME"
- HBO_fascist_demagogue:0 "NAME"
- HBO_financial_expert:0 "NAME"
- HBO_head_of_intelligence:0 "NAME"
- HBO_ideological_crusader:0 "NAME"
- HBO_popular_figurehead:0 "NAME"
- HBO_prince_of_terror:0 "NAME"
- HBO_silent_workhorse:0 "NAME"
- HBO_smooth_talking_charmer:0 "NAME"
- HBO_war_industrialist:0 "NAME"
+ HBO_backroom_backstabber:0 "Wlodzimierz Jelen"
+ HBO_captain_of_industry:0 "Savo Slavik"
+ HBO_communist_revolutionary:0 "Slav Zhivkov"
+ HBO_democratic_reformer:0 "Neven Kratochwill"
+ HBO_fascist_demagogue:0 "Wlodzimierz Yellen"
+ HBO_prince_of_terror:0 "Drahomir Novakovic"
+ HBO_silent_workhorse:0 "Ventseslav Khomiakov"
  #theorists
- HBO_military_theorist:0 "NAME"
- HBO_air_warfare_theorist:0 "NAME"
- HBO_naval_theorist:0 "NAME"
- HBO_naval_aviation_pioneer:0 "NAME"
- HBO_victory_through_airpower:0 "NAME"
- HBO_nuclear_scientist:0 "NAME"
- HBO_rocket_scientist:0 "NAME"
+ HBO_military_theorist:0 "Bogdan Okiljivic"
+ HBO_air_warfare_theorist:0 "Slavoj Wallaschek"
+ HBO_naval_theorist:0 "Ratko Lovric"
  #military chiefs
- HBO_army_chief_defensive_2:0 "NAME"
- HBO_army_chief_drill_2:0 "NAME"
- HBO_army_chief_maneuver_2:0 "NAME"
- HBO_army_chief_morale_2:0 "NAME"
- HBO_army_chief_offensive_2:0 "NAME"
- HBO_army_chief_organizational_1:0 "NAME"
- HBO_navy_chief_decisive_battle_2:0 "NAME"
- HBO_navy_chief_naval_aviation_2:0 "NAME"
- HBO_air_chief_ground_support_2:0 "NAME"
- HBO_air_chief_reform_2:0 "NAME"
- HBO_army_armHBOd_1:0 "NAME"
- HBO_army_entrenchment_1:0 "NAME"
- HBO_army_infantry_1:0 "NAME"
- HBO_army_logistics_2:0 "NAME"
- HBO_air_bomber_interception_2:0 "NAME"
- HBO_air_close_air_support_2:0 "NAME"
- HBO_navy_screen_2:0 "NAME"
- HBO_navy_anti_submarine_1:0 "NAME"
- HBO_navy_naval_air_defense_2:0 "NAME"
+ HBO_army_chief_defensive_2:0 "Borivoj Slaviksky"
+ HBO_army_chief_offensive_2:0 "Drazan Bogatsch"
+ HBO_army_chief_organizational_1:0 "Plamen Ojdanic"
+ HBO_navy_chief_decisive_battle_2:0 "Cescimer Stassov"
+ HBO_navy_chief_naval_aviation_2:0 "Bohumer Kavka"
+ HBO_air_chief_ground_support_2:0 "Slavimir Smolensky"
+ HBO_air_chief_reform_2:0 "Vojteh Karolewski"
+ HBO_army_armored_1:0 "Velimir Novak"
+ HBO_army_entrenchment_1:0 "Krasimir Kokoschka"
+ HBO_air_bomber_interception_2:0 "Stanko Svoboda"
+ HBO_air_close_air_support_2:0 "Dragomir Sinowatz"
+ HBO_navy_screen_2:0 "Dejan Shevchenko"
