--- a/localisation/HOU_l_english.yml
+++ b/localisation/HOU_l_english.yml
@@ -1,4 +1,43 @@
 ﻿l_english:
+ 
+#military leaders
+ HOU_corps_commander_1:0 "Samuelu Tanielu"
+ HOU_corps_commander_2:0 "Kuresa Lotomau"
+ HOU_corps_commander_3:0 "Isaako Lea'ai"
+ HOU_corps_commander_4:0 "Falaniko Autagavaia"
+ HOU_naval_leader_1:0 "Aleki Foai"
+ HOU_naval_leader_2:0 "Iasona Leapai"
+ HOU_naval_leader_3:0 "Kaperielu Lemaota"
+ HOU_naval_leader_4:0 "Falelauli'i Ala'ilima"
+ HOU_naval_leader_5:0 "Kiliona Taupo"
+#advisors
+ HOU_armaments_organizer:0 "Malosi Isaia"
+ HOU_communist_revolutionary:0 "Iosefa Paea"
+ HOU_democratic_reformer:0 "Kalepo Lofipo"
+ HOU_fascist_demagogue:0 "Aneterea Salesa"
+ HOU_ideological_crusader:0 "Tataio Maulalo"
+ HOU_war_industrialist:0 "Pisa Tonumaipe'a"
+#theorists
+ HOU_military_theorist:0 "Apa Vavau"
+ HOU_air_warfare_theorist:0 "Falaniko Maugatai"
+ HOU_naval_theorist:0 "Kalepo'ihi Faiivae"
+#military chiefs
+ HOU_army_chief_defensive_2:0 "Apisaloma Savaliga"
+ HOU_army_chief_drill_2:0 "Mo'e Autagavaia"
+ HOU_navy_chief_decisive_battle_2:0 "Loto Tuiaa"
+ HOU_navy_chief_naval_aviation_2:0 "Siona Taualai"
+ HOU_air_chief_ground_support_2:0 "Vai Savea"
+ HOU_air_chief_reform_2:0 "Amosa Leoso"
+ HOU_army_armored_1:0 "Natano Afakasi"
+ HOU_army_entrenchment_1:0 "Hemana Pelesa"
+ HOU_army_infantry_1:0 "Omeri Suega"
+ HOU_air_bomber_interception_2:0 "Ualese Lotulelei"
+ HOU_air_close_air_support_2:0 "Vai Sapani"
+ HOU_navy_screen_2:0 "Falelauli'i Asoau"
+ 
+ 
+ 
+ 
  HOU_start:0 "Good Governance"
  HOU_strengthendemocracy:0 "Strengthen Democracy"
  HOU_weakendemocracy:0 "Weaken Democracy"
