--- a/localisation/IKA_l_english.yml
+++ b/localisation/IKA_l_english.yml
@@ -1,79 +1,26 @@
 ﻿l_english:
 
  #characters
- #political leaders
- IKA_conservatism_leader:0 "NAME"
- IKA_liberalism_leader:0 "NAME"
- IKA_socialism_leader:0 "NAME"
- IKA_marxism_leader:0 "NAME"
- IKA_leninism_leader:0 "NAME"
- IKA_stalinism_leader:0 "NAME"
- IKA_anti_revisionism_leader:0 "NAME"
- IKA_anarchist_communism_leader:0 "NAME"
- IKA_nazism_leader:0 "NAME"
- IKA_gen_nazism_leader:0 "NAME"
- IKA_generic_fascism_leader:0 "NAME"
- IKA_falangism_leader:0 "NAME"
- IKA_rexism_leader:0 "NAME"
- IKA_despotism_leader:0 "NAME"
- IKA_oligarchism_leader:0 "NAME"
- IKA_anarchism_leader:0 "NAME"
- IKA_moderatism_leader:0 "NAME"
- IKA_centrism_leader:0 "NAME"
- #military leaders
- IKA_corps_commander_1:0 "NAME"
- IKA_corps_commander_2:0 "NAME"
- IKA_corps_commander_3:0 "NAME"
- IKA_corps_commander_4:0 "NAME"
- IKA_naval_leader_1:0 "NAME"
- IKA_naval_leader_2:0 "NAME"
- IKA_naval_leader_3:0 "NAME"
- IKA_naval_leader_4:0 "NAME"
- IKA_naval_leader_5:0 "NAME"
- #advisors
- IKA_anti_communist_crusader:0 "NAME"
- IKA_armaments_organizer:0 "NAME"
- IKA_backroom_backstabber:0 "NAME"
- IKA_captain_of_industry:0 "NAME"
- IKA_communist_revolutionary:0 "NAME"
- IKA_compassionate_gentleman:0 "NAME"
- IKA_democratic_reformer:0 "NAME"
- IKA_economist:0 "NAME"
- IKA_editor:0 "NAME"
- IKA_fascist_demagogue:0 "NAME"
- IKA_financial_expert:0 "NAME"
- IKA_head_of_intelligence:0 "NAME"
- IKA_ideological_crusader:0 "NAME"
- IKA_popular_figurehead:0 "NAME"
- IKA_prince_of_terror:0 "NAME"
- IKA_silent_workhorse:0 "NAME"
- IKA_smooth_talking_charmer:0 "NAME"
- IKA_war_industrialist:0 "NAME"
- #theorists
- IKA_military_theorist:0 "NAME"
- IKA_air_warfare_theorist:0 "NAME"
- IKA_naval_theorist:0 "NAME"
- IKA_naval_aviation_pioneer:0 "NAME"
- IKA_victory_through_airpower:0 "NAME"
- IKA_nuclear_scientist:0 "NAME"
- IKA_rocket_scientist:0 "NAME"
- #military chiefs
- IKA_army_chief_defensive_2:0 "NAME"
- IKA_army_chief_drill_2:0 "NAME"
- IKA_army_chief_maneuver_2:0 "NAME"
- IKA_army_chief_morale_2:0 "NAME"
- IKA_army_chief_offensive_2:0 "NAME"
- IKA_army_chief_organizational_1:0 "NAME"
- IKA_navy_chief_decisive_battle_2:0 "NAME"
- IKA_navy_chief_naval_aviation_2:0 "NAME"
- IKA_air_chief_ground_support_2:0 "NAME"
- IKA_air_chief_reform_2:0 "NAME"
- IKA_army_armIKAd_1:0 "NAME"
- IKA_army_entrenchment_1:0 "NAME"
- IKA_army_infantry_1:0 "NAME"
- IKA_army_logistics_2:0 "NAME"
- IKA_air_bomber_interception_2:0 "NAME"
- IKA_air_close_air_support_2:0 "NAME"
- IKA_navy_screen_2:0 "NAME"
- IKA_navy_anti_submarine_1:0 "NAME"
- IKA_navy_naval_air_defense_2:0 "NAME"
+ IKA_mako_sau_la:0 "Mako Sau La"
+ IKA_haoena_takaloa:0 "Haoena Takaloa"
+ IKA_tobi_oriata:0 "Tobi Oriata"
+ IKA_uinirau_kaiwi:0 "Uinirau Kaiwi"
+ IKA_ruatapu_kamearoha:0 "Ruatapu Kamearoha"
+ IKA_kiwa_lani:0 "Kiwa Lani"
+ IKA_liko_rongo:0 "Liko Rongo"
+ IKA_ahuura_arana:0 "Ahu'ura Arana"
+ IKA_siaosi_kapule:0 "Sia'osi Kapule"
+ IKA_kekino_keahi:0 "Kekino Keahi"
+ IKA_rewi_kapure:0 "Rewi Kapure"
+ IKA_ura_hale:0 "Ura Hale"
+ IKA_uati_kahue:0 "Uati Kahue"
+ IKA_liona_kura:0 "Liona Kira"
+ IKA_pomare_hekekia:0 "Pomare Hekekia"
+ IKA_ahohako_maherona:0 "Ahohako Maherona"
+ IKA_rutu_iona:0 "Rutu Iona"
+ IKA_aalona_karama:0 "Aalona Karama"
+ IKA_keao_parakiko:0 "Keao Parakiko"
+ IKA_dawid_taaronga:0 "Dawid Taaronga"
+ IKA_kelekolio_kekoa:0 "Kelekolio Kekoa"
+ IKA_turoa_kahananui:0 "Turoa Kahananui"
+ IKA_kopaka_hine:0 "Kopaka Hine"
