--- a/localisation/KBS_l_english.yml
+++ b/localisation/KBS_l_english.yml
@@ -1,79 +1,54 @@
 ﻿l_english:
 
  #characters
- #political leaders
- KBS_conservatism_leader:0 "NAME"
- KBS_liberalism_leader:0 "NAME"
- KBS_socialism_leader:0 "NAME"
- KBS_marxism_leader:0 "NAME"
- KBS_leninism_leader:0 "NAME"
- KBS_stalinism_leader:0 "NAME"
- KBS_anti_revisionism_leader:0 "NAME"
- KBS_anarchist_communism_leader:0 "NAME"
- KBS_nazism_leader:0 "NAME"
- KBS_gen_nazism_leader:0 "NAME"
- KBS_generic_fascism_leader:0 "NAME"
- KBS_falangism_leader:0 "NAME"
- KBS_rexism_leader:0 "NAME"
- KBS_despotism_leader:0 "NAME"
- KBS_oligarchism_leader:0 "NAME"
- KBS_anarchism_leader:0 "NAME"
- KBS_moderatism_leader:0 "NAME"
- KBS_centrism_leader:0 "NAME"
  #military leaders
- KBS_corps_commander_1:0 "NAME"
- KBS_corps_commander_2:0 "NAME"
- KBS_corps_commander_3:0 "NAME"
- KBS_corps_commander_4:0 "NAME"
- KBS_naval_leader_1:0 "NAME"
- KBS_naval_leader_2:0 "NAME"
- KBS_naval_leader_3:0 "NAME"
- KBS_naval_leader_4:0 "NAME"
- KBS_naval_leader_5:0 "NAME"
+ KBS_corps_commander_1:0 "Druub Tab"
+ KBS_corps_commander_2:0 "Khukti Grukal"
+ KBS_corps_commander_3:0 "Auhgan Kog"
+ KBS_corps_commander_4:0 "Dergu Graman"
+ KBS_naval_leader_1:0 "Varfu Nurbag"
+ KBS_naval_leader_2:0 "Trugagh Ohomdud"
+ KBS_naval_leader_3:0 "Nagrub Verthurg"
+ KBS_naval_leader_4:0 "Hibub Urghat"
+ KBS_naval_leader_5:0 "Targigoth Inwaram"
  #advisors
- KBS_anti_communist_crusader:0 "NAME"
- KBS_armaments_organizer:0 "NAME"
- KBS_backroom_backstabber:0 "NAME"
- KBS_captain_of_industry:0 "NAME"
- KBS_communist_revolutionary:0 "NAME"
- KBS_compassionate_gentleman:0 "NAME"
- KBS_democratic_reformer:0 "NAME"
- KBS_economist:0 "NAME"
- KBS_editor:0 "NAME"
- KBS_fascist_demagogue:0 "NAME"
- KBS_financial_expert:0 "NAME"
- KBS_head_of_intelligence:0 "NAME"
- KBS_ideological_crusader:0 "NAME"
- KBS_popular_figurehead:0 "NAME"
- KBS_prince_of_terror:0 "NAME"
- KBS_silent_workhorse:0 "NAME"
- KBS_smooth_talking_charmer:0 "NAME"
- KBS_war_industrialist:0 "NAME"
- #theorists
- KBS_military_theorist:0 "NAME"
- KBS_air_warfare_theorist:0 "NAME"
- KBS_naval_theorist:0 "NAME"
- KBS_naval_aviation_pioneer:0 "NAME"
- KBS_victory_through_airpower:0 "NAME"
- KBS_nuclear_scientist:0 "NAME"
- KBS_rocket_scientist:0 "NAME"
+ KBS_armaments_organizer:0 "Viggu Ughatse"
+ KBS_communist_revolutionary:0 "Prigka Brokil"
+ KBS_democratic_reformer:0 "Krothu Nagra"
+ KBS_fascist_demagogue:0 "Entu Ryalzot"
  #military chiefs
- KBS_army_chief_defensive_2:0 "NAME"
- KBS_army_chief_drill_2:0 "NAME"
- KBS_army_chief_maneuver_2:0 "NAME"
- KBS_army_chief_morale_2:0 "NAME"
- KBS_army_chief_offensive_2:0 "NAME"
- KBS_army_chief_organizational_1:0 "NAME"
- KBS_navy_chief_decisive_battle_2:0 "NAME"
- KBS_navy_chief_naval_aviation_2:0 "NAME"
- KBS_air_chief_ground_support_2:0 "NAME"
- KBS_air_chief_reform_2:0 "NAME"
- KBS_army_armKBSd_1:0 "NAME"
- KBS_army_entrenchment_1:0 "NAME"
- KBS_army_infantry_1:0 "NAME"
- KBS_army_logistics_2:0 "NAME"
- KBS_air_bomber_interception_2:0 "NAME"
- KBS_air_close_air_support_2:0 "NAME"
- KBS_navy_screen_2:0 "NAME"
- KBS_navy_anti_submarine_1:0 "NAME"
- KBS_navy_naval_air_defense_2:0 "NAME"
+ KBS_army_chief_defensive_2:0 "Certer Echerrees"
+ KBS_army_chief_drill_2:0 "Kracub Yikax"
+ KBS_army_chief_maneuver_2:0 "Qikar Yeqtoq"
+ KBS_army_chief_morale_2:0 "Aiqzi Cesit"
+ KBS_army_chief_offensive_2:0 "Nekrex Cirzir"
+ KBS_army_chief_organizational_1:0 "Chairrociq Yaistitob"
+ KBS_navy_chief_decisive_battle_2:0 "Sikzube Sistat"
+ KBS_navy_chief_naval_aviation_2:0 "Choced Rezro"
+ KBS_air_chief_ground_support_2:0 "Aassob Rochu"
+ KBS_air_chief_reform_2:0 "Rherteeq Krerzir"
+ KBS_army_armored_1:0 "Qocab Chazrat"
+ KBS_army_entrenchment_1:0 "Rheeqintar Chasaq"
+ KBS_army_infantry_1:0 "Serteeb Zizarab"
+ KBS_army_logistics_2:0 "Cinchavai Sinticair"
+ KBS_air_bomber_interception_2:0 "Iazob Cheernorred"
+ KBS_air_close_air_support_2:0 "Rarkuchad Akzar"
+ KBS_navy_screen_2:0 "Ecar Srakziqe"
+ KBS_navy_anti_submarine_1:0 "Krecur Rhisiq"
+ KBS_navy_naval_air_defense_2:0 "Szanchu Corzeeq"
+ KBS_logistics_2:0 "Ailreqih Szeravel"
+ KBS_regrouping_2:0 "Qhovi Naksiqeh"
+ KBS_prince_of_terror:0 "Rialreezaq Rhavare"
+ KBS_ground_support_2:0 "Razo Qerneer"
+ KBS_maneuver_2:0 "Yanqu Ceket"
+ KBS_offensive_2:0 "Lesab Aisror"
+ KBS_defensive_2:0 "Sraazeer Chassies"
+ KBS_naval_theorist:0 "Khazixaa Khisrud"
+ KBS_mil_theorist:0 "Icu Rhexees"
+ KBS_air_theorist:0 "Kovrur Irrakou"
+ KBS_commerce_raiding_2:0 "Niasoq Qhichalloh"
+ KBS_backstabber:0 "Zhairiq Sintude"
+ KBS_night_ops_2:0 "Chaikir Silrar"
+ KBS_close_air_support_2:0 "Econ'qas Khartal"
+ KBS_quartermaster_gen:0 "Nertir  Qhekiq"
+ KBS_capital_ship_2:0 "Zocoqra Irror"
