--- a/localisation/KLK_l_english.yml
+++ b/localisation/KLK_l_english.yml
@@ -1,4 +1,42 @@
 ﻿l_english:
+#military leaders
+ KLK_corps_commander_1:0 "Dushan Chandrasiri"
+ KLK_corps_commander_2:0 "Gunathilake Kumarage"
+ KLK_corps_commander_3:0 "Saveen Perera"
+ KLK_corps_commander_4:0 "Ranasingha Illangasinghe"
+ KLK_naval_leader_1:0 "Thalagala Banda"
+ KLK_naval_leader_2:0 "Malith Jayawardena"
+ KLK_naval_leader_3:0 "Ravinath Nissanka"
+ KLK_naval_leader_4:0 "Duleepa Balasuriya"
+ KLK_naval_leader_5:0 "Harishchandra Jagath"
+#advisors
+ KLK_backroom_backstabber:0 "Mithuro Athulathmudali"
+ KLK_communist_revolutionary:0 "Udugampala Jayatilleka"
+ KLK_democratic_reformer:0 "Ganepola Vimukthi"
+ KLK_fascist_demagogue:0 "Ranga Obeysekera"
+ KLK_ideological_crusader:0 "Adikari Wijemanne"
+ KLK_popular_figurehead:0 "Maddumahewage Athulathmudali"
+ KLK_prince_of_terror:0 "Nanayakkara Dharmagunawardhana"
+#theorists
+ KLK_military_theorist:0 "Palitha Silu"
+ KLK_air_warfare_theorist:0 "Jayawickrama Sirisena"
+ KLK_naval_theorist:0 "Abeysinghe Karannagoda"
+#military chiefs
+ KLK_army_chief_defensive_2:0 "Ransara Jayewardene"
+ KLK_army_chief_drill_2:0 "Nishanga Jayasinghe"
+ KLK_navy_chief_decisive_battle_2:0 "Kapil Weeramantry"
+ KLK_navy_chief_naval_aviation_2:0 "Chanaka Wimaladharma"
+ KLK_air_chief_ground_support_2:0 "Sankalpa Bandaranayake"
+ KLK_air_chief_reform_2:0 "Neranjan Goonewardena"
+ KLK_army_armored_1:0 "Gunatilleka Nissanka"
+ KLK_army_entrenchment_1:0 "Nalaka Dissanayake"
+ KLK_army_infantry_1:0 "Jayampathi Gamage"
+ KLK_army_logistics_2:0 "Deshan Abeyesundere"
+ KLK_air_bomber_interception_2:0 "Jayaranga Weerasekara"
+ KLK_air_close_air_support_2:0 "Karunathilaka Medhalankara"
+ KLK_navy_screen_2:0 "Herath Kumaratunga"
+
+
  KLK_main:0 "Encroaching Capitalists"
  KLK_main_desc:0 "The worldwide economic collapse has left us nearly defenseless against the corporate bullies and vultures of the world. Our economy must be strengthened to rebuff the rapacious capitalists!"
  KLK_oligarchy:0 "Invite the Companies"
