--- a/localisation/MCH_l_english.yml
+++ b/localisation/MCH_l_english.yml
@@ -1,79 +1,60 @@
 ﻿l_english:
 
  #characters
- #political leaders
- MCH_conservatism_leader:0 "NAME"
- MCH_liberalism_leader:0 "NAME"
- MCH_socialism_leader:0 "NAME"
- MCH_marxism_leader:0 "NAME"
- MCH_leninism_leader:0 "NAME"
- MCH_stalinism_leader:0 "NAME"
- MCH_anti_revisionism_leader:0 "NAME"
- MCH_anarchist_communism_leader:0 "NAME"
- MCH_nazism_leader:0 "NAME"
- MCH_gen_nazism_leader:0 "NAME"
- MCH_generic_fascism_leader:0 "NAME"
- MCH_falangism_leader:0 "NAME"
- MCH_rexism_leader:0 "NAME"
- MCH_despotism_leader:0 "NAME"
- MCH_oligarchism_leader:0 "NAME"
- MCH_anarchism_leader:0 "NAME"
- MCH_moderatism_leader:0 "NAME"
- MCH_centrism_leader:0 "NAME"
  #military leaders
- MCH_corps_commander_1:0 "NAME"
- MCH_corps_commander_2:0 "NAME"
- MCH_corps_commander_3:0 "NAME"
- MCH_corps_commander_4:0 "NAME"
- MCH_naval_leader_1:0 "NAME"
- MCH_naval_leader_2:0 "NAME"
- MCH_naval_leader_3:0 "NAME"
- MCH_naval_leader_4:0 "NAME"
- MCH_naval_leader_5:0 "NAME"
+ MCH_corps_commander_1:0 "Noham Napoléon Lévesque"
+ MCH_corps_commander_2:0 "Ange Lucrèce Maçon"
+ MCH_corps_commander_3:0 "Joseph Sixte Duchamp"
+ MCH_corps_commander_4:0 "Ronan Vital Sergeant"
+ MCH_naval_leader_1:0 "Raymond Masson"
+ MCH_naval_leader_2:0 "Émile Marius Arthur"
+ MCH_naval_leader_3:0 "Amédée Auguste Firmin"
+ MCH_naval_leader_4:0 "Maurice Fabien Chauvin"
+ MCH_naval_leader_5:0 "Camille Geoffroy Delacroix"
  #advisors
  MCH_anti_communist_crusader:0 "NAME"
- MCH_armaments_organizer:0 "NAME"
- MCH_backroom_backstabber:0 "NAME"
- MCH_captain_of_industry:0 "NAME"
- MCH_communist_revolutionary:0 "NAME"
+ MCH_armaments_organizer:0 "Richard Barthélémy Voclain"
+ MCH_backroom_backstabber:0 "Valère Léo Jacques"
+ MCH_captain_of_industry:0 "Jocelin Cyril Dupond"
+ MCH_communist_revolutionary:0 "Dorian Albin Chaput"
  MCH_compassionate_gentleman:0 "NAME"
- MCH_democratic_reformer:0 "NAME"
+ MCH_democratic_reformer:0 "Joseph Gaston Droit"
  MCH_economist:0 "NAME"
  MCH_editor:0 "NAME"
- MCH_fascist_demagogue:0 "NAME"
+ MCH_fascist_demagogue:0 "Éloi Amédée Lécuyer"
  MCH_financial_expert:0 "NAME"
  MCH_head_of_intelligence:0 "NAME"
  MCH_ideological_crusader:0 "NAME"
  MCH_popular_figurehead:0 "NAME"
  MCH_prince_of_terror:0 "NAME"
- MCH_silent_workhorse:0 "NAME"
+ MCH_silent_workhorse:0 "Renard Clément"
  MCH_smooth_talking_charmer:0 "NAME"
  MCH_war_industrialist:0 "NAME"
  #theorists
- MCH_military_theorist:0 "NAME"
- MCH_air_warfare_theorist:0 "NAME"
- MCH_naval_theorist:0 "NAME"
+ MCH_military_theorist:0 "Henri Benjamin Boucher"
+ MCH_air_warfare_theorist:0 "Lambert Raoul Lucas"
+ MCH_naval_theorist:0 "Loïc Corneille Moulin"
  MCH_naval_aviation_pioneer:0 "NAME"
  MCH_victory_through_airpower:0 "NAME"
  MCH_nuclear_scientist:0 "NAME"
  MCH_rocket_scientist:0 "NAME"
  #military chiefs
- MCH_army_chief_defensive_2:0 "NAME"
- MCH_army_chief_drill_2:0 "NAME"
- MCH_army_chief_maneuver_2:0 "NAME"
+ MCH_army_chief_defensive_2:0 "Césaire Gilles Rey"
+ MCH_army_chief_drill_2:0 "Anselme Matis Rousseau"
+ MCH_army_chief_maneuver_2:0 "Marius Constantin Philippe"
  MCH_army_chief_morale_2:0 "NAME"
  MCH_army_chief_offensive_2:0 "NAME"
  MCH_army_chief_organizational_1:0 "NAME"
- MCH_navy_chief_decisive_battle_2:0 "NAME"
- MCH_navy_chief_naval_aviation_2:0 "NAME"
- MCH_air_chief_ground_support_2:0 "NAME"
- MCH_air_chief_reform_2:0 "NAME"
- MCH_army_armMCHd_1:0 "NAME"
+ MCH_navy_chief_decisive_battle_2:0 "Benoît Gaultier Fabre"
+ MCH_navy_chief_naval_aviation_2:0 "Mickaël Fulbert Robert"
+ MCH_air_chief_ground_support_2:0 "Cédric Aaron Géroux"
+ MCH_air_chief_reform_2:0 "Hector Timothé Lévesque"
+ MCH_army_armored_1:0 "NAME"
  MCH_army_entrenchment_1:0 "NAME"
- MCH_army_infantry_1:0 "NAME"
- MCH_army_logistics_2:0 "NAME"
- MCH_air_bomber_interception_2:0 "NAME"
- MCH_air_close_air_support_2:0 "NAME"
- MCH_navy_screen_2:0 "NAME"
- MCH_navy_anti_submarine_1:0 "NAME"
+ MCH_army_infantry_1:0 "Grégory Césaire Marin"
+ MCH_army_logistics_2:0 "Sohan Calixte Duguay"
+ MCH_air_bomber_interception_2:0 "Bruno Anatole Nicolas"
+ MCH_air_close_air_support_2:0 "Zacharie Edmond Jacques"
+ MCH_navy_screen_2:0 "Ghislain Sartre"
+ MCH_navy_anti_submarine_1:0 "Bertrand Pascal Courtemanche"
  MCH_navy_naval_air_defense_2:0 "NAME"
