--- a/localisation/MNU_l_english.yml
+++ b/localisation/MNU_l_english.yml
@@ -1,79 +1,30 @@
 ﻿l_english:
 
  #characters
- #political leaders
- MNU_conservatism_leader:0 "NAME"
- MNU_liberalism_leader:0 "NAME"
- MNU_socialism_leader:0 "NAME"
- MNU_marxism_leader:0 "NAME"
- MNU_leninism_leader:0 "NAME"
- MNU_stalinism_leader:0 "NAME"
- MNU_anti_revisionism_leader:0 "NAME"
- MNU_anarchist_communism_leader:0 "NAME"
- MNU_nazism_leader:0 "NAME"
- MNU_gen_nazism_leader:0 "NAME"
- MNU_generic_fascism_leader:0 "NAME"
- MNU_falangism_leader:0 "NAME"
- MNU_rexism_leader:0 "NAME"
- MNU_despotism_leader:0 "NAME"
- MNU_oligarchism_leader:0 "NAME"
- MNU_anarchism_leader:0 "NAME"
- MNU_moderatism_leader:0 "NAME"
- MNU_centrism_leader:0 "NAME"
  #military leaders
- MNU_corps_commander_1:0 "NAME"
- MNU_corps_commander_2:0 "NAME"
- MNU_corps_commander_3:0 "NAME"
- MNU_corps_commander_4:0 "NAME"
- MNU_naval_leader_1:0 "NAME"
- MNU_naval_leader_2:0 "NAME"
- MNU_naval_leader_3:0 "NAME"
- MNU_naval_leader_4:0 "NAME"
- MNU_naval_leader_5:0 "NAME"
- #advisors
- MNU_anti_communist_crusader:0 "NAME"
- MNU_armaments_organizer:0 "NAME"
- MNU_backroom_backstabber:0 "NAME"
- MNU_captain_of_industry:0 "NAME"
- MNU_communist_revolutionary:0 "NAME"
- MNU_compassionate_gentleman:0 "NAME"
- MNU_democratic_reformer:0 "NAME"
- MNU_economist:0 "NAME"
- MNU_editor:0 "NAME"
- MNU_fascist_demagogue:0 "NAME"
- MNU_financial_expert:0 "NAME"
- MNU_head_of_intelligence:0 "NAME"
- MNU_ideological_crusader:0 "NAME"
- MNU_popular_figurehead:0 "NAME"
- MNU_prince_of_terror:0 "NAME"
- MNU_silent_workhorse:0 "NAME"
- MNU_smooth_talking_charmer:0 "NAME"
- MNU_war_industrialist:0 "NAME"
- #theorists
- MNU_military_theorist:0 "NAME"
- MNU_air_warfare_theorist:0 "NAME"
- MNU_naval_theorist:0 "NAME"
- MNU_naval_aviation_pioneer:0 "NAME"
- MNU_victory_through_airpower:0 "NAME"
- MNU_nuclear_scientist:0 "NAME"
- MNU_rocket_scientist:0 "NAME"
- #military chiefs
- MNU_army_chief_defensive_2:0 "NAME"
- MNU_army_chief_drill_2:0 "NAME"
- MNU_army_chief_maneuver_2:0 "NAME"
- MNU_army_chief_morale_2:0 "NAME"
- MNU_army_chief_offensive_2:0 "NAME"
- MNU_army_chief_organizational_1:0 "NAME"
- MNU_navy_chief_decisive_battle_2:0 "NAME"
- MNU_navy_chief_naval_aviation_2:0 "NAME"
- MNU_air_chief_ground_support_2:0 "NAME"
- MNU_air_chief_reform_2:0 "NAME"
- MNU_army_armMNUd_1:0 "NAME"
- MNU_army_entrenchment_1:0 "NAME"
- MNU_army_infantry_1:0 "NAME"
- MNU_army_logistics_2:0 "NAME"
- MNU_air_bomber_interception_2:0 "NAME"
- MNU_air_close_air_support_2:0 "NAME"
- MNU_navy_screen_2:0 "NAME"
- MNU_navy_anti_submarine_1:0 "NAME"
- MNU_navy_naval_air_defense_2:0 "NAME"
+ MNU_corps_commander_1:0 "Reinhard Hoffmann"
+ MNU_corps_commander_2:0 "Gunther Egon Meindl"
+ MNU_corps_commander_3:0 "Reto Breisacher"
+ MNU_corps_commander_4:0 "Ferdi Greenberg"
+ MNU_naval_leader_1:0 "Dietfried Lenz Everhart"
+ MNU_naval_leader_2:0 "Moritz Hilbert Walter"
+ MNU_naval_leader_3:0 "Gerfried Thomas"
+ MNU_naval_leader_4:0 "Detlef Rochus Dittmar"
+ MNU_naval_leader_5:0 "Utz Pfeiffer"
+ MNU_julius_raab:0 "Julius Raab"
+ MNU_leopold_figl:0 "Leopold Figl"
+ MNU_josef_teufl:0 "Josef Teufl"
+ MNU_eugen_beyer:0 "Eugen Beyer"
+ MNU_lothar_rendulic:0 "Lothar Rendulic"
+ MNU_otto_schobel:0 "Otto Schobel"
+ MNU_viktor_seebauer:0 "Viktor Seebauer"
+ MNU_arthur_seyss_inquart:0 "Artur Seyss-Inquart"
+ MNU_julius_yllam:0 "Julius Yllam"
+ MNU_odilo_globocnik:0 "Odlio Globocnik"
+ MNU_paul_von_hegedus:0 "Paul von Hegedus"
+ MNU_otto_meixner_von_zweienstamm:0 "Otto Meixner von Zeienstaam"
+ MNU_eduard_freiherr:0 "Eduard Freiherr"
+ MNU_franz_bohme:0 "Franz Bohme"
+ MNU_wilhelm_zehner:0 "Wilhelm Zehner"
+ MNU_alexander_lohr:0 "Alexander Lohr"
+ MNU_ernst_kaltenbrunner:0 "Ernst Kaltenbrunner"
