--- a/localisation/NHI_l_english.yml
+++ b/localisation/NHI_l_english.yml
@@ -4,76 +4,76 @@
  #political leaders
  NHI_conservatism_leader:0 "NAME"
  NHI_liberalism_leader:0 "NAME"
- NHI_socialism_leader:0 "NAME"
+ NHI_socialism_leader:0 "Jemmy Wisdom Ryder"
  NHI_marxism_leader:0 "NAME"
- NHI_leninism_leader:0 "NAME"
+ NHI_leninism_leader:0 "Cullen Vincent Oliverson"
  NHI_stalinism_leader:0 "NAME"
  NHI_anti_revisionism_leader:0 "NAME"
  NHI_anarchist_communism_leader:0 "NAME"
  NHI_nazism_leader:0 "NAME"
  NHI_gen_nazism_leader:0 "NAME"
- NHI_generic_fascism_leader:0 "NAME"
+ NHI_generic_fascism_leader:0 "Chuck Sterling Marshall"
  NHI_falangism_leader:0 "NAME"
  NHI_rexism_leader:0 "NAME"
  NHI_despotism_leader:0 "NAME"
  NHI_oligarchism_leader:0 "NAME"
  NHI_anarchism_leader:0 "NAME"
- NHI_moderatism_leader:0 "NAME"
+ NHI_moderatism_leader:0 "Case Tyron Brewster"
  NHI_centrism_leader:0 "NAME"
  #military leaders
- NHI_corps_commander_1:0 "NAME"
- NHI_corps_commander_2:0 "NAME"
- NHI_corps_commander_3:0 "NAME"
- NHI_corps_commander_4:0 "NAME"
- NHI_naval_leader_1:0 "NAME"
- NHI_naval_leader_2:0 "NAME"
- NHI_naval_leader_3:0 "NAME"
- NHI_naval_leader_4:0 "NAME"
- NHI_naval_leader_5:0 "NAME"
+ NHI_corps_commander_1:0 "Quinten Merle Crouch"
+ NHI_corps_commander_2:0 "Conrad Strong"
+ NHI_corps_commander_3:0 "Giffard Vaughn Huxtable"
+ NHI_corps_commander_4:0 "Paul Edward Stafford"
+ NHI_naval_leader_1:0 "Arlo Maximilian Horne"
+ NHI_naval_leader_2:0 "Trace Emil Lowry"
+ NHI_naval_leader_3:0 "Earle Cheyenne Fairclough"
+ NHI_naval_leader_4:0 "Steven Ayers"
+ NHI_naval_leader_5:0 "Tad Montague Jepson"
  #advisors
  NHI_anti_communist_crusader:0 "NAME"
  NHI_armaments_organizer:0 "NAME"
- NHI_backroom_backstabber:0 "NAME"
- NHI_captain_of_industry:0 "NAME"
- NHI_communist_revolutionary:0 "NAME"
+ NHI_backroom_backstabber:0 "Brion Russell"
+ NHI_captain_of_industry:0 "Nigel F. Hanley"
+ NHI_communist_revolutionary:0 "E. Gervase Moss"
  NHI_compassionate_gentleman:0 "NAME"
- NHI_democratic_reformer:0 "NAME"
+ NHI_democratic_reformer:0 "Kiefer R. Addison"
  NHI_economist:0 "NAME"
  NHI_editor:0 "NAME"
- NHI_fascist_demagogue:0 "NAME"
+ NHI_fascist_demagogue:0 "Oakley J. Upton"
  NHI_financial_expert:0 "NAME"
  NHI_head_of_intelligence:0 "NAME"
  NHI_ideological_crusader:0 "NAME"
  NHI_popular_figurehead:0 "NAME"
- NHI_prince_of_terror:0 "NAME"
+ NHI_prince_of_terror:0 "Jeffery Blaze Treloar"
  NHI_silent_workhorse:0 "NAME"
  NHI_smooth_talking_charmer:0 "NAME"
  NHI_war_industrialist:0 "NAME"
  #theorists
- NHI_military_theorist:0 "NAME"
- NHI_air_warfare_theorist:0 "NAME"
- NHI_naval_theorist:0 "NAME"
+ NHI_military_theorist:0 "Percy Forrest Garnett"
+ NHI_air_warfare_theorist:0 "Christian Beau Warner"
+ NHI_naval_theorist:0 "Reed Shayne Giles"
  NHI_naval_aviation_pioneer:0 "NAME"
  NHI_victory_through_airpower:0 "NAME"
  NHI_nuclear_scientist:0 "NAME"
  NHI_rocket_scientist:0 "NAME"
  #military chiefs
- NHI_army_chief_defensive_2:0 "NAME"
- NHI_army_chief_drill_2:0 "NAME"
+ NHI_army_chief_defensive_2:0 "Quincy Cleveland Leighton"
+ NHI_army_chief_drill_2:0 "Tyrell Winton Hathaway"
  NHI_army_chief_maneuver_2:0 "NAME"
  NHI_army_chief_morale_2:0 "NAME"
  NHI_army_chief_offensive_2:0 "NAME"
  NHI_army_chief_organizational_1:0 "NAME"
- NHI_navy_chief_decisive_battle_2:0 "NAME"
- NHI_navy_chief_naval_aviation_2:0 "NAME"
- NHI_air_chief_ground_support_2:0 "NAME"
- NHI_air_chief_reform_2:0 "NAME"
- NHI_army_armNHId_1:0 "NAME"
+ NHI_navy_chief_decisive_battle_2:0 "Crispian Tylor Traylor"
+ NHI_navy_chief_naval_aviation_2:0 "Notah Foster Rake"
+ NHI_air_chief_ground_support_2:0 "Harold Eben Farnham"
+ NHI_air_chief_reform_2:0 "Jace Dean Adamson"
+ NHI_army_armored_1:0 "NAME"
  NHI_army_entrenchment_1:0 "NAME"
  NHI_army_infantry_1:0 "NAME"
- NHI_army_logistics_2:0 "NAME"
- NHI_air_bomber_interception_2:0 "NAME"
- NHI_air_close_air_support_2:0 "NAME"
- NHI_navy_screen_2:0 "NAME"
- NHI_navy_anti_submarine_1:0 "NAME"
+ NHI_army_logistics_2:0 "Kendal Matthew Windsor"
+ NHI_air_bomber_interception_2:0 "Roman Grover Alfredson"
+ NHI_air_close_air_support_2:0 "Caleb Thorley Haley"
+ NHI_navy_screen_2:0 "Greg Cuthbert Spooner"
+ NHI_navy_anti_submarine_1:0 "Rodger Elwood Eldridge"
  NHI_navy_naval_air_defense_2:0 "NAME"
