--- a/localisation/ORE_l_english.yml
+++ b/localisation/ORE_l_english.yml
@@ -3,77 +3,77 @@
  #characters
  #political leaders
  ORE_conservatism_leader:0 "NAME"
- ORE_liberalism_leader:0 "NAME"
+ ORE_liberalism_leader:0 "Jeremiah Morton"
  ORE_socialism_leader:0 "NAME"
  ORE_marxism_leader:0 "NAME"
- ORE_leninism_leader:0 "NAME"
+ ORE_leninism_leader:0 "Rodger J. Badcock"
  ORE_stalinism_leader:0 "NAME"
  ORE_anti_revisionism_leader:0 "NAME"
  ORE_anarchist_communism_leader:0 "NAME"
  ORE_nazism_leader:0 "NAME"
- ORE_gen_nazism_leader:0 "NAME"
+ ORE_gen_nazism_leader:0 "Grady N. Sawyer"
  ORE_generic_fascism_leader:0 "NAME"
  ORE_falangism_leader:0 "NAME"
  ORE_rexism_leader:0 "NAME"
  ORE_despotism_leader:0 "NAME"
  ORE_oligarchism_leader:0 "NAME"
  ORE_anarchism_leader:0 "NAME"
- ORE_moderatism_leader:0 "NAME"
+ ORE_moderatism_leader:0 "Daniel Ty Dodge"
  ORE_centrism_leader:0 "NAME"
  #military leaders
- ORE_corps_commander_1:0 "NAME"
- ORE_corps_commander_2:0 "NAME"
- ORE_corps_commander_3:0 "NAME"
- ORE_corps_commander_4:0 "NAME"
- ORE_naval_leader_1:0 "NAME"
- ORE_naval_leader_2:0 "NAME"
- ORE_naval_leader_3:0 "NAME"
- ORE_naval_leader_4:0 "NAME"
- ORE_naval_leader_5:0 "NAME"
+ ORE_corps_commander_1:0 "Andreas Linford Penn"
+ ORE_corps_commander_2:0 "Cade Bertrand Borg"
+ ORE_corps_commander_3:0 "Kennedy Mitchell"
+ ORE_corps_commander_4:0 "Gresham S. Dexter"
+ ORE_naval_leader_1:0 "X. Vilhelm Parks"
+ ORE_naval_leader_2:0 "Edgar Dedrick"
+ ORE_naval_leader_3:0 "Trey Gord-Hawk"
+ ORE_naval_leader_4:0 "Ernst K. Trent"
+ ORE_naval_leader_5:0 "Thorley Oswald Ahlstrom"
  #advisors
  ORE_anti_communist_crusader:0 "NAME"
- ORE_armaments_organizer:0 "NAME"
- ORE_backroom_backstabber:0 "NAME"
- ORE_captain_of_industry:0 "NAME"
- ORE_communist_revolutionary:0 "NAME"
+ ORE_armaments_organizer:0 "Upton Patterson"
+ ORE_backroom_backstabber:0 "Elvis K. Sjoberg"
+ ORE_captain_of_industry:0 "Franklin Giles Bergfalk"
+ ORE_communist_revolutionary:0 "Kaleb Wilkie"
  ORE_compassionate_gentleman:0 "NAME"
- ORE_democratic_reformer:0 "NAME"
+ ORE_democratic_reformer:0 "Vincent Joseph Kavanaugh"
  ORE_economist:0 "NAME"
  ORE_editor:0 "NAME"
- ORE_fascist_demagogue:0 "NAME"
+ ORE_fascist_demagogue:0 "Victor A. Radclyffe"
  ORE_financial_expert:0 "NAME"
  ORE_head_of_intelligence:0 "NAME"
- ORE_ideological_crusader:0 "NAME"
- ORE_popular_figurehead:0 "NAME"
- ORE_prince_of_terror:0 "NAME"
- ORE_silent_workhorse:0 "NAME"
+ ORE_ideological_crusader:0 "Merv G. Seymour"
+ ORE_popular_figurehead:0 "Alvin Gunner Carl"
+ ORE_prince_of_terror:0 "Stacey P. Alan"
+ ORE_silent_workhorse:0 "Alger Seachnall"
  ORE_smooth_talking_charmer:0 "NAME"
  ORE_war_industrialist:0 "NAME"
  #theorists
- ORE_military_theorist:0 "NAME"
- ORE_air_warfare_theorist:0 "NAME"
- ORE_naval_theorist:0 "NAME"
- ORE_naval_aviation_pioneer:0 "NAME"
+ ORE_military_theorist:0 "Faron C. Carman"
+ ORE_air_warfare_theorist:0 "Kaden Farrell"
+ ORE_naval_theorist:0 "Emmett Fredrik"
+ ORE_naval_aviation_pioneer:0 "Gerhard Joiner"
  ORE_victory_through_airpower:0 "NAME"
  ORE_nuclear_scientist:0 "NAME"
  ORE_rocket_scientist:0 "NAME"
  #military chiefs
- ORE_army_chief_defensive_2:0 "NAME"
- ORE_army_chief_drill_2:0 "NAME"
- ORE_army_chief_maneuver_2:0 "NAME"
+ ORE_army_chief_defensive_2:0 "William Zane Jameson"
+ ORE_army_chief_drill_2:0 "Alvin Walsh"
+ ORE_army_chief_maneuver_2:0 "Tobias Albinson"
  ORE_army_chief_morale_2:0 "NAME"
  ORE_army_chief_offensive_2:0 "NAME"
  ORE_army_chief_organizational_1:0 "NAME"
- ORE_navy_chief_decisive_battle_2:0 "NAME"
- ORE_navy_chief_naval_aviation_2:0 "NAME"
- ORE_air_chief_ground_support_2:0 "NAME"
- ORE_air_chief_reform_2:0 "NAME"
+ ORE_navy_chief_decisive_battle_2:0 "Lucius 'Spike' Mayer"
+ ORE_navy_chief_naval_aviation_2:0 "Collin Darragh"
+ ORE_air_chief_ground_support_2:0 "Liam H. Elwood"
+ ORE_air_chief_reform_2:0 "Nicolas R. Hoggard"
  ORE_army_armored_1:0 "NAME"
  ORE_army_entrenchment_1:0 "NAME"
- ORE_army_infantry_1:0 "NAME"
- ORE_army_logistics_2:0 "NAME"
- ORE_air_bomber_interception_2:0 "NAME"
- ORE_air_close_air_support_2:0 "NAME"
- ORE_navy_screen_2:0 "NAME"
- ORE_navy_anti_submarine_1:0 "NAME"
+ ORE_army_infantry_1:0 "Topher Milian Jordan"
+ ORE_army_logistics_2:0 "Kelsey D. Matsson"
+ ORE_air_bomber_interception_2:0 "Bernard G. Heffernan"
+ ORE_air_close_air_support_2:0 "Lukas Brannon MacKay"
+ ORE_navy_screen_2:0 "John Paul Madden"
+ ORE_navy_anti_submarine_1:0 "Clint S. Tatton"
  ORE_navy_naval_air_defense_2:0 "NAME"
