--- a/localisation/SCH_l_english.yml
+++ b/localisation/SCH_l_english.yml
@@ -1,58 +1,58 @@
 ﻿l_english:
  #military leaders
- SCH_corps_commander_1:0 "NAME"
- SCH_corps_commander_2:0 "NAME"
- SCH_corps_commander_3:0 "NAME"
- SCH_corps_commander_4:0 "NAME"
- SCH_naval_leader_1:0 "NAME"
- SCH_naval_leader_2:0 "NAME"
- SCH_naval_leader_3:0 "NAME"
- SCH_naval_leader_4:0 "NAME"
- SCH_naval_leader_5:0 "NAME"
+ SCH_corps_commander_1:0 "Viktor Markus Dittmar"
+ SCH_corps_commander_2:0 "Werner Heiner Gerver"
+ SCH_corps_commander_3:0 "Ralf B. Hintzen"
+ SCH_corps_commander_4:0 "Koloman Jochim Spannagel"
+ SCH_naval_leader_1:0 "Laurenz Timo Schultheiß"
+ SCH_naval_leader_2:0 "Wetzel Manfried Fiedler"
+ SCH_naval_leader_3:0 "Berthold Daniel Messmann"
+ SCH_naval_leader_4:0 "Gerhard Waldemar Melsbach"
+ SCH_naval_leader_5:0 "Barnabas Franz Xaver Raskopf"
  #advisors
  SCH_anti_communist_crusader:0 "NAME"
- SCH_armaments_organizer:0 "NAME"
- SCH_backroom_backstabber:0 "NAME"
- SCH_captain_of_industry:0 "NAME"
- SCH_communist_revolutionary:0 "NAME"
+ SCH_armaments_organizer:0 "Rüdi Dietrich Gruber"
+ SCH_backroom_backstabber:0 "Leopold Carl"
+ SCH_captain_of_industry:0 "Horst Salomon"
+ SCH_communist_revolutionary:0 "Hubertus Gero Schreck"
  SCH_compassionate_gentleman:0 "NAME"
- SCH_democratic_reformer:0 "NAME"
+ SCH_democratic_reformer:0 "Marvin Claus Jung"
  SCH_economist:0 "NAME"
  SCH_editor:0 "NAME"
- SCH_fascist_demagogue:0 "NAME"
- SCH_financial_expert:0 "NAME"
+ SCH_fascist_demagogue:0 "Clemens Albrecht Southers"
+ SCH_financial_expert:0 "Aaron Dennis Glöckner"
  SCH_head_of_intelligence:0 "NAME"
- SCH_ideological_crusader:0 "NAME"
- SCH_popular_figurehead:0 "NAME"
+ SCH_ideological_crusader:0 "Nicolaus Vinzenz Jans"
+ SCH_popular_figurehead:0 "Helmut Reinhardt Kempf"
  SCH_prince_of_terror:0 "NAME"
  SCH_silent_workhorse:0 "NAME"
  SCH_smooth_talking_charmer:0 "NAME"
  SCH_war_industrialist:0 "NAME"
  #theorists
- SCH_military_theorist:0 "NAME"
- SCH_air_warfare_theorist:0 "NAME"
- SCH_naval_theorist:0 "NAME"
+ SCH_military_theorist:0 "Marzell Traugott Berg"
+ SCH_air_warfare_theorist:0 "Pascal Gottfried Wendel"
+ SCH_naval_theorist:0 "Dierk Marius Kistler"
  SCH_naval_aviation_pioneer:0 "NAME"
  SCH_victory_through_airpower:0 "NAME"
  SCH_nuclear_scientist:0 "NAME"
  SCH_rocket_scientist:0 "NAME"
  #military chiefs
- SCH_army_chief_defensive_2:0 "NAME"
+ SCH_army_chief_defensive_2:0 "Hans-Günter Gottlob Pichler"
  SCH_army_chief_drill_2:0 "NAME"
- SCH_army_chief_maneuver_2:0 "NAME"
+ SCH_army_chief_maneuver_2:0 "Gerold Gustav Tangeman"
  SCH_army_chief_morale_2:0 "NAME"
  SCH_army_chief_offensive_2:0 "NAME"
- SCH_army_chief_organizational_1:0 "NAME"
- SCH_navy_chief_decisive_battle_2:0 "NAME"
- SCH_navy_chief_naval_aviation_2:0 "NAME"
- SCH_air_chief_ground_support_2:0 "NAME"
- SCH_air_chief_reform_2:0 "NAME"
+ SCH_army_chief_organizational_1:0 "Horst Axel Wehunt"
+ SCH_navy_chief_decisive_battle_2:0 "Moritz Helmuth Wörnhör"
+ SCH_navy_chief_naval_aviation_2:0 "Jochim Eckhard Schirmer"
+ SCH_air_chief_ground_support_2:0 "Levi Nicolaus Behrend"
+ SCH_air_chief_reform_2:0 "Andreas Gotthard Krause"
  SCH_army_armored_1:0 "NAME"
  SCH_army_entrenchment_1:0 "NAME"
- SCH_army_infantry_1:0 "NAME"
- SCH_army_logistics_2:0 "NAME"
- SCH_air_bomber_interception_2:0 "NAME"
- SCH_air_close_air_support_2:0 "NAME"
- SCH_navy_screen_2:0 "NAME"
- SCH_navy_anti_submarine_1:0 "NAME"
+ SCH_army_infantry_1:0 "Siegmar Franz Schlosser"
+ SCH_army_logistics_2:0 "Berthold Karl Bähr"
+ SCH_air_bomber_interception_2:0 "Guntram Adrian Kaube"
+ SCH_air_close_air_support_2:0 "Olaf Nicolaus Fried"
+ SCH_navy_screen_2:0 "Gilbert Didi Böhme"
+ SCH_navy_anti_submarine_1:0 "Stefan Karlmann Steiner"
  SCH_navy_naval_air_defense_2:0 "NAME"
