--- a/localisation/SDU_l_english.yml
+++ b/localisation/SDU_l_english.yml
@@ -26,4 +26,13 @@
  SDU_democratic_reformer:0 "Jivvan Ganthri"
  SDU_silent_workhorse:0 "Harinder Valampathri"
  SDU_war_industrialist:0 "Ankith Sukdradi"
- SDU_backroom_backstabber:0 "Maninder Lakshwara"
+ SDU_backroom_backstabber:0 "Jay Kanti Bachchan"
+ SDU_corps_commander_1:0 "Rajendra Harishthri"
+ SDU_corps_commander_2:0 "Raj Suman Gadhaviri"
+ SDU_corps_commander_3:0 "Manas Gopinath Misra"
+ SDU_corps_commander_4:0 "Sumit G. Kulkarni"
+ SDU_naval_leader_1:0 "Indrajitsha J. Anandro"
+ SDU_naval_leader_2:0 "Suresh Chaudhrighal"
+ SDU_naval_leader_3:0 "Deep Agni Narangri"
+ SDU_naval_leader_4:0 "Devaraj Shiv Sharmatri"
+ SDU_naval_leader_5:0 "Sudheer Vemulakondshtri"
