--- a/localisation/TAH_l_english.yml
+++ b/localisation/TAH_l_english.yml
@@ -1,62 +1,62 @@
 ﻿l_english: 
 
  #military leaders
- TAH_corps_commander_1:0 "NAME"
- TAH_corps_commander_2:0 "NAME"
- TAH_corps_commander_3:0 "NAME"
- TAH_corps_commander_4:0 "NAME"
- TAH_naval_leader_1:0 "NAME"
- TAH_naval_leader_2:0 "NAME"
- TAH_naval_leader_3:0 "NAME"
- TAH_naval_leader_4:0 "NAME"
- TAH_naval_leader_5:0 "NAME"
+ TAH_corps_commander_1:0 "Tuhei Tetumanua"
+ TAH_corps_commander_2:0 "Teaatoro Nohoraa"
+ TAH_corps_commander_3:0 "Tutaha Teuraiterai"
+ TAH_corps_commander_4:0 "Mauaroa Tunuieaiteatua"
+ TAH_naval_leader_1:0 "Vehiatua Tehapai"
+ TAH_naval_leader_2:0 "Teohu Tumoehamia"
+ TAH_naval_leader_3:0 "Veve Ariipaea"
+ TAH_naval_leader_4:0 "Hapai Itiiti"
+ TAH_naval_leader_5:0 "Mauaihiti Oreo'oa"
  #advisors
- TAH_anti_communist_crusader:0 "NAME"
+ TAH_anti_communist_crusader:0 "Haururu Aru"
  TAH_armaments_organizer:0 "NAME"
- TAH_backroom_backstabber:0 "NAME"
+ TAH_backroom_backstabber:0 "Enometua Vairatoa"
  TAH_captain_of_industry:0 "NAME"
- TAH_communist_revolutionary:0 "NAME"
+ TAH_communist_revolutionary:0 "Haneti Taaroa-manahune"
  TAH_compassionate_gentleman:0 "NAME"
- TAH_democratic_reformer:0 "NAME"
+ TAH_democratic_reformer:0 "Ahurei Paofai"
  TAH_economist:0 "NAME"
  TAH_editor:0 "NAME"
- TAH_fascist_demagogue:0 "NAME"
+ TAH_fascist_demagogue:0 "Tavihauroa Pati'i"
  TAH_financial_expert:0 "NAME"
  TAH_head_of_intelligence:0 "NAME"
- TAH_ideological_crusader:0 "NAME"
+ TAH_ideological_crusader:0 "Omai Punua-teraitua"
  TAH_popular_figurehead:0 "NAME"
- TAH_prince_of_terror:0 "NAME"
+ TAH_prince_of_terror:0 "Teieie Namiro"
  TAH_silent_workhorse:0 "NAME"
  TAH_smooth_talking_charmer:0 "NAME"
  TAH_war_industrialist:0 "NAME"
  #theorists
- TAH_military_theorist:0 "NAME"
- TAH_air_warfare_theorist:0 "NAME"
- TAH_naval_theorist:0 "NAME"
+ TAH_military_theorist:0 "Tupaia Te-manutunuu"
+ TAH_air_warfare_theorist:0 "Oro'una Teuira-arii"
+ TAH_naval_theorist:0 "Aifeuna Nuutere"
  TAH_naval_aviation_pioneer:0 "NAME"
  TAH_victory_through_airpower:0 "NAME"
  TAH_nuclear_scientist:0 "NAME"
  TAH_rocket_scientist:0 "NAME"
  #military chiefs
- TAH_army_chief_defensive_2:0 "NAME"
- TAH_army_chief_drill_2:0 "NAME"
+ TAH_army_chief_defensive_2:0 "Auri Uata"
+ TAH_army_chief_drill_2:0 "Tiaau Maoae"
  TAH_army_chief_maneuver_2:0 "NAME"
  TAH_army_chief_morale_2:0 "NAME"
  TAH_army_chief_offensive_2:0 "NAME"
  TAH_army_chief_organizational_1:0 "NAME"
- TAH_navy_chief_decisive_battle_2:0 "NAME"
- TAH_navy_chief_naval_aviation_2:0 "NAME"
- TAH_air_chief_ground_support_2:0 "NAME"
- TAH_air_chief_reform_2:0 "NAME"
+ TAH_navy_chief_decisive_battle_2:0 "Maoae Vehiatua"
+ TAH_navy_chief_naval_aviation_2:0 "Opuhara Taura-atua"
+ TAH_air_chief_ground_support_2:0 "Tutahau Tiipaarii"
+ TAH_air_chief_reform_2:0 "Hiro Tun'iu"
  TAH_army_armored_1:0 "NAME"
  TAH_army_entrenchment_1:0 "NAME"
  TAH_army_infantry_1:0 "NAME"
- TAH_army_logistics_2:0 "NAME"
- TAH_air_bomber_interception_2:0 "NAME"
- TAH_air_close_air_support_2:0 "NAME"
- TAH_navy_screen_2:0 "NAME"
+ TAH_army_logistics_2:0 "Farerohi Punua"
+ TAH_air_bomber_interception_2:0 "Terii Tapoa"
+ TAH_air_close_air_support_2:0 "Mahine Teruru"
+ TAH_navy_screen_2:0 "Tepau Tumoesi'iana"
  TAH_navy_anti_submarine_1:0 "NAME"
- TAH_navy_naval_air_defense_2:0 "NAME"
+ TAH_navy_naval_air_defense_2:0 "Tau Uruumatata"
 
  TTI_civil_war: "Fascist Tahiti"
  TAH_civil_war: "Socialist Republic of Tahiti"
