--- a/localisation/THU_l_english.yml
+++ b/localisation/THU_l_english.yml
@@ -1,58 +1,58 @@
 ﻿l_english:
  #military leaders
- THU_corps_commander_1:0 "NAME"
- THU_corps_commander_2:0 "NAME"
- THU_corps_commander_3:0 "NAME"
- THU_corps_commander_4:0 "NAME"
- THU_naval_leader_1:0 "NAME"
- THU_naval_leader_2:0 "NAME"
- THU_naval_leader_3:0 "NAME"
- THU_naval_leader_4:0 "NAME"
- THU_naval_leader_5:0 "NAME"
+ THU_corps_commander_1:0 "Torstein Jon Svendsson"
+ THU_corps_commander_2:0 "Kristófer Viktor Halvorsson"
+ THU_corps_commander_3:0 "Karsten Peter Bakke"
+ THU_corps_commander_4:0 "Jarle Severin Anker"
+ THU_naval_leader_1:0 "Magnús Oliver Nilsson"
+ THU_naval_leader_2:0 "Preben Hannes Thomasson"
+ THU_naval_leader_3:0 "Erlend Hjörtur Róbertsson"
+ THU_naval_leader_4:0 "Viggo Roger Solberg"
+ THU_naval_leader_5:0 "Maximilian Matheo Östberg"
  #advisors
  THU_anti_communist_crusader:0 "NAME"
  THU_armaments_organizer:0 "NAME"
  THU_backroom_backstabber:0 "NAME"
  THU_captain_of_industry:0 "NAME"
- THU_communist_revolutionary:0 "NAME"
+ THU_communist_revolutionary:0 "Torger Hallbjörn Sigurdsson"
  THU_compassionate_gentleman:0 "NAME"
- THU_democratic_reformer:0 "NAME"
- THU_economist:0 "NAME"
+ THU_democratic_reformer:0 "Hákon Karl Gunnarsson"
+ THU_economist:0 "Patrick Mikkel Pedersson"
  THU_editor:0 "NAME"
- THU_fascist_demagogue:0 "NAME"
+ THU_fascist_demagogue:0 "Johannes Tormod Axelsson"
  THU_financial_expert:0 "NAME"
  THU_head_of_intelligence:0 "NAME"
- THU_ideological_crusader:0 "NAME"
+ THU_ideological_crusader:0 "Einar Börge Mathisen"
  THU_popular_figurehead:0 "NAME"
- THU_prince_of_terror:0 "NAME"
+ THU_prince_of_terror:0 "Stefan Ásgeir Voll"
  THU_silent_workhorse:0 "NAME"
  THU_smooth_talking_charmer:0 "NAME"
  THU_war_industrialist:0 "NAME"
  #theorists
- THU_military_theorist:0 "NAME"
- THU_air_warfare_theorist:0 "NAME"
- THU_naval_theorist:0 "NAME"
+ THU_military_theorist:0 "Óðinn Viktor Alexandersson"
+ THU_air_warfare_theorist:0 "Baard Christen Alexandersson"
+ THU_naval_theorist:0 "Albert Morten Stefánsson"
  THU_naval_aviation_pioneer:0 "NAME"
  THU_victory_through_airpower:0 "NAME"
  THU_nuclear_scientist:0 "NAME"
  THU_rocket_scientist:0 "NAME"
  #military chiefs
- THU_army_chief_defensive_2:0 "NAME"
- THU_army_chief_drill_2:0 "NAME"
- THU_army_chief_maneuver_2:0 "NAME"
+ THU_army_chief_defensive_2:0 "Jónas Ebbe Vilhjálmsson"
+ THU_army_chief_drill_2:0 "Roald Jens Omdahl"
+ THU_army_chief_maneuver_2:0 "Esben Kjetil Vollan"
  THU_army_chief_morale_2:0 "NAME"
  THU_army_chief_offensive_2:0 "NAME"
  THU_army_chief_organizational_1:0 "NAME"
- THU_navy_chief_decisive_battle_2:0 "NAME"
- THU_navy_chief_naval_aviation_2:0 "NAME"
- THU_air_chief_ground_support_2:0 "NAME"
- THU_air_chief_reform_2:0 "NAME"
+ THU_navy_chief_decisive_battle_2:0 "Arnar Haakon Dahl"
+ THU_navy_chief_naval_aviation_2:0 "Kim Bjarki Jensen"
+ THU_air_chief_ground_support_2:0 "Heimir Per Vollan"
+ THU_air_chief_reform_2:0 "Þórr Teodor Kristoffersson"
  THU_army_armored_1:0 "NAME"
  THU_army_entrenchment_1:0 "NAME"
  THU_army_infantry_1:0 "NAME"
- THU_army_logistics_2:0 "NAME"
- THU_air_bomber_interception_2:0 "NAME"
- THU_air_close_air_support_2:0 "NAME"
- THU_navy_screen_2:0 "NAME"
- THU_navy_anti_submarine_1:0 "NAME"
+ THU_army_logistics_2:0 "Guðni Þorbjörn Leifsson"
+ THU_air_bomber_interception_2:0 "Jakob Philip Sigurðsson"
+ THU_air_close_air_support_2:0 "Páll Varg Naess"
+ THU_navy_screen_2:0 "Sigurður Leifur Frank"
+ THU_navy_anti_submarine_1:0 "Christen Lúðvík Ingólfsson"
  THU_navy_naval_air_defense_2:0 "NAME"
