--- a/localisation/WAP_l_english.yml
+++ b/localisation/WAP_l_english.yml
@@ -1,38 +1,38 @@
 ﻿l_english:
  #characters
  #military leaders
- WAP_corps_commander_1:0 "NAME"
- WAP_corps_commander_2:0 "NAME"
- WAP_corps_commander_3:0 "NAME"
- WAP_corps_commander_4:0 "NAME"
- WAP_naval_leader_1:0 "NAME"
- WAP_naval_leader_2:0 "NAME"
- WAP_naval_leader_3:0 "NAME"
- WAP_naval_leader_4:0 "NAME"
- WAP_naval_leader_5:0 "NAME"
+ WAP_corps_commander_1:0 "Maleko Iakopa"
+ WAP_corps_commander_2:0 "Timoti Tāne"
+ WAP_corps_commander_3:0 "Paora Wiremu"
+ WAP_corps_commander_4:0 "Anakoni Keala"
+ WAP_naval_leader_1:0 "Noa Pika"
+ WAP_naval_leader_2:0 "Uʻilani Māui"
+ WAP_naval_leader_3:0 "Nīkau Aroha"
+ WAP_naval_leader_4:0 "Peni Sikau'ua"
+ WAP_naval_leader_5:0 "Ikaia Petera"
  #advisors
  WAP_anti_communist_crusader:0 "NAME"
  WAP_armaments_organizer:0 "NAME"
- WAP_backroom_backstabber:0 "NAME"
+ WAP_backroom_backstabber:0 "Kai Makenato"
  WAP_captain_of_industry:0 "NAME"
- WAP_communist_revolutionary:0 "NAME"
+ WAP_communist_revolutionary:0 "Mali Ikapa'ana"
  WAP_compassionate_gentleman:0 "NAME"
- WAP_democratic_reformer:0 "NAME"
+ WAP_democratic_reformer:0 "Kaleo Iakap'asa"
  WAP_economist:0 "NAME"
  WAP_editor:0 "NAME"
- WAP_fascist_demagogue:0 "NAME"
+ WAP_fascist_demagogue:0 "Iokua Kale"
  WAP_financial_expert:0 "NAME"
  WAP_head_of_intelligence:0 "NAME"
- WAP_ideological_crusader:0 "NAME"
- WAP_popular_figurehead:0 "NAME"
- WAP_prince_of_terror:0 "NAME"
+ WAP_ideological_crusader:0 "Na'amu Patariki"
+ WAP_popular_figurehead:0 "Petera Kauri"
+ WAP_prince_of_terror:0 "Iokua Mikaere"
  WAP_silent_workhorse:0 "NAME"
  WAP_smooth_talking_charmer:0 "NAME"
  WAP_war_industrialist:0 "NAME"
  #theorists
- WAP_military_theorist:0 "NAME"
- WAP_air_warfare_theorist:0 "NAME"
- WAP_naval_theorist:0 "NAME"
+ WAP_military_theorist:0 "Ikaka Mikala"
+ WAP_air_warfare_theorist:0 "Ika'a Tamati"
+ WAP_naval_theorist:0 "Kawehi Nālani"
  WAP_naval_aviation_pioneer:0 "NAME"
  WAP_victory_through_airpower:0 "NAME"
  WAP_nuclear_scientist:0 "NAME"
@@ -41,19 +41,19 @@
  WAP_army_chief_defensive_2:0 "NAME"
  WAP_army_chief_drill_2:0 "NAME"
  WAP_army_chief_maneuver_2:0 "NAME"
- WAP_army_chief_morale_2:0 "NAME"
- WAP_army_chief_offensive_2:0 "NAME"
+ WAP_army_chief_morale_2:0 "Kaipo Ekewaka"
+ WAP_army_chief_offensive_2:0 "Kahurangi Kōnane"
  WAP_army_chief_organizational_1:0 "NAME"
- WAP_navy_chief_decisive_battle_2:0 "NAME"
- WAP_navy_chief_naval_aviation_2:0 "NAME"
- WAP_air_chief_ground_support_2:0 "NAME"
- WAP_air_chief_reform_2:0 "NAME"
+ WAP_navy_chief_decisive_battle_2:0 "Noa Akamu"
+ WAP_navy_chief_naval_aviation_2:0 "Piripi Keanu"
+ WAP_air_chief_ground_support_2:0 "Kapua Kalani"
+ WAP_air_chief_reform_2:0 "Rangi Kekoa"
  WAP_army_armored_1:0 "NAME"
- WAP_army_entrenchment_1:0 "NAME"
+ WAP_army_entrenchment_1:0 "Paora Hemi"
  WAP_army_infantry_1:0 "NAME"
  WAP_army_logistics_2:0 "NAME"
- WAP_air_bomber_interception_2:0 "NAME"
- WAP_air_close_air_support_2:0 "NAME"
- WAP_navy_screen_2:0 "NAME"
+ WAP_air_bomber_interception_2:0 "Kauʻi I'ina"
+ WAP_air_close_air_support_2:0 "Hohepa Unurapi"
+ WAP_navy_screen_2:0 "Keone Kimo"
  WAP_navy_anti_submarine_1:0 "NAME"
  WAP_navy_naval_air_defense_2:0 "NAME"
