--- a/localisation/WRB_l_english.yml
+++ b/localisation/WRB_l_english.yml
@@ -1,79 +1,60 @@
 ﻿l_english:
 
  #characters
- #political leaders
- WRB_conservatism_leader:0 "NAME"
- WRB_liberalism_leader:0 "NAME"
- WRB_socialism_leader:0 "NAME"
- WRB_marxism_leader:0 "NAME"
- WRB_leninism_leader:0 "NAME"
- WRB_stalinism_leader:0 "NAME"
- WRB_anti_revisionism_leader:0 "NAME"
- WRB_anarchist_communism_leader:0 "NAME"
- WRB_nazism_leader:0 "NAME"
- WRB_gen_nazism_leader:0 "NAME"
- WRB_generic_fascism_leader:0 "NAME"
- WRB_falangism_leader:0 "NAME"
- WRB_rexism_leader:0 "NAME"
- WRB_despotism_leader:0 "NAME"
- WRB_oligarchism_leader:0 "NAME"
- WRB_anarchism_leader:0 "NAME"
- WRB_moderatism_leader:0 "NAME"
- WRB_centrism_leader:0 "NAME"
  #military leaders
- WRB_corps_commander_1:0 "NAME"
- WRB_corps_commander_2:0 "NAME"
- WRB_corps_commander_3:0 "NAME"
- WRB_corps_commander_4:0 "NAME"
- WRB_naval_leader_1:0 "NAME"
- WRB_naval_leader_2:0 "NAME"
- WRB_naval_leader_3:0 "NAME"
- WRB_naval_leader_4:0 "NAME"
- WRB_naval_leader_5:0 "NAME"
+ WRB_corps_commander_1:0 "Jean Martial Deforest"
+ WRB_corps_commander_2:0 "Maximilien Adam Langley"
+ WRB_corps_commander_3:0 "Malo Joffrey Perrot"
+ WRB_corps_commander_4:0 "Nathanaël Henri Tremble"
+ WRB_naval_leader_1:0 "Jodoc Xavier Olivier"
+ WRB_naval_leader_2:0 "Simon Corentin Béranger"
+ WRB_naval_leader_3:0 "Pons Salomon Dennel"
+ WRB_naval_leader_4:0 "Erwan Tanguy Oliver"
+ WRB_naval_leader_5:0 "Rémy Lionel Charles"
  #advisors
- WRB_anti_communist_crusader:0 "NAME"
- WRB_armaments_organizer:0 "NAME"
- WRB_backroom_backstabber:0 "NAME"
- WRB_captain_of_industry:0 "NAME"
- WRB_communist_revolutionary:0 "NAME"
- WRB_compassionate_gentleman:0 "NAME"
- WRB_democratic_reformer:0 "NAME"
- WRB_economist:0 "NAME"
- WRB_editor:0 "NAME"
- WRB_fascist_demagogue:0 "NAME"
- WRB_financial_expert:0 "NAME"
- WRB_head_of_intelligence:0 "NAME"
- WRB_ideological_crusader:0 "NAME"
- WRB_popular_figurehead:0 "NAME"
- WRB_prince_of_terror:0 "NAME"
- WRB_silent_workhorse:0 "NAME"
- WRB_smooth_talking_charmer:0 "NAME"
- WRB_war_industrialist:0 "NAME"
+ WRB_anti_communist_crusader:0 "Lionel Kilian Bertrand"
+ WRB_armaments_organizer:0 "Reynaud Killian Garçon"
+ WRB_backroom_backstabber:0 "Nathanaël Hugo Traverse"
+ WRB_captain_of_industry:0 "Apollinaire Grégory Trudeau"
+ WRB_communist_revolutionary:0 "Bernard Martin Plamondon"
+ WRB_compassionate_gentleman:0 "Maxime Abraham Lévêque"
+ WRB_democratic_reformer:0 "Napoléon Lothaire Parris"
+ WRB_economist:0 "Serge Gwenaël Colbert"
+ WRB_editor:0 "Lyam Kenzo Morel"
+ WRB_fascist_demagogue:0 "Christophe Auguste Marin"
+ WRB_financial_expert:0 "Ghyslain Rodrigue Lane"
+ WRB_head_of_intelligence:0 "Yann Désiré Roche"
+ WRB_ideological_crusader:0 "Gaspard Gwilherm Mathieu"
+ WRB_popular_figurehead:0 "Daniel Samuel Dumont"
+ WRB_prince_of_terror:0 "Noam Ruben Fontaine"
+ WRB_silent_workhorse:0 "Corentin Laurent Daniel"
+ WRB_smooth_talking_charmer:0 "Lilian Yannick Marie"
+ WRB_war_industrialist:0 "Félix David Montagne"
  #theorists
- WRB_military_theorist:0 "NAME"
- WRB_air_warfare_theorist:0 "NAME"
- WRB_naval_theorist:0 "NAME"
- WRB_naval_aviation_pioneer:0 "NAME"
- WRB_victory_through_airpower:0 "NAME"
- WRB_nuclear_scientist:0 "NAME"
- WRB_rocket_scientist:0 "NAME"
+ WRB_military_theorist:0 "Alexis Aubert Trudeau"
+ WRB_air_warfare_theorist:0 "Jessé Émile Lévesque"
+ WRB_naval_theorist:0 "Rodolph Éric Daniau"
+ WRB_naval_aviation_pioneer:0 "Tristan Josué Robin"
+ WRB_victory_through_airpower:0 "Isidore Marin Duval"
+ WRB_nuclear_scientist:0 "Eustache Rodrigue Comtois"
+ WRB_rocket_scientist:0 "Jodoc Grégory Legrand"
  #military chiefs
- WRB_army_chief_defensive_2:0 "NAME"
- WRB_army_chief_drill_2:0 "NAME"
- WRB_army_chief_maneuver_2:0 "NAME"
- WRB_army_chief_morale_2:0 "NAME"
- WRB_army_chief_offensive_2:0 "NAME"
- WRB_army_chief_organizational_1:0 "NAME"
- WRB_navy_chief_decisive_battle_2:0 "NAME"
- WRB_navy_chief_naval_aviation_2:0 "NAME"
- WRB_air_chief_ground_support_2:0 "NAME"
- WRB_air_chief_reform_2:0 "NAME"
- WRB_army_armored_1:0 "NAME"
- WRB_army_entrenchment_1:0 "NAME"
- WRB_army_infantry_1:0 "NAME"
- WRB_army_logistics_2:0 "NAME"
- WRB_air_bomber_interception_2:0 "NAME"
- WRB_air_close_air_support_2:0 "NAME"
- WRB_navy_screen_2:0 "NAME"
- WRB_navy_anti_submarine_1:0 "NAME"
- WRB_navy_naval_air_defense_2:0 "NAME"
+ WRB_army_chief_defensive_2:0 "Louka Basile Trudeau"
+ WRB_army_chief_drill_2:0 "Ruben Oscar Gagnier"
+ WRB_army_chief_maneuver_2:0 "Maurice Diodore Dumas"
+ WRB_army_chief_morale_2:0 "Basile Jacky Louis"
+ WRB_army_chief_offensive_2:0 "Blaise Yannig Montagne"
+ WRB_army_chief_organizational_1:0 "Thibaud Matis Dufour"
+ WRB_navy_chief_decisive_battle_2:0 "Antonin Godefroy Gérard"
+ WRB_navy_chief_naval_aviation_2:0 "Barnabé Yezekael Samuel"
+ WRB_air_chief_ground_support_2:0 "Maxence Clément Pelley"
+ WRB_air_chief_reform_2:0 "Gaubert Gustave Benoit"
+ WRB_army_armored_1:0 "Aimé Gwendal Favreau"
+ WRB_army_entrenchment_1:0 "Fulbert Tanguy Durant"
+ WRB_army_infantry_1:0 "Hippolyte Philippe Beaulieu"
+ WRB_army_logistics_2:0 "André Nathanaël Colin"
+ WRB_air_bomber_interception_2:0 "René Prosper Brodeur"
+ WRB_air_close_air_support_2:0 "Loïc Hadrien Mathieu"
+ WRB_navy_screen_2:0 "Joffrey Kenzo Lambert"
+ WRB_navy_anti_submarine_1:0 "Constantin Jean-François Fèvre"
+ WRB_navy_naval_air_defense_2:0 "Thomas Théo Pierre"
