--- a/localisation/WUL_l_english.yml
+++ b/localisation/WUL_l_english.yml
@@ -1,42 +1,42 @@
 ﻿l_english:
  #characters
  #political leaders
- XXX_socialism_leader:0 "NAME"
- XXX_anarchist_communism_leader:0 "NAME"
- XXX_generic_fascism_leader:0 "NAME"
- XXX_anarchism_leader:0 "NAME"
+ XXX_socialism_leader:0 "Seaghdh David Danniell"
+ XXX_anarchist_communism_leader:0 "Kyson Kyro Haig"
+ XXX_generic_fascism_leader:0 "Melville Cainan Glynn"
+ XXX_anarchism_leader:0 "Ealair Nathaniel Ready"
  #military leaders
- XXX_corps_commander_1:0 "NAME"
- XXX_corps_commander_2:0 "NAME"
- XXX_corps_commander_3:0 "NAME"
- XXX_corps_commander_4:0 "NAME"
- XXX_naval_leader_1:0 "NAME"
- XXX_naval_leader_2:0 "NAME"
- XXX_naval_leader_3:0 "NAME"
- XXX_naval_leader_4:0 "NAME"
- XXX_naval_leader_5:0 "NAME"
+ XXX_corps_commander_1:0 "Caden Koby Lyon"
+ XXX_corps_commander_2:0 "Kason Gerard Linton"
+ XXX_corps_commander_3:0 "Karl G. Thorne"
+ XXX_corps_commander_4:0 "Barret B. MacConnell"
+ XXX_naval_leader_1:0 "Stuart Osbourne Pryor"
+ XXX_naval_leader_2:0 "Fraser Yitro Castle"
+ XXX_naval_leader_3:0 "Kendal D. Mondy"
+ XXX_naval_leader_4:0 "J. Derrick Eustis"
+ XXX_naval_leader_5:0 "Heckie Curtis Appleby"
  #advisors
  XXX_anti_communist_crusader:0 "NAME"
  XXX_armaments_organizer:0 "NAME"
- XXX_backroom_backstabber:0 "NAME"
+ XXX_backroom_backstabber:0 "Gruffydd Salomón Jenkins"
  XXX_captain_of_industry:0 "NAME"
- XXX_communist_revolutionary:0 "NAME"
+ XXX_communist_revolutionary:0 "Cary E. Ramsey"
  XXX_compassionate_gentleman:0 "NAME"
- XXX_democratic_reformer:0 "NAME"
+ XXX_democratic_reformer:0 "Art Herb Revie"
  XXX_economist:0 "NAME"
  XXX_editor:0 "NAME"
- XXX_fascist_demagogue:0 "NAME"
+ XXX_fascist_demagogue:0 "Alasdair Finn I'Anson"
  XXX_financial_expert:0 "NAME"
  XXX_head_of_intelligence:0 "NAME"
- XXX_ideological_crusader:0 "NAME"
- XXX_popular_figurehead:0 "NAME"
- XXX_prince_of_terror:0 "NAME"
+ XXX_ideological_crusader:0 "Iosue C. Eason"
+ XXX_popular_figurehead:0 "Ithiel Manley Davies"
+ XXX_prince_of_terror:0 "Rhys Marmaduke"
  XXX_silent_workhorse:0 "NAME"
  XXX_smooth_talking_charmer:0 "NAME"
  XXX_war_industrialist:0 "NAME"
  #theorists
- XXX_military_theorist:0 "NAME"
- XXX_air_warfare_theorist:0 "NAME"
+ XXX_military_theorist:0 "River Robert Mitchell"
+ XXX_air_warfare_theorist:0 "Cináed Garnett Beck"
  XXX_naval_theorist:0 "NAME"
  XXX_naval_aviation_pioneer:0 "NAME"
  XXX_victory_through_airpower:0 "NAME"
@@ -46,19 +46,19 @@
  XXX_army_chief_defensive_2:0 "NAME"
  XXX_army_chief_drill_2:0 "NAME"
  XXX_army_chief_maneuver_2:0 "NAME"
- XXX_army_chief_morale_2:0 "NAME"
- XXX_army_chief_offensive_2:0 "NAME"
- XXX_army_chief_organizational_1:0 "NAME"
- XXX_navy_chief_decisive_battle_2:0 "NAME"
- XXX_navy_chief_naval_aviation_2:0 "NAME"
- XXX_air_chief_ground_support_2:0 "NAME"
- XXX_air_chief_reform_2:0 "NAME"
+ XXX_army_chief_morale_2:0 "Linford Astor Paige"
+ XXX_army_chief_offensive_2:0 "Elwood MacDougall"
+ XXX_army_chief_organizational_1:0 "Shamgar E. Neville"
+ XXX_navy_chief_decisive_battle_2:0 "Ivor Frederick Timberlake"
+ XXX_navy_chief_naval_aviation_2:0 "Gregg Cyan Jardine"
+ XXX_air_chief_ground_support_2:0 "Ronald Gethin Wheeler"
+ XXX_air_chief_reform_2:0 "Samuil Loukas Waller"
  XXX_army_armored_1:0 "NAME"
- XXX_army_entrenchment_1:0 "NAME"
- XXX_army_infantry_1:0 "NAME"
+ XXX_army_entrenchment_1:0 "Hugh Abram Minett"
+ XXX_army_infantry_1:0 "Belial Sly Munroe"
  XXX_army_logistics_2:0 "NAME"
- XXX_air_bomber_interception_2:0 "NAME"
- XXX_air_close_air_support_2:0 "NAME"
+ XXX_air_bomber_interception_2:0 "Taskill J. Irwin"
+ XXX_air_close_air_support_2:0 "Bartholomew Marvyn Abbott"
  XXX_navy_screen_2:0 "NAME"
  XXX_navy_anti_submarine_1:0 "NAME"
  XXX_navy_naval_air_defense_2:0 "NAME"
