--- a/localisation/ARA_l_english.yml
+++ b/localisation/ARA_l_english.yml
@@ -1,79 +1,60 @@
 ﻿l_english:
 
  #characters
- #political leaders
- ARA_conservatism_leader:0 "NAME"
- ARA_liberalism_leader:0 "NAME"
- ARA_socialism_leader:0 "NAME"
- ARA_marxism_leader:0 "NAME"
- ARA_leninism_leader:0 "NAME"
- ARA_stalinism_leader:0 "NAME"
- ARA_anti_revisionism_leader:0 "NAME"
- ARA_anarchist_communism_leader:0 "NAME"
- ARA_nazism_leader:0 "NAME"
- ARA_gen_nazism_leader:0 "NAME"
- ARA_generic_fascism_leader:0 "NAME"
- ARA_falangism_leader:0 "NAME"
- ARA_rexism_leader:0 "NAME"
- ARA_despotism_leader:0 "NAME"
- ARA_oligarchism_leader:0 "NAME"
- ARA_anarchism_leader:0 "NAME"
- ARA_moderatism_leader:0 "NAME"
- ARA_centrism_leader:0 "NAME"
  #military leaders
- ARA_corps_commander_1:0 "NAME"
- ARA_corps_commander_2:0 "NAME"
- ARA_corps_commander_3:0 "NAME"
- ARA_corps_commander_4:0 "NAME"
- ARA_naval_leader_1:0 "NAME"
- ARA_naval_leader_2:0 "NAME"
- ARA_naval_leader_3:0 "NAME"
- ARA_naval_leader_4:0 "NAME"
- ARA_naval_leader_5:0 "NAME"
+ ARA_corps_commander_1:0 "Ginés Sócrates Rivera"
+ ARA_corps_commander_2:0 "Néstor Joel Vargas"
+ ARA_corps_commander_3:0 "Vicenç Eleuterio Escarrà"
+ ARA_corps_commander_4:0 "Elías Hermenegildo Torres"
+ ARA_naval_leader_1:0 "Lluc Ladislao Mata"
+ ARA_naval_leader_2:0 "Roque Chema Perez"
+ ARA_naval_leader_3:0 "Calixto Eduardo Acosta"
+ ARA_naval_leader_4:0 "Pepito Anacleto Oliver"
+ ARA_naval_leader_5:0 "Vinicio Cesc Bautista"
  #advisors
- ARA_anti_communist_crusader:0 "NAME"
- ARA_armaments_organizer:0 "NAME"
+ ARA_anti_communist_crusader:0 "Bonifacio Ambrosio Vargas"
+ ARA_armaments_organizer:0 "Samu Teodosio Porras"
  ARA_backroom_backstabber:0 "NAME"
- ARA_captain_of_industry:0 "NAME"
- ARA_communist_revolutionary:0 "NAME"
+ ARA_captain_of_industry:0 "Esteve Adelardo Aritza"
+ ARA_communist_revolutionary:0 "Chus Valero Villanueva"
  ARA_compassionate_gentleman:0 "NAME"
- ARA_democratic_reformer:0 "NAME"
+ ARA_democratic_reformer:0 "Adam Horacio Hernández"
  ARA_economist:0 "NAME"
  ARA_editor:0 "NAME"
- ARA_fascist_demagogue:0 "NAME"
+ ARA_fascist_demagogue:0 "Xacobe Bernardo Rivero"
  ARA_financial_expert:0 "NAME"
- ARA_head_of_intelligence:0 "NAME"
+ ARA_head_of_intelligence:0 "Pelayo Régulo Velásquez"
  ARA_ideological_crusader:0 "NAME"
  ARA_popular_figurehead:0 "NAME"
- ARA_prince_of_terror:0 "NAME"
- ARA_silent_workhorse:0 "NAME"
+ ARA_prince_of_terror:0 "Simón Jordà Garza"
+ ARA_silent_workhorse:0 "Demetrio M. De la Fuente"
  ARA_smooth_talking_charmer:0 "NAME"
  ARA_war_industrialist:0 "NAME"
  #theorists
- ARA_military_theorist:0 "NAME"
- ARA_air_warfare_theorist:0 "NAME"
- ARA_naval_theorist:0 "NAME"
+ ARA_military_theorist:0 "César Cándido Dela Cruz"
+ ARA_air_warfare_theorist:0 "Jeremías P. Villaverde"
+ ARA_naval_theorist:0 "Ceferino Segismundo Noguera"
  ARA_naval_aviation_pioneer:0 "NAME"
  ARA_victory_through_airpower:0 "NAME"
  ARA_nuclear_scientist:0 "NAME"
  ARA_rocket_scientist:0 "NAME"
  #military chiefs
  ARA_army_chief_defensive_2:0 "NAME"
- ARA_army_chief_drill_2:0 "NAME"
- ARA_army_chief_maneuver_2:0 "NAME"
+ ARA_army_chief_drill_2:0 "Miguelito Román Loyola"
+ ARA_army_chief_maneuver_2:0 "Celio Espiridión Otero"
  ARA_army_chief_morale_2:0 "NAME"
- ARA_army_chief_offensive_2:0 "NAME"
+ ARA_army_chief_offensive_2:0 "Inocencio Pedro Pereyra"
  ARA_army_chief_organizational_1:0 "NAME"
- ARA_navy_chief_decisive_battle_2:0 "NAME"
- ARA_navy_chief_naval_aviation_2:0 "NAME"
- ARA_air_chief_ground_support_2:0 "NAME"
- ARA_air_chief_reform_2:0 "NAME"
- ARA_army_armARAd_1:0 "NAME"
+ ARA_navy_chief_decisive_battle_2:0 "Floro Justino Iglesias"
+ ARA_navy_chief_naval_aviation_2:0 "Gabriel Max Villa"
+ ARA_air_chief_ground_support_2:0 "Candelario Jesús Capella"
+ ARA_air_chief_reform_2:0 "Rodrigo Luis Ángel Antúnez"
+ ARA_army_armored_1:0 "NAME"
  ARA_army_entrenchment_1:0 "NAME"
- ARA_army_infantry_1:0 "NAME"
- ARA_army_logistics_2:0 "NAME"
- ARA_air_bomber_interception_2:0 "NAME"
- ARA_air_close_air_support_2:0 "NAME"
- ARA_navy_screen_2:0 "NAME"
- ARA_navy_anti_submarine_1:0 "NAME"
+ ARA_army_infantry_1:0 "Gabriel Xavier Marín"
+ ARA_army_logistics_2:0 "Galo Carmelo Nieto"
+ ARA_air_bomber_interception_2:0 "Valero Artur Marino"
+ ARA_air_close_air_support_2:0 "Borja Jordán Vargas"
+ ARA_navy_screen_2:0 "Bernardino Cristian Íñiguez"
+ ARA_navy_anti_submarine_1:0 "Tácito Tito Gil"
  ARA_navy_naval_air_defense_2:0 "NAME"
