--- a/localisation/FAN_l_english.yml
+++ b/localisation/FAN_l_english.yml
@@ -4,54 +4,54 @@
  #political leaders
  FAN_conservatism_leader:0 "NAME"
  FAN_liberalism_leader:0 "NAME"
- FAN_socialism_leader:0 "NAME"
+ FAN_socialism_leader:0 "Greyson K. Dickson"
  FAN_marxism_leader:0 "NAME"
  FAN_leninism_leader:0 "NAME"
  FAN_stalinism_leader:0 "NAME"
  FAN_anti_revisionism_leader:0 "NAME"
- FAN_anarchist_communism_leader:0 "NAME"
+ FAN_anarchist_communism_leader:0 "Jeffry Christopherson"
  FAN_nazism_leader:0 "NAME"
  FAN_gen_nazism_leader:0 "NAME"
- FAN_generic_fascism_leader:0 "NAME"
+ FAN_generic_fascism_leader:0 "Kirk Monte-May"
  FAN_falangism_leader:0 "NAME"
  FAN_rexism_leader:0 "NAME"
  FAN_despotism_leader:0 "NAME"
  FAN_oligarchism_leader:0 "NAME"
- FAN_anarchism_leader:0 "NAME"
+ FAN_anarchism_leader:0 "Darien Myles"
  FAN_moderatism_leader:0 "NAME"
  FAN_centrism_leader:0 "NAME"
  #military leaders
- FAN_corps_commander_1:0 "NAME"
- FAN_corps_commander_2:0 "NAME"
- FAN_corps_commander_3:0 "NAME"
- FAN_corps_commander_4:0 "NAME"
- FAN_naval_leader_1:0 "NAME"
- FAN_naval_leader_2:0 "NAME"
- FAN_naval_leader_3:0 "NAME"
- FAN_naval_leader_4:0 "NAME"
- FAN_naval_leader_5:0 "NAME"
+ FAN_corps_commander_1:0 "Rhys Tye Nicolson"
+ FAN_corps_commander_2:0 "Augustine Jerrold Ness"
+ FAN_corps_commander_3:0 "Dewi Islwyn Brassington"
+ FAN_corps_commander_4:0 "Murray S. Elliott"
+ FAN_naval_leader_1:0 "Alva Payton Westbrook"
+ FAN_naval_leader_2:0 "Gabriel Elwin Meyrick"
+ FAN_naval_leader_3:0 "Merritt Sawyer Robertson"
+ FAN_naval_leader_4:0 "Braxton Eurig Gates"
+ FAN_naval_leader_5:0 "Zechariah Hardy Daniels"
  #advisors
  FAN_anti_communist_crusader:0 "NAME"
  FAN_armaments_organizer:0 "NAME"
- FAN_backroom_backstabber:0 "NAME"
+ FAN_backroom_backstabber:0 "Christian Chesley Yates"
  FAN_captain_of_industry:0 "NAME"
- FAN_communist_revolutionary:0 "NAME"
+ FAN_communist_revolutionary:0 "Florence Mervyn Botterill"
  FAN_compassionate_gentleman:0 "NAME"
- FAN_democratic_reformer:0 "NAME"
+ FAN_democratic_reformer:0 "Lanford Eustace Keen"
  FAN_economist:0 "NAME"
  FAN_editor:0 "NAME"
- FAN_fascist_demagogue:0 "NAME"
+ FAN_fascist_demagogue:0 "Barret Balfour Joyce"
  FAN_financial_expert:0 "NAME"
  FAN_head_of_intelligence:0 "NAME"
- FAN_ideological_crusader:0 "NAME"
- FAN_popular_figurehead:0 "NAME"
- FAN_prince_of_terror:0 "NAME"
+ FAN_ideological_crusader:0 "Kelley Alexis Verity"
+ FAN_popular_figurehead:0 "Jaydon Emery Jeffries"
+ FAN_prince_of_terror:0 "Leighton M. Garbutt"
  FAN_silent_workhorse:0 "NAME"
  FAN_smooth_talking_charmer:0 "NAME"
  FAN_war_industrialist:0 "NAME"
  #theorists
- FAN_military_theorist:0 "NAME"
- FAN_air_warfare_theorist:0 "NAME"
+ FAN_military_theorist:0 "Kellan Christianson"
+ FAN_air_warfare_theorist:0 "Lewis Stafford Bennington"
  FAN_naval_theorist:0 "NAME"
  FAN_naval_aviation_pioneer:0 "NAME"
  FAN_victory_through_airpower:0 "NAME"
@@ -61,19 +61,19 @@
  FAN_army_chief_defensive_2:0 "NAME"
  FAN_army_chief_drill_2:0 "NAME"
  FAN_army_chief_maneuver_2:0 "NAME"
- FAN_army_chief_morale_2:0 "NAME"
+ FAN_army_chief_morale_2:0 "Wystan Mayson Niles"
  FAN_army_chief_offensive_2:0 "NAME"
- FAN_army_chief_organizational_1:0 "NAME"
- FAN_navy_chief_decisive_battle_2:0 "NAME"
- FAN_navy_chief_naval_aviation_2:0 "NAME"
- FAN_air_chief_ground_support_2:0 "NAME"
- FAN_air_chief_reform_2:0 "NAME"
- FAN_army_armFANd_1:0 "NAME"
- FAN_army_entrenchment_1:0 "NAME"
- FAN_army_infantry_1:0 "NAME"
+ FAN_army_chief_organizational_1:0 "Darin Kelcey Knowles"
+ FAN_navy_chief_decisive_battle_2:0 "Brayden Spalding"
+ FAN_navy_chief_naval_aviation_2:0 "Arden Myles Floyd"
+ FAN_air_chief_ground_support_2:0 "Marion Garnett-Dobson"
+ FAN_air_chief_reform_2:0 "Quentin Arlo Robertson"
+ FAN_army_armored_1:0 "NAME"
+ FAN_army_entrenchment_1:0 "Glyndwr Darrin Sargent"
+ FAN_army_infantry_1:0 "Herbert Coleman"
  FAN_army_logistics_2:0 "NAME"
- FAN_air_bomber_interception_2:0 "NAME"
- FAN_air_close_air_support_2:0 "NAME"
+ FAN_air_bomber_interception_2:0 "Isaac Raymund Cadwallader"
+ FAN_air_close_air_support_2:0 "Angus Ingram Tracey"
  FAN_navy_screen_2:0 "NAME"
- FAN_navy_anti_submarine_1:0 "NAME"
+ FAN_navy_anti_submarine_1:0 "Oswin R. Garrett"
  FAN_navy_naval_air_defense_2:0 "NAME"
