--- a/localisation/GEQ_l_english.yml
+++ b/localisation/GEQ_l_english.yml
@@ -1,4 +1,40 @@
 ﻿l_english: 
+#military leaders
+ GEQ_corps_commander_1:0 "Qedlayag Jatchiju"
+ GEQ_corps_commander_2:0 "Pegwu Gasiq"
+ GEQ_corps_commander_3:0 "Qimol Vagereg"
+ GEQ_corps_commander_4:0 "Divir Biqur"
+ GEQ_naval_leader_1:0 "Yume Jirdjit"
+ GEQ_naval_leader_2:0 "Qegbaq Sulisam"
+ GEQ_naval_leader_3:0 "Pineyus Tunsid"
+ GEQ_naval_leader_4:0 "Tansiner Vancheq"
+ GEQ_naval_leader_5:0 "Bava Jetdeging"
+#advisors
+ GEQ_backroom_backstabber:0 "Virumog Bisarim"
+ GEQ_communist_revolutionary:0 "Qagtur Areq"
+ GEQ_democratic_reformer:0 "Gedquyat Qamit"
+ GEQ_fascist_demagogue:0 "Lunchad Suqlit"
+ GEQ_head_of_intelligence:0 "Qeldubot Vetchud"
+ GEQ_popular_figurehead:0 "Dadqed Tugwos"
+ GEQ_prince_of_terror:0 "Qengug Ginchul"
+#theorists
+ GEQ_military_theorist:0 "Suqle Sitirus"
+ GEQ_air_warfare_theorist:0 "Lenchutil Uqlun"
+#military chiefs
+ GEQ_army_chief_drill_2:0 "Peldig Qungasing"
+ GEQ_army_chief_maneuver_2:0 "Miqis Setdeng"
+ GEQ_army_chief_organizational_1:0 "Lirosung Vanchal"
+ GEQ_navy_chief_decisive_battle_2:0 "Varol Gedqajju"
+ GEQ_navy_chief_naval_aviation_2:0 "Muqlinqas Vili"
+ GEQ_air_chief_ground_support_2:0 "Yenge Elomoq"
+ GEQ_air_chief_reform_2:0 "Lundom Isel"
+ GEQ_army_entrenchment_1:0 "Vanteq Lugtat"
+ GEQ_army_logistics_2:0 "Yusad Jjugbotar"
+ GEQ_air_bomber_interception_2:0 "Leqiq Manda"
+ GEQ_air_close_air_support_2:0 "Eqiqaj Yuntoj"
+
+
+
  GEQ_scientific_backlog:0 "Scientific Backlog"
  GEQ_scientific_backlog_desc:0 "We have an issue with a proper science base to help advance our technologies."
  GEQ_murorian_supremacy:0 "Duqegmu Supremacy"
