--- a/localisation/LSN_l_english.yml
+++ b/localisation/LSN_l_english.yml
@@ -1,79 +1,56 @@
 ﻿l_english:
 
  #characters
- #political leaders
- LSN_conservatism_leader:0 "NAME"
- LSN_liberalism_leader:0 "NAME"
- LSN_socialism_leader:0 "NAME"
- LSN_marxism_leader:0 "NAME"
- LSN_leninism_leader:0 "NAME"
- LSN_stalinism_leader:0 "NAME"
- LSN_anti_revisionism_leader:0 "NAME"
- LSN_anarchist_communism_leader:0 "NAME"
- LSN_nazism_leader:0 "NAME"
- LSN_gen_nazism_leader:0 "NAME"
- LSN_generic_fascism_leader:0 "NAME"
- LSN_falangism_leader:0 "NAME"
- LSN_rexism_leader:0 "NAME"
- LSN_despotism_leader:0 "NAME"
- LSN_oligarchism_leader:0 "NAME"
- LSN_anarchism_leader:0 "NAME"
- LSN_moderatism_leader:0 "NAME"
- LSN_centrism_leader:0 "NAME"
  #military leaders
- LSN_corps_commander_1:0 "NAME"
- LSN_corps_commander_2:0 "NAME"
- LSN_corps_commander_3:0 "NAME"
- LSN_corps_commander_4:0 "NAME"
- LSN_naval_leader_1:0 "NAME"
- LSN_naval_leader_2:0 "NAME"
- LSN_naval_leader_3:0 "NAME"
- LSN_naval_leader_4:0 "NAME"
- LSN_naval_leader_5:0 "NAME"
+ LSN_corps_commander_1:0 "Rik Samant"
+ LSN_corps_commander_2:0 "Raj Dalaisat"
+ LSN_corps_commander_3:0 "Rinku Mattam"
+ LSN_corps_commander_4:0 "Paban Mudulivva"
+ LSN_naval_leader_1:0 "Adway Marithristra"
+ LSN_naval_leader_2:0 "Kartika Pattnaikri"
+ LSN_naval_leader_3:0 "Bhadrak Kuluthana"
+ LSN_naval_leader_4:0 "Kuldip Khalpadia"
+ LSN_naval_leader_5:0 "Dhiraj Besra"
  #advisors
  LSN_anti_communist_crusader:0 "NAME"
  LSN_armaments_organizer:0 "NAME"
  LSN_backroom_backstabber:0 "NAME"
- LSN_captain_of_industry:0 "NAME"
- LSN_communist_revolutionary:0 "NAME"
+ LSN_captain_of_industry:0 "Ajay Bhumianandri"
+ LSN_communist_revolutionary:0 "Dilawar Mohanta"
  LSN_compassionate_gentleman:0 "NAME"
- LSN_democratic_reformer:0 "NAME"
+ LSN_democratic_reformer:0 "Sipun Kuldeepindri"
  LSN_economist:0 "NAME"
  LSN_editor:0 "NAME"
- LSN_fascist_demagogue:0 "NAME"
+ LSN_fascist_demagogue:0 "Mehar Mahapatratshri"
  LSN_financial_expert:0 "NAME"
  LSN_head_of_intelligence:0 "NAME"
- LSN_ideological_crusader:0 "NAME"
+ LSN_ideological_crusader:0 "Savar Patra"
  LSN_popular_figurehead:0 "NAME"
  LSN_prince_of_terror:0 "NAME"
- LSN_silent_workhorse:0 "NAME"
+ LSN_silent_workhorse:0 "Shmit Sorabuvva"
  LSN_smooth_talking_charmer:0 "NAME"
  LSN_war_industrialist:0 "NAME"
  #theorists
  LSN_military_theorist:0 "NAME"
- LSN_air_warfare_theorist:0 "NAME"
+ LSN_air_warfare_theorist:0 "Hara Ghiuria"
  LSN_naval_theorist:0 "NAME"
  LSN_naval_aviation_pioneer:0 "NAME"
  LSN_victory_through_airpower:0 "NAME"
  LSN_nuclear_scientist:0 "NAME"
  LSN_rocket_scientist:0 "NAME"
  #military chiefs
- LSN_army_chief_defensive_2:0 "NAME"
- LSN_army_chief_drill_2:0 "NAME"
- LSN_army_chief_maneuver_2:0 "NAME"
- LSN_army_chief_morale_2:0 "NAME"
- LSN_army_chief_offensive_2:0 "NAME"
- LSN_army_chief_organizational_1:0 "NAME"
- LSN_navy_chief_decisive_battle_2:0 "NAME"
- LSN_navy_chief_naval_aviation_2:0 "NAME"
- LSN_air_chief_ground_support_2:0 "NAME"
- LSN_air_chief_reform_2:0 "NAME"
- LSN_army_armLSNd_1:0 "NAME"
- LSN_army_entrenchment_1:0 "NAME"
- LSN_army_infantry_1:0 "NAME"
- LSN_army_logistics_2:0 "NAME"
- LSN_air_bomber_interception_2:0 "NAME"
- LSN_air_close_air_support_2:0 "NAME"
- LSN_navy_screen_2:0 "NAME"
- LSN_navy_anti_submarine_1:0 "NAME"
- LSN_navy_naval_air_defense_2:0 "NAME"
+ LSN_maneuver_2:0 "Ujesh Parija"
+ LSN_capital_ship_2:0 "Agrim Kadamgudia"
+ LSN_naval_theorist:0 "Natwar Sahu"
+ LSN_quartermaster_gen:0 "Piush Kerketa"
+ LSN_logistics_2:0 "Vilas Mangraj"
+ LSN_close_air_support_2:0 "Tanuja Bajingandri"
+ LSN_mil_theorist:0 "Sujay Challan"
+ LSN_ground_support_2:0 "Pujit Patro"
+ LSN_air_theorist:0 "Keshab Moharana"
+ LSN_defensive_2:0 "Neeraj Mahakuda"
+ LSN_commerce_raiding_2:0 "Giyandip Mishra"
+ LSN_regrouping_2:0 "Rohan Pentana"
+ LSN_night_ops_2:0 "Saral Baliarsing"
+ LSN_offensive_2:0 "Jawahar Minyakka"
+ LSN_backstabber:0 "Jatin Chandratreya"
