--- a/localisation/MCT_l_english.yml
+++ b/localisation/MCT_l_english.yml
@@ -1,79 +1,60 @@
 ﻿l_english:
 
  #characters
- #political leaders
- MCT_conservatism_leader:0 "NAME"
- MCT_liberalism_leader:0 "NAME"
- MCT_socialism_leader:0 "NAME"
- MCT_marxism_leader:0 "NAME"
- MCT_leninism_leader:0 "NAME"
- MCT_stalinism_leader:0 "NAME"
- MCT_anti_revisionism_leader:0 "NAME"
- MCT_anarchist_communism_leader:0 "NAME"
- MCT_nazism_leader:0 "NAME"
- MCT_gen_nazism_leader:0 "NAME"
- MCT_generic_fascism_leader:0 "NAME"
- MCT_falangism_leader:0 "NAME"
- MCT_rexism_leader:0 "NAME"
- MCT_despotism_leader:0 "NAME"
- MCT_oligarchism_leader:0 "NAME"
- MCT_anarchism_leader:0 "NAME"
- MCT_moderatism_leader:0 "NAME"
- MCT_centrism_leader:0 "NAME"
  #military leaders
- MCT_corps_commander_1:0 "NAME"
- MCT_corps_commander_2:0 "NAME"
- MCT_corps_commander_3:0 "NAME"
- MCT_corps_commander_4:0 "NAME"
- MCT_naval_leader_1:0 "NAME"
- MCT_naval_leader_2:0 "NAME"
- MCT_naval_leader_3:0 "NAME"
- MCT_naval_leader_4:0 "NAME"
- MCT_naval_leader_5:0 "NAME"
+ MCT_corps_commander_1:0 "Ansaam Ilak"
+ MCT_corps_commander_2:0 "Getshan Eshewagaa"
+ MCT_corps_commander_3:0 "Ustrali Emburenga"
+ MCT_corps_commander_4:0 "Gmavake Hensut"
+ MCT_naval_leader_1:0 "Antagaa Jeshnal"
+ MCT_naval_leader_2:0 "Kukilwa Esmanto"
+ MCT_naval_leader_3:0 "Dubrik Sevaapil"
+ MCT_naval_leader_4:0 "Onshuba Pazobus"
+ MCT_naval_leader_5:0 "Ounzud Tarzadaa"
  #advisors
- MCT_anti_communist_crusader:0 "NAME"
- MCT_armaments_organizer:0 "NAME"
- MCT_backroom_backstabber:0 "NAME"
- MCT_captain_of_industry:0 "NAME"
- MCT_communist_revolutionary:0 "NAME"
- MCT_compassionate_gentleman:0 "NAME"
- MCT_democratic_reformer:0 "NAME"
- MCT_economist:0 "NAME"
- MCT_editor:0 "NAME"
- MCT_fascist_demagogue:0 "NAME"
- MCT_financial_expert:0 "NAME"
- MCT_head_of_intelligence:0 "NAME"
- MCT_ideological_crusader:0 "NAME"
- MCT_popular_figurehead:0 "NAME"
- MCT_prince_of_terror:0 "NAME"
- MCT_silent_workhorse:0 "NAME"
- MCT_smooth_talking_charmer:0 "NAME"
- MCT_war_industrialist:0 "NAME"
+ MCT_backroom_backstabber:0 "Daparno Chardriu"
+ MCT_communist_revolutionary:0 "Ocrana Robilnod"
+ MCT_democratic_reformer:0 "Vemlishe Nozrihe"
+ MCT_fascist_demagogue:0 "Dagish Khevnudaeh"
+ MCT_popular_figurehead:0 "Chimnebu Eilvil"
+ MCT_prince_of_terror:0 "Dolvurtha Besedone"
+ MCT_smooth_talking_charmer:0 "Kuglo Crudro"
  #theorists
- MCT_military_theorist:0 "NAME"
- MCT_air_warfare_theorist:0 "NAME"
- MCT_naval_theorist:0 "NAME"
- MCT_naval_aviation_pioneer:0 "NAME"
- MCT_victory_through_airpower:0 "NAME"
- MCT_nuclear_scientist:0 "NAME"
- MCT_rocket_scientist:0 "NAME"
+ MCT_air_warfare_theorist:0 "Bebneci Convret"
+ MCT_naval_theorist:0 "Ponobri Mulrun"
+ MCT_naval_aviation_pioneer:0 "Besino Phidiboc"
+ MCT_victory_through_airpower:0 "Bumnuik Abusries"
+ MCT_nuclear_scientist:0 "Odri Kreezunrith"
+ MCT_rocket_scientist:0 "Uklesi Crerle"
  #military chiefs
- MCT_army_chief_defensive_2:0 "NAME"
- MCT_army_chief_drill_2:0 "NAME"
- MCT_army_chief_maneuver_2:0 "NAME"
- MCT_army_chief_morale_2:0 "NAME"
- MCT_army_chief_offensive_2:0 "NAME"
- MCT_army_chief_organizational_1:0 "NAME"
- MCT_navy_chief_decisive_battle_2:0 "NAME"
- MCT_navy_chief_naval_aviation_2:0 "NAME"
- MCT_air_chief_ground_support_2:0 "NAME"
- MCT_air_chief_reform_2:0 "NAME"
- MCT_army_armMCTd_1:0 "NAME"
- MCT_army_entrenchment_1:0 "NAME"
- MCT_army_infantry_1:0 "NAME"
- MCT_army_logistics_2:0 "NAME"
- MCT_air_bomber_interception_2:0 "NAME"
- MCT_air_close_air_support_2:0 "NAME"
- MCT_navy_screen_2:0 "NAME"
- MCT_navy_anti_submarine_1:0 "NAME"
- MCT_navy_naval_air_defense_2:0 "NAME"
+ MCT_army_chief_defensive_2:0 "Ganvo Nindrinul"
+ MCT_army_chief_drill_2:0 "Erraho Wurthoh"
+ MCT_army_chief_maneuver_2:0 "Olore Chavnish"
+ MCT_navy_chief_decisive_battle_2:0 "Gakaharo Ziavnoh"
+ MCT_navy_chief_naval_aviation_2:0 "Uleca Baiselvar"
+ MCT_air_chief_ground_support_2:0 "Misalna Shonnar"
+ MCT_air_chief_reform_2:0 "Khorled Dhugrun"
+ MCT_army_armored_1:0 "Ghivaede Wirulzith"
+ MCT_army_entrenchment_1:0 "Mirzekh Zanuresh"
+ MCT_army_infantry_1:0 "Byrzek Thenis"
+ MCT_army_logistics_2:0 "Rirshimo Noshriudath"
+ MCT_air_bomber_interception_2:0 "Uruba Ruvrugec"
+ MCT_air_close_air_support_2:0 "Nolrumu Osazor"
+ MCT_navy_screen_2:0 "Uraksa Kishrodet"
+ MCT_navy_anti_submarine_1:0 "Chaphruno Shraevrei"
+ MCT_night_ops_2:0 "Gihassi Ozrair"
+ MCT_ground_support_2:0 "Rocnali Corildra"
+ MCT_close_air_support_2:0 "Brandrek Drurthugiu"
+ MCT_commerce_raiding_2:0 "Zomlaik Nimredar"
+ MCT_prince_of_terror:0 "Tomlairth Ceertheegie"
+ MCT_offensive_2:0 "Loksene Kruzogan"
+ MCT_logistics_2:0 "Cuphehe Denosh"
+ MCT_regrouping_2:0 "Dendren Tengeesaid"
+ MCT_mil_theorist:0 "Ryndret Cainzol"
+ MCT_quartermaster_gen:0 "Fyclo Iegiza"
+ MCT_maneuver_2:0 "Odvima Shagemro"
+ MCT_backstabber:0 "Liroso Sugondrac"
+ MCT_naval_theorist:0 "Moumnud Tiemra"
+ MCT_air_theorist:0 "Enriso Gunorla"
+ MCT_capital_ship_2:0 "Gorloss Kimirthid"
+ MCT_defensive_2:0 "Cisemvu Gaignoder"
