--- a/localisation/MHN_l_english.yml
+++ b/localisation/MHN_l_english.yml
@@ -1,79 +1,60 @@
 ﻿l_english:
 
  #characters
- #political leaders
- MHN_conservatism_leader:0 "NAME"
- MHN_liberalism_leader:0 "NAME"
- MHN_socialism_leader:0 "NAME"
- MHN_marxism_leader:0 "NAME"
- MHN_leninism_leader:0 "NAME"
- MHN_stalinism_leader:0 "NAME"
- MHN_anti_revisionism_leader:0 "NAME"
- MHN_anarchist_communism_leader:0 "NAME"
- MHN_nazism_leader:0 "NAME"
- MHN_gen_nazism_leader:0 "NAME"
- MHN_generic_fascism_leader:0 "NAME"
- MHN_falangism_leader:0 "NAME"
- MHN_rexism_leader:0 "NAME"
- MHN_despotism_leader:0 "NAME"
- MHN_oligarchism_leader:0 "NAME"
- MHN_anarchism_leader:0 "NAME"
- MHN_moderatism_leader:0 "NAME"
- MHN_centrism_leader:0 "NAME"
  #military leaders
- MHN_corps_commander_1:0 "NAME"
- MHN_corps_commander_2:0 "NAME"
- MHN_corps_commander_3:0 "NAME"
- MHN_corps_commander_4:0 "NAME"
- MHN_naval_leader_1:0 "NAME"
- MHN_naval_leader_2:0 "NAME"
- MHN_naval_leader_3:0 "NAME"
- MHN_naval_leader_4:0 "NAME"
- MHN_naval_leader_5:0 "NAME"
+ MHN_corps_commander_1:0 "Kamole Keahi"
+ MHN_corps_commander_2:0 "Haoa Kaia"
+ MHN_corps_commander_3:0 "Kalawai'a Kekai"
+ MHN_corps_commander_4:0 "Keali'i Kahawaii"
+ MHN_naval_leader_1:0 "Kalua Pane'e"
+ MHN_naval_leader_2:0 "Palani Hoapili"
+ MHN_naval_leader_3:0 "Ka'ilinemo Moliakalaniikeola"
+ MHN_naval_leader_4:0 "Makaio Kalua"
+ MHN_naval_leader_5:0 "Keokolo Kiliona"
  #advisors
  MHN_anti_communist_crusader:0 "NAME"
- MHN_armaments_organizer:0 "NAME"
- MHN_backroom_backstabber:0 "NAME"
- MHN_captain_of_industry:0 "NAME"
- MHN_communist_revolutionary:0 "NAME"
+ MHN_armaments_organizer:0 "Ihupani Mahaulu"
+ MHN_backroom_backstabber:0 "Miliani Palea"
+ MHN_captain_of_industry:0 "Kamakani Keli'i"
+ MHN_communist_revolutionary:0 "Kapueo Kapahu"
  MHN_compassionate_gentleman:0 "NAME"
- MHN_democratic_reformer:0 "NAME"
+ MHN_democratic_reformer:0 "Mana'olanakeiki Keiki"
  MHN_economist:0 "NAME"
  MHN_editor:0 "NAME"
- MHN_fascist_demagogue:0 "NAME"
+ MHN_fascist_demagogue:0 "Makoa Kealoha"
  MHN_financial_expert:0 "NAME"
  MHN_head_of_intelligence:0 "NAME"
  MHN_ideological_crusader:0 "NAME"
  MHN_popular_figurehead:0 "NAME"
- MHN_prince_of_terror:0 "NAME"
+ MHN_prince_of_terror:0 "Kelii Mele"
  MHN_silent_workhorse:0 "NAME"
- MHN_smooth_talking_charmer:0 "NAME"
+ MHN_smooth_talking_charmer:0 "Hoalohalani Ekewaka"
  MHN_war_industrialist:0 "NAME"
  #theorists
- MHN_military_theorist:0 "NAME"
- MHN_air_warfare_theorist:0 "NAME"
- MHN_naval_theorist:0 "NAME"
+ MHN_military_theorist:0 "Hanakahi Keliikoa"
+ MHN_air_warfare_theorist:0 "Ewekapu Paikuli"
+ MHN_naval_theorist:0 "Laionela Loni"
  MHN_naval_aviation_pioneer:0 "NAME"
  MHN_victory_through_airpower:0 "NAME"
  MHN_nuclear_scientist:0 "NAME"
  MHN_rocket_scientist:0 "NAME"
  #military chiefs
- MHN_army_chief_defensive_2:0 "NAME"
- MHN_army_chief_drill_2:0 "NAME"
- MHN_army_chief_maneuver_2:0 "NAME"
+ MHN_army_chief_defensive_2:0 "Hokuhelele'i Makaha"
+ MHN_army_chief_drill_2:0 "A'ia'i Ipo"
+ MHN_army_chief_maneuver_2:0 "Hokulani Keala'ani"
  MHN_army_chief_morale_2:0 "NAME"
  MHN_army_chief_offensive_2:0 "NAME"
  MHN_army_chief_organizational_1:0 "NAME"
- MHN_navy_chief_decisive_battle_2:0 "NAME"
- MHN_navy_chief_naval_aviation_2:0 "NAME"
- MHN_air_chief_ground_support_2:0 "NAME"
- MHN_air_chief_reform_2:0 "NAME"
- MHN_army_armMHNd_1:0 "NAME"
+ MHN_navy_chief_decisive_battle_2:0 "Iokua Ekewa'a"
+ MHN_navy_chief_naval_aviation_2:0 "Mohala Kalani"
+ MHN_air_chief_ground_support_2:0 "Kawaimomona Kahiona"
+ MHN_air_chief_reform_2:0 "Hoaalohakupa'a Aneko"
+ MHN_army_armored_1:0 "NAME"
  MHN_army_entrenchment_1:0 "NAME"
  MHN_army_infantry_1:0 "NAME"
- MHN_army_logistics_2:0 "NAME"
- MHN_air_bomber_interception_2:0 "NAME"
- MHN_air_close_air_support_2:0 "NAME"
- MHN_navy_screen_2:0 "NAME"
+ MHN_army_logistics_2:0 "Paulo Kaia"
+ MHN_air_bomber_interception_2:0 "Malu Kalawai'a"
+ MHN_air_close_air_support_2:0 "Aloisi Mahina"
+ MHN_navy_screen_2:0 "Lewai Kakalina"
  MHN_navy_anti_submarine_1:0 "NAME"
  MHN_navy_naval_air_defense_2:0 "NAME"
