--- a/localisation/NCA_I_l_english.yml
+++ b/localisation/NCA_I_l_english.yml
@@ -3,56 +3,56 @@
  #characters
  #political leaders
  NCA_conservatism_leader:0 "NAME"
- NCA_liberalism_leader:0 "NAME"
+ NCA_liberalism_leader:0 "Abram Tristram Brooke"
  NCA_socialism_leader:0 "NAME"
  NCA_marxism_leader:0 "NAME"
- NCA_leninism_leader:0 "NAME"
+ NCA_leninism_leader:0 "Osborne Louis Tyson"
  NCA_stalinism_leader:0 "NAME"
  NCA_anti_revisionism_leader:0 "NAME"
  NCA_anarchist_communism_leader:0 "NAME"
  NCA_nazism_leader:0 "NAME"
  NCA_gen_nazism_leader:0 "NAME"
- NCA_generic_fascism_leader:0 "NAME"
+ NCA_generic_fascism_leader:0 "Gale Timothy Bancroft"
  NCA_falangism_leader:0 "NAME"
  NCA_rexism_leader:0 "NAME"
  NCA_despotism_leader:0 "NAME"
  NCA_oligarchism_leader:0 "NAME"
  NCA_anarchism_leader:0 "NAME"
  NCA_moderatism_leader:0 "NAME"
- NCA_centrism_leader:0 "NAME"
+ NCA_centrism_leader:0 "Randall Gideon Plaskett"
  #military leaders
- NCA_corps_commander_1:0 "NAME"
- NCA_corps_commander_2:0 "NAME"
- NCA_corps_commander_3:0 "NAME"
- NCA_corps_commander_4:0 "NAME"
- NCA_naval_leader_1:0 "NAME"
- NCA_naval_leader_2:0 "NAME"
- NCA_naval_leader_3:0 "NAME"
- NCA_naval_leader_4:0 "NAME"
- NCA_naval_leader_5:0 "NAME"
+ NCA_corps_commander_1:0 "Shannon Frazier Masters"
+ NCA_corps_commander_2:0 "Lennon R. Everett"
+ NCA_corps_commander_3:0 "Benedict Eliott Tracey"
+ NCA_corps_commander_4:0 "Danny Barclay Boyce"
+ NCA_naval_leader_1:0 "Jules Ralf Thompkins"
+ NCA_naval_leader_2:0 "Raeburn C. Dunn"
+ NCA_naval_leader_3:0 "Keefe K. Rowbottom"
+ NCA_naval_leader_4:0 "Wes Winfred Monday"
+ NCA_naval_leader_5:0 "Kyson Kurtis Hart"
  #advisors
  NCA_anti_communist_crusader:0 "NAME"
- NCA_armaments_organizer:0 "NAME"
+ NCA_armaments_organizer:0 "Winton 'Scottie' Acker"
  NCA_backroom_backstabber:0 "NAME"
  NCA_captain_of_industry:0 "NAME"
- NCA_communist_revolutionary:0 "NAME"
+ NCA_communist_revolutionary:0 "Lynn A. Giles"
  NCA_compassionate_gentleman:0 "NAME"
- NCA_democratic_reformer:0 "NAME"
+ NCA_democratic_reformer:0 "Watson Harvey Morton"
  NCA_economist:0 "NAME"
- NCA_editor:0 "NAME"
- NCA_fascist_demagogue:0 "NAME"
+ NCA_editor:0 "Malcom Tuff"
+ NCA_fascist_demagogue:0 "Harvey A. Sexton"
  NCA_financial_expert:0 "NAME"
  NCA_head_of_intelligence:0 "NAME"
  NCA_ideological_crusader:0 "NAME"
  NCA_popular_figurehead:0 "NAME"
  NCA_prince_of_terror:0 "NAME"
- NCA_silent_workhorse:0 "NAME"
+ NCA_silent_workhorse:0 "Bernard G. Michaelson"
  NCA_smooth_talking_charmer:0 "NAME"
- NCA_war_industrialist:0 "NAME"
+ NCA_war_industrialist:0 "Corwin Hopson"
  #theorists
- NCA_military_theorist:0 "NAME"
- NCA_air_warfare_theorist:0 "NAME"
- NCA_naval_theorist:0 "NAME"
+ NCA_military_theorist:0 "Jett Tyson"
+ NCA_air_warfare_theorist:0 "Norton T. Monday"
+ NCA_naval_theorist:0 "Carrol Mitchell Robert"
  NCA_naval_aviation_pioneer:0 "NAME"
  NCA_victory_through_airpower:0 "NAME"
  NCA_nuclear_scientist:0 "NAME"
@@ -62,18 +62,18 @@
  NCA_army_chief_drill_2:0 "NAME"
  NCA_army_chief_maneuver_2:0 "NAME"
  NCA_army_chief_morale_2:0 "NAME"
- NCA_army_chief_offensive_2:0 "NAME"
- NCA_army_chief_organizational_1:0 "NAME"
- NCA_navy_chief_decisive_battle_2:0 "NAME"
- NCA_navy_chief_naval_aviation_2:0 "NAME"
- NCA_air_chief_ground_support_2:0 "NAME"
- NCA_air_chief_reform_2:0 "NAME"
- NCA_army_armNCAd_1:0 "NAME"
- NCA_army_entrenchment_1:0 "NAME"
- NCA_army_infantry_1:0 "NAME"
- NCA_army_logistics_2:0 "NAME"
- NCA_air_bomber_interception_2:0 "NAME"
- NCA_air_close_air_support_2:0 "NAME"
- NCA_navy_screen_2:0 "NAME"
+ NCA_army_chief_offensive_2:0 "Meredith Hope"
+ NCA_army_chief_organizational_1:0 "Meade Alan Church"
+ NCA_navy_chief_decisive_battle_2:0 "Graeme Darden Fosse"
+ NCA_navy_chief_naval_aviation_2:0 "Allyn Kasen Brett"
+ NCA_air_chief_ground_support_2:0 "Sullivan Lewis"
+ NCA_air_chief_reform_2:0 "Vergil L. Washington"
+ NCA_army_armored_1:0 "Benjamin Toby Mills"
+ NCA_army_entrenchment_1:0 "Myles Guy Carver"
+ NCA_army_infantry_1:0 "Myron Stace Herbertson"
+ NCA_army_logistics_2:0 "Piers Moss-Seaver"
+ NCA_air_bomber_interception_2:0 "Palmer Jervis Boon"
+ NCA_air_close_air_support_2:0 "Lachlan Monroe Rennell"
+ NCA_navy_screen_2:0 "Woodrow Foster"
  NCA_navy_anti_submarine_1:0 "NAME"
  NCA_navy_naval_air_defense_2:0 "NAME"
