--- a/localisation/PTY_l_english.yml
+++ b/localisation/PTY_l_english.yml
@@ -2,57 +2,57 @@
 
  #characters
  #political leaders
- PTY_conservatism_leader:0 "NAME"
+ PTY_conservatism_leader:0 "Eshana Chintalapati"
  PTY_liberalism_leader:0 "NAME"
  PTY_socialism_leader:0 "NAME"
- PTY_marxism_leader:0 "NAME"
+ PTY_marxism_leader:0 "Haridwar Mukkamala"
  PTY_leninism_leader:0 "NAME"
  PTY_stalinism_leader:0 "NAME"
  PTY_anti_revisionism_leader:0 "NAME"
  PTY_anarchist_communism_leader:0 "NAME"
  PTY_nazism_leader:0 "NAME"
  PTY_gen_nazism_leader:0 "NAME"
- PTY_generic_fascism_leader:0 "NAME"
+ PTY_generic_fascism_leader:0 "Atulith Jakkala"
  PTY_falangism_leader:0 "NAME"
  PTY_rexism_leader:0 "NAME"
  PTY_despotism_leader:0 "NAME"
- PTY_oligarchism_leader:0 "NAME"
+ PTY_oligarchism_leader:0 "Nihan Gurram"
  PTY_anarchism_leader:0 "NAME"
  PTY_moderatism_leader:0 "NAME"
  PTY_centrism_leader:0 "NAME"
  #military leaders
- PTY_corps_commander_1:0 "NAME"
- PTY_corps_commander_2:0 "NAME"
- PTY_corps_commander_3:0 "NAME"
- PTY_corps_commander_4:0 "NAME"
- PTY_naval_leader_1:0 "NAME"
- PTY_naval_leader_2:0 "NAME"
- PTY_naval_leader_3:0 "NAME"
- PTY_naval_leader_4:0 "NAME"
- PTY_naval_leader_5:0 "NAME"
+ PTY_corps_commander_1:0 "Arnav Vepa"
+ PTY_corps_commander_2:0 "Devadarshan Karra"
+ PTY_corps_commander_3:0 "Abhyudhay Parimi"
+ PTY_corps_commander_4:0 "Daitya Vutukuru"
+ PTY_naval_leader_1:0 "Tusya Pasumarti"
+ PTY_naval_leader_2:0 "Elil Gollapudi"
+ PTY_naval_leader_3:0 "Nagarin Gorthi"
+ PTY_naval_leader_4:0 "Gunakar Kotapalli"
+ PTY_naval_leader_5:0 "Gupil Pendyala"
  #advisors
  PTY_anti_communist_crusader:0 "NAME"
- PTY_armaments_organizer:0 "NAME"
- PTY_backroom_backstabber:0 "NAME"
+ PTY_armaments_organizer:0 "Bhoolokanathan Chebrolu"
+ PTY_backroom_backstabber:0 "Dhanaraaju Nidadovulu"
  PTY_captain_of_industry:0 "NAME"
- PTY_communist_revolutionary:0 "NAME"
+ PTY_communist_revolutionary:0 "Diptanshu Ayyalasomayajula"
  PTY_compassionate_gentleman:0 "NAME"
- PTY_democratic_reformer:0 "NAME"
+ PTY_democratic_reformer:0 "Darsheel Kummamuru"
  PTY_economist:0 "NAME"
  PTY_editor:0 "NAME"
- PTY_fascist_demagogue:0 "NAME"
+ PTY_fascist_demagogue:0 "Ujwal Gullapalli"
  PTY_financial_expert:0 "NAME"
  PTY_head_of_intelligence:0 "NAME"
  PTY_ideological_crusader:0 "NAME"
  PTY_popular_figurehead:0 "NAME"
- PTY_prince_of_terror:0 "NAME"
+ PTY_prince_of_terror:0 "Chiranjeevi Cheedella"
  PTY_silent_workhorse:0 "NAME"
  PTY_smooth_talking_charmer:0 "NAME"
  PTY_war_industrialist:0 "NAME"
  #theorists
- PTY_military_theorist:0 "NAME"
- PTY_air_warfare_theorist:0 "NAME"
- PTY_naval_theorist:0 "NAME"
+ PTY_military_theorist:0 "Aloke Mutyala"
+ PTY_air_warfare_theorist:0 "Miland Madhipatla"
+ PTY_naval_theorist:0 "Tatya Nistla"
  PTY_naval_aviation_pioneer:0 "NAME"
  PTY_victory_through_airpower:0 "NAME"
  PTY_nuclear_scientist:0 "NAME"
@@ -62,18 +62,18 @@
  PTY_army_chief_drill_2:0 "NAME"
  PTY_army_chief_maneuver_2:0 "NAME"
  PTY_army_chief_morale_2:0 "NAME"
- PTY_army_chief_offensive_2:0 "NAME"
- PTY_army_chief_organizational_1:0 "NAME"
- PTY_navy_chief_decisive_battle_2:0 "NAME"
- PTY_navy_chief_naval_aviation_2:0 "NAME"
- PTY_air_chief_ground_support_2:0 "NAME"
- PTY_air_chief_reform_2:0 "NAME"
+ PTY_army_chief_offensive_2:0 "Anadi Cherukuri"
+ PTY_army_chief_organizational_1:0 "Sahib Sreegiri"
+ PTY_navy_chief_decisive_battle_2:0 "Hasan Pinnamaneni"
+ PTY_navy_chief_naval_aviation_2:0 "Chandravardhan Yamujala"
+ PTY_air_chief_ground_support_2:0 "Gurdeep Gupta"
+ PTY_air_chief_reform_2:0 "Ahaan Gannavarapu"
  PTY_army_armored_1:0 "NAME"
  PTY_army_entrenchment_1:0 "NAME"
- PTY_army_infantry_1:0 "NAME"
- PTY_army_logistics_2:0 "NAME"
- PTY_air_bomber_interception_2:0 "NAME"
- PTY_air_close_air_support_2:0 "NAME"
- PTY_navy_screen_2:0 "NAME"
- PTY_navy_anti_submarine_1:0 "NAME"
+ PTY_army_infantry_1:0 "Ravikeerti Kousika"
+ PTY_army_logistics_2:0 "Irya Pingili"
+ PTY_air_bomber_interception_2:0 "Girichandra Chaganti"
+ PTY_air_close_air_support_2:0 "Sadiva Pasumarti"
+ PTY_navy_screen_2:0 "Haripreet Indragani"
+ PTY_navy_anti_submarine_1:0 "Hastin Modukuri"
  PTY_navy_naval_air_defense_2:0 "NAME"
