--- a/localisation/QLA_l_english.yml
+++ b/localisation/QLA_l_english.yml
@@ -2,56 +2,56 @@
 
  #characters
  #political leaders
- QLA_conservatism_leader:0 "NAME"
+ QLA_conservatism_leader:0 "Nakran Uluum"
  QLA_liberalism_leader:0 "NAME"
  QLA_socialism_leader:0 "NAME"
  QLA_marxism_leader:0 "NAME"
- QLA_leninism_leader:0 "NAME"
+ QLA_leninism_leader:0 "Lempuras Sufand"
  QLA_stalinism_leader:0 "NAME"
  QLA_anti_revisionism_leader:0 "NAME"
  QLA_anarchist_communism_leader:0 "NAME"
  QLA_nazism_leader:0 "NAME"
  QLA_gen_nazism_leader:0 "NAME"
- QLA_generic_fascism_leader:0 "NAME"
+ QLA_generic_fascism_leader:0 "Pon Wenduuresh"
  QLA_falangism_leader:0 "NAME"
  QLA_rexism_leader:0 "NAME"
- QLA_despotism_leader:0 "NAME"
+ QLA_despotism_leader:0 "Untural Ernmelanguumu"
  QLA_oligarchism_leader:0 "NAME"
  QLA_anarchism_leader:0 "NAME"
  QLA_moderatism_leader:0 "NAME"
  QLA_centrism_leader:0 "NAME"
  #military leaders
- QLA_corps_commander_1:0 "NAME"
- QLA_corps_commander_2:0 "NAME"
- QLA_corps_commander_3:0 "NAME"
- QLA_corps_commander_4:0 "NAME"
- QLA_naval_leader_1:0 "NAME"
- QLA_naval_leader_2:0 "NAME"
- QLA_naval_leader_3:0 "NAME"
- QLA_naval_leader_4:0 "NAME"
- QLA_naval_leader_5:0 "NAME"
+ QLA_corps_commander_1:0 "Lupuru Thensham"
+ QLA_corps_commander_2:0 "Ilgarm Ereshtha"
+ QLA_corps_commander_3:0 "Nawuum Humishno"
+ QLA_corps_commander_4:0 "Eporol Answinguut"
+ QLA_naval_leader_1:0 "Nusul Raspimnu"
+ QLA_naval_leader_2:0 "Thaikur Bempassh"
+ QLA_naval_leader_3:0 "Yongi Teremals"
+ QLA_naval_leader_4:0 "Otringori Qansin"
+ QLA_naval_leader_5:0 "Liplams Junglandip"
  #advisors
  QLA_anti_communist_crusader:0 "NAME"
  QLA_armaments_organizer:0 "NAME"
- QLA_backroom_backstabber:0 "NAME"
+ QLA_backroom_backstabber:0 "Nahwip Nempandnat"
  QLA_captain_of_industry:0 "NAME"
- QLA_communist_revolutionary:0 "NAME"
+ QLA_communist_revolutionary:0 "Ahwuungs Swethnim"
  QLA_compassionate_gentleman:0 "NAME"
- QLA_democratic_reformer:0 "NAME"
+ QLA_democratic_reformer:0 "Julams Humingdrish"
  QLA_economist:0 "NAME"
  QLA_editor:0 "NAME"
- QLA_fascist_demagogue:0 "NAME"
+ QLA_fascist_demagogue:0 "Tapinresh Nelthanmuur"
  QLA_financial_expert:0 "NAME"
  QLA_head_of_intelligence:0 "NAME"
  QLA_ideological_crusader:0 "NAME"
  QLA_popular_figurehead:0 "NAME"
- QLA_prince_of_terror:0 "NAME"
+ QLA_prince_of_terror:0 "Yensh Imanguurlan"
  QLA_silent_workhorse:0 "NAME"
  QLA_smooth_talking_charmer:0 "NAME"
  QLA_war_industrialist:0 "NAME"
  #theorists
- QLA_military_theorist:0 "NAME"
- QLA_air_warfare_theorist:0 "NAME"
+ QLA_military_theorist:0 "Ulermu Enmashthal"
+ QLA_air_warfare_theorist:0 "Winshaums Oplingore"
  QLA_naval_theorist:0 "NAME"
  QLA_naval_aviation_pioneer:0 "NAME"
  QLA_victory_through_airpower:0 "NAME"
@@ -62,18 +62,18 @@
  QLA_army_chief_drill_2:0 "NAME"
  QLA_army_chief_maneuver_2:0 "NAME"
  QLA_army_chief_morale_2:0 "NAME"
- QLA_army_chief_offensive_2:0 "NAME"
- QLA_army_chief_organizational_1:0 "NAME"
- QLA_navy_chief_decisive_battle_2:0 "NAME"
- QLA_navy_chief_naval_aviation_2:0 "NAME"
- QLA_air_chief_ground_support_2:0 "NAME"
- QLA_air_chief_reform_2:0 "NAME"
+ QLA_army_chief_offensive_2:0 "Fingro Gustuum"
+ QLA_army_chief_organizational_1:0 "Nelipor Hengshal"
+ QLA_navy_chief_decisive_battle_2:0 "Binhuum Santhat"
+ QLA_navy_chief_naval_aviation_2:0 "Nampach Rintha"
+ QLA_air_chief_ground_support_2:0 "Unampte Sethram"
+ QLA_air_chief_reform_2:0 "Imogruum Fustash"
  QLA_army_armored_1:0 "NAME"
- QLA_army_entrenchment_1:0 "NAME"
- QLA_army_infantry_1:0 "NAME"
+ QLA_army_entrenchment_1:0 "Tel Siwamuun"
+ QLA_army_infantry_1:0 "Yimal Hurbungru"
  QLA_army_logistics_2:0 "NAME"
  QLA_air_bomber_interception_2:0 "NAME"
- QLA_air_close_air_support_2:0 "NAME"
+ QLA_air_close_air_support_2:0 "Nalwat Sempral"
  QLA_navy_screen_2:0 "NAME"
  QLA_navy_anti_submarine_1:0 "NAME"
  QLA_navy_naval_air_defense_2:0 "NAME"
