--- a/localisation/SSS_l_english.yml
+++ b/localisation/SSS_l_english.yml
@@ -2,78 +2,78 @@
  
  #characters
  #political leaders
- SSS_conservatism_leader:0 "NAME"
+ SSS_conservatism_leader:0 "Léonard Giacobbe D'Ovidio"
  SSS_liberalism_leader:0 "NAME"
  SSS_socialism_leader:0 "NAME"
  SSS_marxism_leader:0 "NAME"
- SSS_leninism_leader:0 "NAME"
+ SSS_leninism_leader:0 "Utz Boniface Fabron"
  SSS_stalinism_leader:0 "NAME"
  SSS_anti_revisionism_leader:0 "NAME"
  SSS_anarchist_communism_leader:0 "NAME"
  SSS_nazism_leader:0 "NAME"
- SSS_gen_nazism_leader:0 "NAME"
+ SSS_gen_nazism_leader:0 "Francis Remigio Rustici"
  SSS_generic_fascism_leader:0 "NAME"
  SSS_falangism_leader:0 "NAME"
  SSS_rexism_leader:0 "NAME"
  SSS_despotism_leader:0 "NAME"
- SSS_oligarchism_leader:0 "NAME"
+ SSS_oligarchism_leader:0 "Armand Flavianus D'Agostino"
  SSS_anarchism_leader:0 "NAME"
  SSS_moderatism_leader:0 "NAME"
  SSS_centrism_leader:0 "NAME"
  #military leaders
- SSS_corps_commander_1:0 "NAME"
- SSS_corps_commander_2:0 "NAME"
- SSS_corps_commander_3:0 "NAME"
- SSS_corps_commander_4:0 "NAME"
- SSS_naval_leader_1:0 "NAME"
- SSS_naval_leader_2:0 "NAME"
- SSS_naval_leader_3:0 "NAME"
- SSS_naval_leader_4:0 "NAME"
- SSS_naval_leader_5:0 "NAME"
+ SSS_corps_commander_1:0 "Roger Gianfranco Langlois"
+ SSS_corps_commander_2:0 "Éric Octavius Grossi"
+ SSS_corps_commander_3:0 "Vincenzo Eliseo Krauss"
+ SSS_corps_commander_4:0 "Théophile Robert Göbel"
+ SSS_naval_leader_1:0 "Tristan Aquilinus Abel"
+ SSS_naval_leader_2:0 "Jeremias Déodat Schmid"
+ SSS_naval_leader_3:0 "Nazaire Konrad Zini"
+ SSS_naval_leader_4:0 "Ulderico Dominik Catalano"
+ SSS_naval_leader_5:0 "Cyril Jupp Duval"
  #advisors
  SSS_anti_communist_crusader:0 "NAME"
- SSS_armaments_organizer:0 "NAME"
+ SSS_armaments_organizer:0 "Elmar Albinus Pelletier"
  SSS_backroom_backstabber:0 "NAME"
- SSS_captain_of_industry:0 "NAME"
- SSS_communist_revolutionary:0 "NAME"
+ SSS_captain_of_industry:0 "Christian Pierino Bret"
+ SSS_communist_revolutionary:0 "Agrippa Hermenegild Stablum"
  SSS_compassionate_gentleman:0 "NAME"
- SSS_democratic_reformer:0 "NAME"
+ SSS_democratic_reformer:0 "Gauvain Lothar Daube"
  SSS_economist:0 "NAME"
  SSS_editor:0 "NAME"
- SSS_fascist_demagogue:0 "NAME"
- SSS_financial_expert:0 "NAME"
+ SSS_fascist_demagogue:0 "Rodolphe Jeannot Fiore"
+ SSS_financial_expert:0 "Arnaud Janvier Sparacello"
  SSS_head_of_intelligence:0 "NAME"
  SSS_ideological_crusader:0 "NAME"
  SSS_popular_figurehead:0 "NAME"
- SSS_prince_of_terror:0 "NAME"
- SSS_silent_workhorse:0 "NAME"
+ SSS_prince_of_terror:0 "Naël Vinicius Hoffman"
+ SSS_silent_workhorse:0 "Jost Ruben Mercier"
  SSS_smooth_talking_charmer:0 "NAME"
  SSS_war_industrialist:0 "NAME"
  #theorists
- SSS_military_theorist:0 "NAME"
- SSS_air_warfare_theorist:0 "NAME"
- SSS_naval_theorist:0 "NAME"
+ SSS_military_theorist:0 "Eustorgio Moreno Biancardi"
+ SSS_air_warfare_theorist:0 "Bernd Johann Baptist Siegel"
+ SSS_naval_theorist:0 "Mario Casimir Bandoni"
  SSS_naval_aviation_pioneer:0 "NAME"
  SSS_victory_through_airpower:0 "NAME"
  SSS_nuclear_scientist:0 "NAME"
  SSS_rocket_scientist:0 "NAME"
  #military chiefs
- SSS_army_chief_defensive_2:0 "NAME"
- SSS_army_chief_drill_2:0 "NAME"
- SSS_army_chief_maneuver_2:0 "NAME"
+ SSS_army_chief_defensive_2:0 "Gallus August Hase"
+ SSS_army_chief_drill_2:0 "Diodore G. Richter"
+ SSS_army_chief_maneuver_2:0 "Richard Wulf Wörner"
  SSS_army_chief_morale_2:0 "NAME"
  SSS_army_chief_offensive_2:0 "NAME"
  SSS_army_chief_organizational_1:0 "NAME"
- SSS_navy_chief_decisive_battle_2:0 "NAME"
- SSS_navy_chief_naval_aviation_2:0 "NAME"
- SSS_air_chief_ground_support_2:0 "NAME"
- SSS_air_chief_reform_2:0 "NAME"
+ SSS_navy_chief_decisive_battle_2:0 "Laurentius Casimiro Siegert"
+ SSS_navy_chief_naval_aviation_2:0 "Aurel Francisque De La Fontaine"
+ SSS_air_chief_ground_support_2:0 "Roger Killian Nicolas"
+ SSS_air_chief_reform_2:0 "Lucanus Thorsten Mathieu"
  SSS_army_armored_1:0 "NAME"
- SSS_army_entrenchment_1:0 "NAME"
- SSS_army_infantry_1:0 "NAME"
+ SSS_army_entrenchment_1:0 "Jean-Christophe Bertrand Sabbadin"
+ SSS_army_infantry_1:0 "Gottfried Cecilio Dumont"
  SSS_army_logistics_2:0 "NAME"
- SSS_air_bomber_interception_2:0 "NAME"
- SSS_air_close_air_support_2:0 "NAME"
- SSS_navy_screen_2:0 "NAME"
- SSS_navy_anti_submarine_1:0 "NAME"
+ SSS_air_bomber_interception_2:0 "Giusi Benedetto Fèvre"
+ SSS_air_close_air_support_2:0 "Noam Fortunato Agresta"
+ SSS_navy_screen_2:0 "Hortensius Clemens Unruh"
+ SSS_navy_anti_submarine_1:0 "Werner Loup Wechsler"
  SSS_navy_naval_air_defense_2:0 "NAME"
