--- a/localisation/TIQ_l_english.yml
+++ b/localisation/TIQ_l_english.yml
@@ -1,26 +1,26 @@
 ﻿l_english:
 
  #military leaders
- TIQ_corps_commander_1:0 "NAME"
- TIQ_corps_commander_2:0 "NAME"
- TIQ_corps_commander_3:0 "NAME"
- TIQ_corps_commander_4:0 "NAME"
- TIQ_naval_leader_1:0 "NAME"
- TIQ_naval_leader_2:0 "NAME"
- TIQ_naval_leader_3:0 "NAME"
- TIQ_naval_leader_4:0 "NAME"
- TIQ_naval_leader_5:0 "NAME"
+ TIQ_corps_commander_1:0 "Anselmo Rodolfito Sandoval"
+ TIQ_corps_commander_2:0 "José Antonio Garrido"
+ TIQ_corps_commander_3:0 "Tipene José Mora"
+ TIQ_corps_commander_4:0 "Rubén Bruno Iñíguez"
+ TIQ_naval_leader_1:0 "Teobaldo Urbano Macías"
+ TIQ_naval_leader_2:0 "Artemio Paora Colón"
+ TIQ_naval_leader_3:0 "Teófilo Víctor Bello"
+ TIQ_naval_leader_4:0 "Ismael César Vela"
+ TIQ_naval_leader_5:0 "Goyo Carlos Villaverde"
  #advisors
  TIQ_anti_communist_crusader:0 "NAME"
  TIQ_armaments_organizer:0 "NAME"
  TIQ_backroom_backstabber:0 "NAME"
- TIQ_captain_of_industry:0 "NAME"
- TIQ_communist_revolutionary:0 "NAME"
+ TIQ_captain_of_industry:0 "Estevo Virgilio Guadarrama"
+ TIQ_communist_revolutionary:0 "Hilario José Antonio Ventura"
  TIQ_compassionate_gentleman:0 "NAME"
- TIQ_democratic_reformer:0 "NAME"
+ TIQ_democratic_reformer:0 "Cornelio Ezequiel De la Cruz"
  TIQ_economist:0 "NAME"
  TIQ_editor:0 "NAME"
- TIQ_fascist_demagogue:0 "NAME"
+ TIQ_fascist_demagogue:0 "Ricardo Marcio Marino"
  TIQ_financial_expert:0 "NAME"
  TIQ_head_of_intelligence:0 "NAME"
  TIQ_ideological_crusader:0 "NAME"
@@ -28,32 +28,21 @@
  TIQ_prince_of_terror:0 "NAME"
  TIQ_silent_workhorse:0 "NAME"
  TIQ_smooth_talking_charmer:0 "NAME"
- TIQ_war_industrialist:0 "NAME"
- #theorists
- TIQ_military_theorist:0 "NAME"
- TIQ_air_warfare_theorist:0 "NAME"
- TIQ_naval_theorist:0 "NAME"
- TIQ_naval_aviation_pioneer:0 "NAME"
- TIQ_victory_through_airpower:0 "NAME"
- TIQ_nuclear_scientist:0 "NAME"
- TIQ_rocket_scientist:0 "NAME"
- #military chiefs
- TIQ_army_chief_defensive_2:0 "NAME"
- TIQ_army_chief_drill_2:0 "NAME"
- TIQ_army_chief_maneuver_2:0 "NAME"
- TIQ_army_chief_morale_2:0 "NAME"
- TIQ_army_chief_offensive_2:0 "NAME"
- TIQ_army_chief_organizational_1:0 "NAME"
- TIQ_navy_chief_decisive_battle_2:0 "NAME"
- TIQ_navy_chief_naval_aviation_2:0 "NAME"
- TIQ_air_chief_ground_support_2:0 "NAME"
- TIQ_air_chief_reform_2:0 "NAME"
- TIQ_army_armored_1:0 "NAME"
- TIQ_army_entrenchment_1:0 "NAME"
- TIQ_army_infantry_1:0 "NAME"
- TIQ_army_logistics_2:0 "NAME"
- TIQ_air_bomber_interception_2:0 "NAME"
- TIQ_air_close_air_support_2:0 "NAME"
- TIQ_navy_screen_2:0 "NAME"
- TIQ_navy_anti_submarine_1:0 "NAME"
- TIQ_navy_naval_air_defense_2:0 "NAME"
+ TIQ_war_industrialist:0 "Macario Ambrosio Oquendo"
+ TIQ_eduardo_alonso:0 "NAME"
+ TIQ_luis_podesta_costa:0 "Luís Podesto Costa"
+ TIQ_pedro_pablo_ramirez:0 "Pedro Pablo Ramirez"
+ TIQ_hortensio_quijano:0 "Hortensio Quijano"
+ TIQ_thomas_martinez:0 "Thomás Martinez"
+ TIQ_antonio_parodi:0 "Antonio Parodi"
+ TIQ_jose_tamborni:0 "José Tamborni"
+ TIQ_uribaldi_diaz_brittenberg:0 "Uribaldi Díaz Brittenberg"
+ TIQ_eleazar_videla:0 "Eleazar Videla"
+ TIQ_pedro_s_casal:0 "Pedro S. Casal"
+ TIQ_heriberto_la_galine:0 "Heriberto La Galine"
+ TIQ_edelmiro_farrell:0 "Edelmiro Farrell"
+ TIQ_francisco_m_velez:0 "Francisco M. Velez"
+ TIQ_ramon_castillo:0 "Ramón Castillo"
+ TIQ_manuel_maria_de_iriondo:0 "Manuel María de Iriondo"
+ TIQ_manuel_a_rodriguez:0 "Manuel A. Rodriguez"
+ TIQ_agustin_pedro_justo:0 "Agustín Pedro Justo"
